--- a/UPLD/倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复.md
+++ b/UPLD/倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复.md
@@ -94,12 +94,12 @@ tags:
 民国55年，81年算的，刚好流年27岁，像这个是午年，属马的，马年刚好在辰这里，25岁在这里，26,27,27岁流年在寅宫，现在算这个流年有没有问题，27岁她化忌，诸位看，23-32岁她的大运里面就有红鸾天喜星，看到没有，所以这个女孩子，在23-32岁这段期间，除了化权，除了事业以外，她的红鸾星影响她很大，好，结果她刚好，今年27岁她来找你，好，我们在算命的时候常常会发现到一件事情，她会跑来算，都是流年不好的时候跑来算的，那流年化权啊升官发财的时候，都不会找你来算的，那个化忌的都来了，所以进来一看，化忌！化忌在印堂上，红红的，口舌是非很多，再一看，是廉贞化忌，她是逢到桃花星化忌，结果她就是去结婚，结果订婚了啊，订婚了才发现先生的婚姻还没解决还没离婚，不能结婚，停在那边，这是化忌！所以我们给人家算命，一再说，要过忌，过忌的婚才是吉的！才最好。
 
 #### 1.父母宫
-像这个八字的父母宫，我们要批这个八字的父母，要跟批命是一样的，比如说，紫薇七杀，武官星在父母宫，就代表爸爸从事武职的，你的命是武官代表你从事武职，你的兄弟是武官代表你的兄弟是武职，你的父母宫是武官星就是他从事武职，对不对，父母亲是武官的。
+像这个八字的父母宫，我们要批这个八字的父母，要跟批命是一样的，比如说，**紫薇七杀，武官星在父母宫，就代表爸爸从事武职的**，你的命是武官代表你从事武职，你的兄弟是武官代表你的兄弟是武职，你的父母宫是武官星就是他从事武职，对不对，父母亲是武官的。
 
 那像这种命的人，我们批的时候，我们要批的重点，你看：迁移宫是化禄，所以这种八字是外地大利。到外地去经商的一种人。那上面时候会去，一会我们来看流年。
-那官禄宫是空的，所以她的命里没有官带，所以官带不进来，她不会去当官，那这个女孩子呢，早年的时候，命里有天魁星，意味着她小时候科甲很旺，读书读的很好，13-22岁，文曲星进来，对面是化科，代表说她的科甲升迁，考高中，考大学都没有问题，这是读书星出来是是时候，23-32岁，因为她命中没有官带，所以23-32岁她会到私人公司去做事，然后掌权，去做主管，受到人家重用哦。
+那**官禄宫是空的，所以她的命里没有官带**，所以官带不进来，她不会去当官，那这个女孩子呢，早年的时候，**命里有天魁星，意味着她小时候科甲很旺**，读书读的很好，13-22岁，文曲星进来，对面是化科，代表说她的科甲升迁，考高中，考大学都没有问题，这是读书星出来是是时候，23-32岁，因为她命中没有官带，所以23-32岁她会到私人公司去做事，然后掌权，去做主管，受到人家重用哦。
 
-然后33岁以后呢，天马星动了，一种是到外地去发展，一个是外调出去，她换到别的地方去了，原因是什么，婚姻不顺啊，她没有脸啊，不好意思啊，化忌在对面，所以说，我们要批这个大运的时候要特别注意，33-42岁本来她这十年是贪狼跟天马，像这种武官星逢到天马，是武贵，非常好，你不要说不好，在事业上很好哦，这个天马星逢武官，逢调动换动就会升迁，这是第一个，第二个，天马星动的时候，她离开国内到外地去做事业当老板，在本地肯定不会，如果谈到感情方面呢，很复杂啊，了解吧，贪狼这边是桃花星啊，结果对面是化忌，婚事都不会成，那这是算命，我们知道她婚姻不成，那我们再看看她的阳宅，一看她住西北角，啊，就知道她为什么不成。第一不成是糊里糊涂的，她去住西北角的人就会遇到这种事情，懂不懂，她就喜欢结过婚的男人，然后看到结过婚的男人她就特别喜欢，那反过来，她喜欢这个男人，这个男人跟她说他没有结婚，她也相信，她也喜欢，她喜欢的都是结过婚的男人，结果当时在一起不知道，等订婚了才知道这个男的结过婚现在还没有离婚，所以这种眼睛看不清楚。
+然后33岁以后呢，天马星动了，一种是到外地去发展，一个是外调出去，她换到别的地方去了，原因是什么，婚姻不顺啊，她没有脸啊，不好意思啊，化忌在对面，所以说，我们要批这个大运的时候要特别注意，33-42岁本来她这十年是贪狼跟天马，像这种武官星逢到天马，是武贵，非常好，你不要说不好，在事业上很好哦，这个天马星逢武官，逢调动换动就会升迁，这是第一个；第二个，天马星动的时候，她离开国内到外地去做事业当老板，在本地肯定不会，如果谈到感情方面呢，很复杂啊，了解吧，贪狼这边是桃花星啊，结果对面是化忌，婚事都不会成，那这是算命，我们知道她婚姻不成，那我们再看看她的阳宅，一看她住西北角，啊，就知道她为什么不成。第一不成是糊里糊涂的，她去住西北角的人就会遇到这种事情，懂不懂，她就喜欢结过婚的男人，然后看到结过婚的男人她就特别喜欢，那反过来，她喜欢这个男人，这个男人跟她说他没有结婚，她也相信，她也喜欢，她喜欢的都是结过婚的男人，结果当时在一起不知道，等订婚了才知道这个男的结过婚现在还没有离婚，所以这种眼睛看不清楚。
 
 然后到33-42，她的红鸾星不会动，为什么，因为她一直住西北角啊，如果没有改的话，她就一直喜欢这样子，然后都不会有成就，所以如果过了32岁，如果没有让她红鸾星动的话，她红鸾星就不会动了，那好命的人呢，到43-52这种还会动红鸾，下面的那个就是啊。娶了三个老婆，真厉害，那这个女孩子比较可怜，过了32，到了33-42，那是化忌，不可能有红鸾星，那十年化忌嘛，红鸾星就没有，所以婚姻非常不好，事业很好的一个人。
 
@@ -107,31 +107,29 @@ tags:
 
 #### 2.兄弟宫
 像这个八字，诸位注意看，她的兄弟，兄弟是紫薇天相，是吉星，代表兄弟得力，再注意看她的眉毛，眉毛细细长长的，兄弟姐妹大利合伙，大利做事业，如果她在本地，倪先生我不想到外地去做生意，本地的话，她会和兄弟姐妹合伙。那她不会从事父母亲的职业，因为她是文，对不对，她的父母亲是武，她不会承袭祖业。
-还有一个重点要注意的，像田宅宫化忌在寅这里，重点提出来，一般来说，田宅宫化忌，相书上写住破祖业，就是会把父母亲的财产，耗出去，那么人间道来说的话，代表她不会识人，不会防人，所以她可能会拿不动产去帮她相信的人作保，然后发生这些事情，那我们在相上面可以看到，鼻孔很大，老远就看到鼻孔是这样子：
- 
-要破祖业。所以你看这个人在你面前鼻孔这样对着你，意思就是破祖业就是我了。她不认为她会，因为她不戒，不知道戒，所以鼻孔很大，如果你是父母亲，财产很多，生个小孩怎么鼻孔对着你，这个财产最好不要挂他的名字，换人比较好，要防一下。不然会耗财出去很大。
 
-那我们还有一个地方要帮她改的，我刚才讲，如果32岁以前不让她结婚的话，她就接不了婚了，所以她33岁来找我们的话，是她的命哦，32岁以前来找我们，是她的运哦。所以她27岁来找我们，太好了，知不知道，第一个，第一次婚姻要舍掉，你如果说小姐你稍微等一下给这个男的一个机会，这是愚善，人家刚开始就在骗你的，懂不懂我的意思，你后面还给他机会啊，他不骗你你怎么会跟他订婚呢，对不对，已经骗你了，你还在给他机会。很多太太十之八九都是这样子，蠢得要死，害的别人来问导致两个人一起蠢，所以遇到这种情形，马上要她当机立断，舍掉，舍掉以后，西北角不要住了，她会遇到这种人，跟她的运有关系，马上住到东南角去，那如果你寅宫这年改，第二年丑年没有星，如果我们31岁在戌宫去改，32岁那年让她红鸾星动，是不是很好，32岁如果她能够结婚的话，她的先生是巨门化权，会到化禄，这就是从商的，先生是做生意的。因为我们知道这个八字会做生意，我们让她嫁一个做生意的人，刚好门当户对，你如果让她嫁一个紫薇天相文曲，是做官的，如果我们让他30岁改，到31岁结婚，让她嫁一个紫薇天相这种先生的话，33-42变成夫妻聚少散多，天马星就变了，变成聚少散多，所以让她嫁个同行最好。
+还有一个重点要注意的，像田宅宫化忌在寅这里，重点提出来，一般来说，**田宅宫化忌，相书上写住破祖业，就是会把父母亲的财产，耗出去**，那么人间道来说的话，代表她不会识人，不会防人，所以她可能会拿不动产去帮她相信的人作保，然后发生这些事情，那我们在相上面可以看到，鼻孔很大，老远就看到鼻孔是这样子：要破祖业。所以你看这个人在你面前鼻孔这样对着你，意思就是破祖业就是我了。她不认为她会，因为她不戒，不知道戒，所以鼻孔很大，如果你是父母亲，财产很多，生个小孩怎么鼻孔对着你，这个财产最好不要挂他的名字，换人比较好，要防一下。不然会耗财出去很大。
+
+那我们还有一个地方要帮她改的，我刚才讲，如果32岁以前不让她结婚的话，她就接不了婚了，所以她33岁来找我们的话，是她的命哦，32岁以前来找我们，是她的运哦。所以她27岁来找我们，太好了，知不知道。第一个，第一次婚姻要舍掉，你如果说小姐你稍微等一下给这个男的一个机会，这是愚善，人家刚开始就在骗你的，懂不懂我的意思，你后面还给他机会啊，他不骗你你怎么会跟他订婚呢，对不对，已经骗你了，你还在给他机会。很多太太十之八九都是这样子，蠢得要死，害的别人来问导致两个人一起蠢，所以遇到这种情形，马上要她当机立断，舍掉，舍掉以后，西北角不要住了，她会遇到这种人，跟她的运有关系，马上住到东南角去，那如果你寅宫这年改，第二年丑年没有星，如果我们31岁在戌宫去改，32岁那年让她红鸾星动，是不是很好，32岁如果她能够结婚的话，她的先生是巨门化权，会到化禄，这就是从商的，先生是做生意的。因为我们知道这个八字会做生意，我们让她嫁一个做生意的人，刚好门当户对，你如果让她嫁一个紫薇天相文曲，是做官的，如果我们让他30岁改，到31岁结婚，让她嫁一个紫薇天相这种先生的话，33-42变成夫妻聚少散多，天马星就变了，变成聚少散多，所以让她嫁个同行最好。
 
 ## 四、民国34年
 ![民国34年](https://preview.cloud.189.cn/image/imageAction?param=68AB6F746053A7369E7B1455898D81E338F8DF770C6061EEBFD051970485A634E040068C5B394ADBBDF038DB554B9D5120D39944E751D448E2D90561587CB3F7429D0882ADB24548089D722B323C457EB68C193D62BEAF0438D041249860633A943D89D1234374C5B6F3054E2D482562)
 ### （一）三方四正
 诸位看这个酉年，属鸡的,25，37,49统统在未宫这边，顺转：
  
-你看这个命哦，这里有一个特征，你看子宫这里，天喜星在福德宫，福德宫有天喜或者红鸾，都是多婚！所以先不用管，一看，嗯，天喜在福德，一定主的是多婚。所以福德宫代表一世的福禄，如果你发现你老公的福德宫全都是桃花星，你也不必去改了，你不改是这样子，你改他还是这样子，比较难改。
+你看这个命哦，这里有一个特征，你看子宫这里，天喜星在福德宫，福德宫有天喜或者红鸾，都是多婚！所以先不用管，一看，嗯，**天喜在福德，一定主的是多婚。** 所以福德宫代表一世的福禄，如果你发现你老公的福德宫全都是桃花星，你也不必去改了，你不改是这样子，你改他还是这样子，比较难改。
 
 那这个福德宫落天喜星，未宫我为什么写25,37,49三个流年，你看他24岁红鸾星就进来，这个时候，你不用看他十年，那个福德宫有天喜，就是逢到红鸾星就会结婚，这个很厉害的，有一套哦。
 
 #### 1.人间道
-你看他的命，那我们探讨人间道，为什么他会这样子，你看，这个人就是化科，那破军星文昌星进来，这种武官星，化科，武官星代表外刚啊，实柔，就是外面看起来很刚强，里面肚子里很胆小，胆小如鼠啊，就是外刚内柔的人，很多人，大部分的人，都是外柔内刚，你看这个女孩子娇娇小小，哇，拿刀出来，很凶悍的，这种女孩子就是外柔内刚，那这个刚好外刚内柔，外刚从命宫这里看到，化科而已，所以这个人呢，柔的性比较容易博得女孩子的欢心，然后他是文昌文曲化科，有没有，才艺又很好，比如说画画弹琴啊作曲啊，女孩子就很喜欢，他刚好得到女孩子的喜欢，可是不能维持长久，因为你喜欢只是因为才艺，要长久要看你肚子里面有没有什么学问，对不对，不能维持长久，所以他第一次，24岁就结婚了，24岁结婚，25,26,27,28,29,30,31,31岁就太阴化忌了，为什么会多次结婚，跟这个太阴化忌，也有关系，什么不好化忌呢，太阴化忌，男人的命，太阴是指什么，太太，妈妈，都是，结果一化忌，那每逢到这个宫就要毁一次！
+你看他的命，那我们探讨人间道，为什么他会这样子，你看，这个人就是化科，那破军星文昌星进来，这种武官星，化科，武官星代表外刚啊，实柔，就是外面看起来很刚强，里面肚子里很胆小，胆小如鼠啊，就是外刚内柔的人，很多人，大部分的人，都是外柔内刚，你看这个女孩子娇娇小小，哇，拿刀出来，很凶悍的，这种女孩子就是外柔内刚，那这个刚好外刚内柔，外刚从命宫这里看到，化科而已，所以这个人呢，柔的性比较容易博得女孩子的欢心，然后他是**文昌文曲化科**，有没有，才艺又很好，比如说画画弹琴啊作曲啊，女孩子就很喜欢，他刚好得到女孩子的喜欢，可是不能维持长久，因为你喜欢只是因为才艺，要长久要看你肚子里面有没有什么学问，对不对，不能维持长久，所以他第一次，24岁就结婚了，24岁结婚，25,26,27,28,29,30,31,31岁就太阴化忌了，为什么会多次结婚，跟这个太阴化忌，也有关系，什么不好化忌呢，太阴化忌，男人的命，太阴是指什么，太太，妈妈，都是，结果一化忌，**那每逢到这个宫就要毁一次**！
 
-所以24岁结婚，31岁就离婚，离婚之后，32,33,34,35,36岁红鸾星又进来啦，是不是，他又去结婚，他很好玩哦，跟他讲，他说哎你怎么知道啊，他真是这样子啊。那37,38,39,40,41,42,43岁又到丑宫，他第二个老婆是死掉了，那你说这个为什么买单，大小二限逢，看35-44岁是不是空的，流年逢到化忌，这个就是死啊。
+所以24岁结婚，31岁就离婚，离婚之后，32,33,34,35,36岁红鸾星又进来啦，是不是，他又去结婚，他很好玩哦，跟他讲，他说哎你怎么知道啊，他真是这样子啊。那37,38,39,40,41,42,43岁又到丑宫，他第二个老婆是死掉了，那你说这个为什么买单，**大小二限逢，看35-44岁是不是空的，流年逢到化忌**，这个就是死啊。
 
-所以第一个太太，25-34岁没有关系啊，会到31岁，并不在这十年，而在这十年，所以第一次，大限没有逢到，小限逢到了，懂不懂我的意思，第二次是大限逢到，小限又逢到。完了，太太要走了。这种八字，在过去论命，是刑克二妻。要嫁给他第三个会比较幸福，所以又循环回来，49岁红鸾星又来了，那进入到45-54岁这个大限，进入红鸾，这个就不杀了，懂不懂我的意思，你知道为什么不煞，因为太太可能跟他小十几岁，小很多，所以他的福德，就是到老，他先走，太太在那边的。一辈子都有太太陪他，有的人没有啊，有的人是太太走一个人在那边，子女给他送终。他一辈子有太太陪他的，所以他早年的婚姻娶太太跟他年纪差不多，到晚年娶太太年纪比他小多了，这就是福德宫有红鸾天喜星的特点。就是这样子。这是婚姻。
+所以第一个太太，25-34岁没有关系啊，会到31岁，并不在这十年，而在这十年，所以第一次，大限没有逢到，小限逢到了，懂不懂我的意思，第二次是大限逢到，小限又逢到。完了，太太要走了。这种八字，在过去论命，是**刑克二妻**。要嫁给他第三个会比较幸福，所以又循环回来，49岁红鸾星又来了，那进入到45-54岁这个大限，进入红鸾，这个就不杀了，懂不懂我的意思，你知道为什么不煞，因为太太可能跟他小十几岁，小很多，所以他的福德，就是到老，他先走，太太在那边的。一辈子都有太太陪他，有的人没有啊，有的人是太太走一个人在那边，子女给他送终。他一辈子有太太陪他的，所以他早年的婚姻娶太太跟他年纪差不多，到晚年娶太太年纪比他小多了，这就是福德宫有红鸾天喜星的特点。就是这样子。这是婚姻。
 
 #### 2.大限
-大限的话，你看他的流年，你看他35-44，多凶啊，光以事业上来说，对面是化忌，有没有，化忌的话，除了太太死，做事情是事倍功半，因为化忌就是反背，还有官司纠纷呢，那他45-54岁开始，好起来了，为什么，化科，又回到本命宫了，这个化科才艺就会很明显，比如说专业方面的，律师医师会计师，还有画画文笔方面也会很好，才艺方面很好，这时就开始很顺了，一直会到老。
-这就是很特殊的一种命。
+大限的话，你看他的流年，你看他35-44，多凶啊，光以事业上来说，对面是化忌，有没有，化忌的话，除了太太死，做事情是事倍功半，因为化忌就是反背，还有官司纠纷呢，那他45-54岁开始，好起来了，为什么，化科，又回到本命宫了，这个化科才艺就会很明显，比如说专业方面的，律师医师会计师，还有画画文笔方面也会很好，才艺方面很好，这时就开始很顺了，一直会到老。这就是很特殊的一种命。
 
 #### 3.夫妻宫
 然后，你注意看他的夫妻，廉贞天钺，这个桃花星坐夫妻宫，这个男的更妙呢，不是漂亮的我不追，他老婆都很漂亮哦，那破军星坐命的男的，不见得怎么漂亮，所以你常常看一些女孩子很漂亮，嫁一个先生很丑，你知道为什么吗，我告诉你为什么好了，因为漂亮的女孩子她常常被人家追，她心里想，嗯，如果我先生长得很帅，也是这样子，我宁可嫁一个先生比较安分，比较老实的，这是她认为的哦，有的男的外表长得不好但是桃花照样也有啊，对不对，第二个，她觉得这种人有安全感，她就找他。所以这个男的反而变得好命。那你说好命坏命怎么看啊，女人就说这怎么可以，男人就说好，这很难讲啊。看各人的认定。有没有疑问。像这个批疾厄的话，肝病，会不会批。以此类推。
@@ -139,13 +137,17 @@ tags:
 ## 五、六十四卦
 ### （一）火雷噬嗑 [䷔]
 #### 1.卦辞
-火雷噬嗑。这个前面是风地观卦。观之后，会有噬嗑的现象，观之道，我们要周观，观了以后，我们看的很清楚以后，我们会相聚在一起，好像诸位来这里上课，同道会相聚在一起，聚在一起的时候，人的聚，观后必有聚合。但是人一聚合的时候，人以群聚，中间一定会有隔阂，有间隙，因为有聚合，有间隙，所以就会有噬嗑的象出现，噬嗑是什么，噬嗑是咬东西的象，你拿一个东西放在嘴巴里面咬，咬碎掉然后吞下去，这个动作，就叫做噬嗑。 
+火雷噬嗑。这个前面是风地观卦。观之后，会有噬嗑的现象，观之道，我们要周观，观了以后，我们看的很清楚以后，我们会相聚在一起，好像诸位来这里上课，同道会相聚在一起，聚在一起的时候，人的聚，**观后必有聚合**。但是人一聚合的时候，人以群聚，中间一定会有隔阂，有间隙，因为有聚合，有间隙，所以就会有噬嗑的象出现，噬嗑是什么，**噬嗑是咬东西的象**，你拿一个东西放在嘴巴里面咬，咬碎掉然后吞下去，这个动作，就叫做噬嗑。 
 
-当然，有的人草里藏珠，眉毛里藏一颗痣，有的人是口里藏珠，就是嘴巴里没有东西，但是你老是觉得他嘴巴含了一个酸梅一样。这种叫做口里藏珠。很好。那这个噬嗑，进入人间以后。圣人看人与人之间发生的现象，天下的事情，如果天下间有强梗，或者邪魔外道，谄邪，遇到这种事情，就是人群居的生活里面产生的阻隔，就要把它化解掉，让人群聚在一起能够相合。所以易经说，要用刑，所以噬嗑卦，可以体会到古代圣人的观念是怎么样的，所有人间里面，法最大，这个法，是人民立出来的，大家都遵守的，所以在世界上司法院长、法官，执法的人，最大，你天子犯法，与民同罪，这个法是大家都通过立起来的，人人要守法，那遇到有强梗的时候，要用法来解决它，噬嗑卦讲的就是这个。所以说如果是，第一个他提出来了，刑法之道，要查真伪，知道它的真伪，才知道阻隔的原因，这个时候可以把 间隙去掉。所以法最主要在设防，预防事情发生，还有教明，懂法的话，还要设防，知道什么是犯法的不能去做，很多人犯罪的时候还不知道自己犯罪。这是因为我们教育没有弄得很好。教育没有把人民教好的原因是因为有问题，所以古代的君王不喜欢百姓读太多书，你最好懵懂，你犯了法都不知道，最好我来讲，懂不懂我的意思，你犯法了我说你犯法了我不教你预防犯法我就直接讲你犯法了，会让百姓怕你，所以过去统治者最喜欢愚民，哎你读太多书不好读了抓你去laogai，mailand上弄你去laogai，老zongtong呢就抓你到绿岛去，这都不对。 
+当然，有的人草里藏珠，眉毛里藏一颗痣，有的人是口里藏珠，就是嘴巴里没有东西，但是你老是觉得他嘴巴含了一个酸梅一样。这种叫做口里藏珠。很好。那这个噬嗑，进入人间以后。圣人看人与人之间发生的现象，天下的事情，如果天下间有强梗，或者邪魔外道，谄邪，遇到这种事情，就是人群居的生活里面产生的阻隔，就要把它化解掉，让人群聚在一起能够相合。所以易经说，要用刑，所以噬嗑卦，可以体会到古代圣人的观念是怎么样的，所有人间里面，法最大，这个法，是人民立出来的，大家都遵守的，所以在世界上司法院长、法官，执法的人，最大，你天子犯法，与民同罪，这个法是大家都通过立起来的，人人要守法，那遇到有强梗的时候，要用法来解决它，噬嗑卦讲的就是这个。
+
+所以说如果是，第一个他提出来了，**刑法之道，要查真伪**，知道它的真伪，才知道阻隔的原因，这个时候可以把间隙去掉。所以**法最主要在设防**，预防事情发生，还有教明，懂法的话，还要设防，知道什么是犯法的不能去做，很多人犯罪的时候还不知道自己犯罪。这是因为我们教育没有弄得很好。教育没有把人民教好的原因是因为有问题，所以古代的君王不喜欢百姓读太多书，你最好懵懂，你犯了法都不知道，最好我来讲，懂不懂我的意思，你犯法了我说你犯法了我不教你预防犯法我就直接讲你犯法了，会让百姓怕你，所以过去统治者最喜欢愚民。
 
 #### 2.卦象
-那这个卦象呢，诸位看这个卦，上面是火，离是中虚，雷是震仰盂，火雷噬嗑，这个火在天地之间的相是明，雷呢是动，所以呢是以明而动，明了了以后才能有所动作，所以我们现在当官，很多人都知道清官很好，清官要明哦，清官很好但是不明怎么办，诸位知道那是清官误国，所以一定要明，明要像火一样，照耀所有的万物。 所以明而动，那雷本身有威的象，所以易经说，明照而威权，这是法的象，两个，一个是明照，一个是威权，这就是法要掌握这两个原则。 
+那这个卦象呢，诸位看这个卦，上面是火，离是中虚，雷是震仰盂，火雷噬嗑，这个火在天地之间的相是明，雷呢是动，所以呢是以明而动，明了了以后才能有所动作，所以我们现在当官，很多人都知道清官很好，清官要明哦，清官很好但是不明怎么办，诸位知道那是清官误国，所以一定要明，明要像火一样，照耀所有的万物。 所以明而动，那雷本身有威的象，所以易经说，**明照而威权**，这是法的象，两个，一个是明照，一个是威权，这就是法要掌握这两个原则。 
+
 刑之始，易经的初爻，以刚，小人之福。为什么，因为小人刚开始出现一个小的错误，就处罚，他就没有什么大错了，那你们做妈妈的，小孩子犯了点小错，你不以严来处罚，不去惩他，好了，积小成大，等到他开始吸毒了，你已经没有办法了。所以易经上面特别提出来，他说小人之福啊，才不会有以后严重的事情发生。那过去呢，君王之刑，法操在君王的手上，因势大易行，但是一定要以仁为中心，刚柔并济，太过刚了不好，人民会受伤，太柔了，就会把真正的好，真正的善失去，要刚柔并济，要以仁为中心。 
+
 如果一个人有威，但是要不失他的仁，所以易经哦，我们讲过，刚开始讲乾为天，再来讲坤为地，天是至刚的东西，所以乾的爻辞介绍了很多刚的性，地的厚德，是指柔性，那所有天地之间发生的，那么多的象出现，很多是讲刚柔的平衡，很多人太刚，很多人太柔，都不好，要刚柔并济。这个标准，易经六十四个卦，就在讲这个标准，所以刑之始跟刑之终，一定要这样。 
 
 #### 3.读图
@@ -177,16 +179,16 @@ tags:
 
 ### （二）山火贲 [䷕]
 #### 1.卦象
-你要是不小心把它念成喷，也无所谓啦，不要被字形绑到。贲卦是从噬嗑卦来的，噬嗑卦咬合了以后，合聚之后，必有文饰，这个饰呢就是贲。把各种电路连在一起，合在一起，我们给他一个名字，叫做录音机，名就会出现。贲的道，讲的就是人的外饰，外饰的程度。 为什么叫山下有火呢。这个山下有火的时候，火一点起来，照在那个地方，火一点起来，山下的草木可以看的很清楚，火一照，草木都好像染上了色泽一样。这就是文饰。外表，衣服啊，也是饰，所以我们外在的，就是求饰，也就是易经讲的山火贲。 
-#### 2.人间道
-- 有实而后求外饰，方足以亨。才会亨通。 
-- 以内实以柔来往，这是易经讲的，我个人不是这样子哦。我不是这样子，我是以刚来往的。以柔来往，凡事求柔。求事以刚道。所以诸位拿到这个，就拿到神了，广告是很典型，求内实，你名字要取得很响亮，我们算八字也是一样，看到这个人的八字，啊你是天子的命，经国嘛，登辉嘛，那你取一个番薯，问题就大了，对不对。我们要以刚立名，所以一定要响亮，名要响亮。文饰之道要以刚之道来求文饰。我们现在当局的人，都是求外饰，外面的表饰。你有钱啊，有钱的人都是对的。你看我用的都是有钱人。这很危险哦。易经说你上位的人都是富有的人，天下会大乱。 
-- 臣之贲道。我这里提几个重点。当一个臣子，求外饰之道，一定要同上。最好。同上的人呢，是最厉害的臣子。比如说郑某人委员，如果他用一个助理，统统跟他一样，穿一样的衣服，他会很开心哦，知道吗，这是为臣之道。但是易经提醒你，外饰一定要有内实，再求外饰。 
-- 君王之贲，你是总统，帝王，刚好易经第五爻是阴柔，以据守险关，台湾就叫是要据守台湾海峡，是天险。贲之道。要据守险关。 
-那到了最后一爻的时候，这个贲之道，太过，就变成虚伪，诸位看过火很简单，凯越下午茶，一票都是。 
+你要是不小心把它念成贲，也无所谓啦，不要被字形绑到。贲卦是从噬嗑卦来的，噬嗑卦咬合了以后，**合聚之后，必有文饰，这个饰呢就是贲**。把各种电路连在一起，合在一起，我们给他一个名字，叫做录音机，名就会出现。贲的道，讲的就是人的外饰，外饰的程度。 为什么叫山下有火呢。这个山下有火的时候，火一点起来，照在那个地方，火一点起来，山下的草木可以看的很清楚，火一照，草木都好像染上了色泽一样。这就是文饰。外表，衣服啊，也是饰，所以我们外在的，就是求饰，也就是易经讲的山火贲。 
 
-易经上面说，一定要素质，是最好。所以为什么这里提出来贲之道。君子贲道，但求质素，淡雅，来增内实。很多广告上讲啊，他表里不一，他卖的东西里面是空的，然后广告打出来，广告商花一千万去打广告去卖东西，就是去骗。这不是最好的方法。 
-贲之道的时候，比如说我们内实，我们在美国的医学中心，盖起我们中国的四合院，就是求贲之道。让别人站在外面就看到我们在干什么。知道我们在干什么，我们宁可拿这个广告费拿去盖房子，求贲道，而不必去打广告。因为这种东西是拿去宣扬的，你自己讲有什么用。
+#### 2.人间道
+- 有实而后求外饰，方足以亨，才会亨通。 
+- 以内实以柔来往，这是易经讲的，我个人不是这样子哦。我不是这样子，我是以刚来往的。以柔来往，凡事求柔。求事以刚道，所以诸位拿到这个，就拿到神了，广告是很典型，求内实，你名字要取得很响亮，我们算八字也是一样，看到这个人的八字，你是天子的命，经国嘛，登辉嘛，那你取一个番薯，问题就大了，对不对。我们要以刚立名，所以一定要响亮，名要响亮，文饰之道要以刚之道来求文饰。我们现在当局的人，都是求外饰，外面的表饰。你有钱啊，有钱的人都是对的。你看我用的都是有钱人，这很危险哦，易经说你**上位的人都是富有的人**，天下会大乱。 
+- 臣之贲道。我这里提几个重点，当一个臣子，求外饰之道，一定要同上最好。同上的人呢，是最厉害的臣子。比如说郑某人委员，如果他用一个助理，统统跟他一样，穿一样的衣服，他会很开心哦，知道吗，这是为臣之道。但是易经提醒你，外饰一定要有内实，再求外饰。 
+- 君王之贲，你是总统，你是帝王，刚好易经第五爻是阴柔，以据守险关，台湾就叫是要据守台湾海峡，是天险。贲之道，要据守险关。 
+- 那到了最后一爻的时候，这个贲之道，太过，就变成虚伪，诸位看过火很简单，凯越下午茶，一票都是。 
+
+易经上面说，一定要素质，是最好。所以为什么这里提出来贲之道。君子贲道，但求**质素，淡雅，来增内实。** 很多广告上讲啊，他表里不一，他卖的东西里面是空的，然后广告打出来，广告商花一千万去打广告去卖东西，就是去骗，这不是最好的方法。 贲之道的时候，比如说我们内实，我们在美国的医学中心，盖起我们中国的四合院，就是求贲之道。让别人站在外面就看到我们在干什么。知道我们在干什么，我们宁可拿这个广告费拿去盖房子，求贲道，而不必去打广告。因为这种东西是拿去宣扬的，你自己讲有什么用。
 
 #### 3.读图
 占卜：诸位看这个占卜，卜卦的时候，如果你的金钱卦一卜，得到山火贲： 
@@ -198,17 +200,17 @@ tags:
 雨在那里下，车行船，船张帆在江中，官人著公服登梯，仙女云中执珪。整个一个图在那边。 
 第一，雨下，代表满。代表成也。代表润下，润泽，滋润的意思。 
 第二，顺风而行，代表此行大利。 
-第三，车在路上走，代表前往边关。也代表行走四方的象。 
+第三，车在路上走，代表前往任官，也代表行走四方的象。 
 第四，官人着公服登梯，代表升迁在外地，还有任公职主管。会有外调的象。如果是太太来卜先生，是丈夫生官的象。 
 第五，受到女人的提拔。现在很多人是这个样子。 
 
-阳宅呢。三子居二女位，你明明是老三，你跑到二女儿的位置去住了，成格。当然这种情况现在很少了，现在一男一女刚刚好，对不对，口号喊得很好，做不到啊。有的人有三个儿子呢。 
-第一个，男生女态，我们有几个卦，男的像女的，一个是雷泽归妹，还有一个就是山火贲卦。 
+阳宅呢。三子居二女位，你明明是老三，你跑到二女儿的位置去住了，成格。当然这种情况现在很少了，现在一男一女刚刚好，对不对，口号喊得很好，做不到啊，有的人有三个儿子呢。 
+第一个，男生女态，我们有几个卦，男的像女的，**一个是雷泽归妹，还有一个就是山火贲卦**。 
 第二个呢，性静不动。 
 第三个呢，内实过刚之象。 
 第四个，身体多烫伤。 
 第五个，婚姻不成。 
-第六个，兴科甲。考试大利。如果哪一天你发现到你三儿子读书考试不好，放到山火贲的位置，考完试再离开，我们每个卦有不同的使用方法，但是如果你大儿子结婚了，从此就没有山火贲了，懂不懂我的意思，你就要用别的卦来发科甲，你不要老是在那边想着这个山火贲。这是阳宅部分。
+第六个，兴科甲，考试大利。如果哪一天你发现到你三儿子读书考试不好，放到山火贲的位置，考完试再离开，我们每个卦有不同的使用方法，但是如果你大儿子结婚了，从此就没有山火贲了，懂不懂我的意思，你就要用别的卦来发科甲，你不要老是在那边想着这个山火贲。这是阳宅部分。
 
 ### （三）山地剥 [䷙]
 这个剥卦的来源是贲之极。万事到了极限，太过了，而招剥，剥就是损害啊，脱落啊，招凶。诸位看卦爻，从1到5都是阴，到最顶才是阳，意思就是说，如果你一开始发现小人，你不阻止到，到最后阳爻了，就已经很剥了，懂不懂我的意思。这个由下而上，由内而外，这是剥的象。山在上面，地在下面，诸位知道，如果地在山的上面，叫做地山谦，山在上面，地在下面，山你再高大好了，都是依附在地上面，那你要让山受到损害剥落，一定是在地下面有问题，那剥，你看，由内而外，由下而上，你哪天出去的时候，或者到一个地方上班，你一去，你一看不对，周围看到你的样子不对，你就知道，剥之道来了。这个剥之道一定个由内而外，造成你今天的剥，可能来自你的太太，来自你的朋友，了解你的人才剥得到你，一个国家会受到剥害，也是由内而外，反过来，我们要把一个国家打败，也是从内而外把它打败。所以最坚强的堡垒是从内部开始破坏的。所以过去的军师打仗也是用剥，如果利用剥，剥之道一定是从里面开始剥，派人当间谍奸细进去。由内而外。 
@@ -217,11 +219,13 @@ tags:
 卦象看起来，山呢是外止，地是什么，内顺，外卦是止，内卦是顺，是为剥的象。简单举个例你就懂了，你看那个小孩子一出来，哟怎么那么乖啊，外面不敢动，然后内心又很柔顺，这就是他的智慧被大人剥削了，小孩子呢训练他，你要让他平常心，小孩子有童蒙啊，他什么都好奇，什么都问，开朗的好，一看这个小孩子怎么搞的，外止内顺，什么都是乖宝宝，就完了。剥的象就出来了，大人来剥小孩子的智慧，你想尽办法把你小孩子教成乖宝宝，就是想尽办法让他从聪明变成笨蛋。知道不知道，一定要让他平常心，让他明辨是非，不要让他知道什么样的事情，都要让他自己去看，让他平常心，有开放的智慧去考虑，就深思啊，才行哦。什么东西都去制止制止，哦，结果这个小孩子就是毁在你手上面，所以教很重要，千万不要剥。现在很多人就是想办法把小孩子教成这样。很可怕哦。 
 
 #### 2.人间道
-在人间道：1. 君子事天，事之始，知盈亏，消息，知道进退之道在哪里，知道如何处理。这个呢，顺之则吉。逆之则凶。因为他事天，我们讲天道，包括算命、易经怎么的，事情发生之始，我们看一个人讲话，听一个人讲话，一个动作，事情在开始的时候，我们就已经知道他的盈亏了，所以君子事天，小人呢事人。不见事始之作为如何，也不论事之盈亏如何，为什么说盈亏，因为天上日月，太阳也不是整天能看到太阳，月亮也不是整天能看到月亮，日月也有盈亏，他为什么事人，小人专门一昧奉承迎合。现在这种人太多了，所以当官的人观念错了，他只知道迎合，只知道当官，你今天当官，人民给你那么大的权力，就是要你替我做事，你还在摆官威，还要表现一下你要升官赶快迎合我，不迎合我的话，好，会迎合巴结奉承的人就会当官，所以现在小人当道。 
+在人间道：君子事天，事之始，知盈亏，消息，知道进退之道在哪里，知道如何处理。这个呢，顺之则吉，逆之则凶。因为他事天，我们讲天道，包括算命、易经怎么的，事情发生之始，我们看一个人讲话，听一个人讲话，一个动作，事情在开始的时候，我们就已经知道他的盈亏了，所以君子事天，小人呢事人。不见事始之作为如何，也不论事之盈亏如何，为什么说盈亏，因为天上日月，太阳也不是整天能看到太阳，月亮也不是整天能看到月亮，日月也有盈亏，他为什么事人，小人专门一昧奉承迎合。现在这种人太多了，所以当官的人观念错了，他只知道迎合，只知道当官，你今天当官，人民给你那么大的权力，就是要你替我做事，你还在摆官威，还要表现一下你要升官赶快迎合我，不迎合我的话，会迎合巴结奉承的人就会当官，所以现在小人当道。 
 
-这个有一个君王之剥，你要去看天纪。我要写在天纪里面，那你看得到看不到看你愿意不愿意去看。如果你看到你会逃过一劫，但是这里我不讲。让你去买录影带。处剥之时，易经啊，当你被剥的时候，如何应对，我们从初爻一直谈到六爻，中间看到第五爻，君王处剥，如果你是个总统，到了第五爻，剥，我不讲。看我写的天纪会不会改变一点。 
+有一个君王之剥，你要去看天纪。我要写在天纪里面，那你看得到看不到看你愿意不愿意去看。如果你看到你会逃过一劫，但是这里我不讲。让你去买录影带。处剥之时，易经啊，当你被剥的时候，如何应对，我们从初爻一直谈到六爻，中间看到第五爻，君王处剥，如果你是个总统，到了第五爻，剥，我不讲。看我写的天纪会不会改变一点。 
 
-剥到极限的时候，天下大乱，太好了，因为物极必反，对不对，因为天下到了乱极的时候，我们知道，君道必复，君子之道一定会复回来。小人呢，无处藏啊，因为乱极，人心是这样子的哦，如果我们讲孟子性善荀子的性恶说，讲不完啊，就好像说中医好还是西医好，讲不完的，人心你不要说善还是恶，但是人心呢，都是从善如流，那我们就可以知道，如果天下大乱的时候，诸位都不要紧张，天下大乱的时候股票一定大跌房价也一定大跌，赶快去买，相信我的话哦，人弃我捡，夏天时候买皮袄，冬天的时候买棉布啊。范蠡嘛，不要忘了，赶快去买，放心，taiwan不会有事的。这个君子之道会恢复，因为人民乱而失志，很快就会回来，治世来临的时候，天下之间法是最大。这就对了，我们要法制的国家，我们不要人治的国家，现在大陆和台湾都是在人治，不对哦，人治的话，今天要改宪法就改了，法治的国家哪那么简单改啊。所以我们要求法治的才对。易经也是这样讲的哦，因为人的性啊，是从善如流。这里为什么我们常常讲一些宗教的事情，因为很多人都是从善如流，坏人 就会利用这一点，佛家都崇尚做好事，结果都讲佛在做好事，不讲人在做好事，人会用宗教来骗人嘛，为什么讲佛教呢，讲人去做好事嘛，懂不懂我的意思，要强调这个嘛，你说人做好事，人就是佛，那你就是说佛是好的，难道基督天主教新教就不好啊，是不是该到地狱去了，这个人没有信教但是他在做好事，比你信教不做好事的，哪个来的好。懂不懂我的意思，所以传宗教的人，一定要晓得人心是从善如流的，讲这个善，做好的事情，是你做的，懂不懂，不要说是佛家在做的，好了，造成我的基督教的我绝对不会说谎，来了，谁说的。哦，骗子一大堆。你看骗子知道他如何骗你，讲话手在那里晃，就是在骗你嘛。眼睛在那里是猪眼，猪眼最会骗人的。眼珠子是这样子，旁边都是黄黄的血丝： 
+剥到极限的时候，天下大乱，太好了，因为物极必反，对不对，因为天下到了乱极的时候，我们知道，君道必复，君子之道一定会复回来。小人呢，无处藏啊，因为乱极，人心是这样子的哦，如果我们讲孟子性善荀子的性恶说，讲不完啊，就好像说中医好还是西医好，讲不完的，人心你不要说善还是恶，但是人心呢，都是从善如流，那我们就可以知道，如果天下大乱的时候，诸位都不要紧张，天下大乱的时候股票一定大跌房价也一定大跌，赶快去买，相信我的话哦，人弃我捡，夏天时候买皮袄，冬天的时候买棉布啊。范蠡嘛，不要忘了，赶快去买，放心，taiwan不会有事的。这个君子之道会恢复，因为人民乱而失志，很快就会回来，治世来临的时候，天下之间法是最大。这就对了，我们要法制的国家，我们不要人治的国家，现在大陆和台湾都是在人治，不对哦，人治的话，今天要改宪法就改了，法治的国家哪那么简单改啊。所以我们要求法治的才对。易经也是这样讲的哦，因为人的性啊，是从善如流。
+
+这里为什么我们常常讲一些宗教的事情，因为很多人都是从善如流，坏人 就会利用这一点，佛家都崇尚做好事，结果都讲佛在做好事，不讲人在做好事，人会用宗教来骗人嘛，为什么讲佛教呢，讲人去做好事嘛，懂不懂我的意思，要强调这个嘛，你说人做好事，人就是佛，那你就是说佛是好的，难道基督天主教新教就不好啊，是不是该到地狱去了，这个人没有信教但是他在做好事，比你信教不做好事的，哪个来的好。懂不懂我的意思，所以传宗教的人，一定要晓得人心是从善如流的，讲这个善，做好的事情，是你做的，懂不懂，不要说是佛家在做的，造成我的基督教的我绝对不会说谎，来了，谁说的。哦，骗子一大堆。你看骗子知道他如何骗你，讲话手在那里晃，就是在骗你嘛。眼睛在那里是猪眼，猪眼最会骗人的。眼珠子是这样子，旁边都是黄黄的血丝： 
 
 这就是大骗子嘛。像我们一看就知道，就走了，听多才会被人骗。所以君子言简刚中啊，山水蒙，讲话讲两三句话就讲完了，如果很多名词讲了半天我就是要骗你，懂不懂。不要骗你，两三句话就讲完了。 
 那君王处剥，如何用，易经叫做贯鱼。那上面叫贯鱼，自己去看我写的天纪。不教，看书！花钱买啊。 
@@ -233,17 +237,16 @@ tags:
 
 ![山地剥](https://preview.cloud.189.cn/image/imageAction?param=26731DFC2C74453E95BB6CD5A06448E1F5B306DDBE00302E896E761CB81CC69559D141CE98FB2F643CA8C1DE77702647D1FDC739A710577618676E76ED919EE3A496DE0D0615B8699B40EE0085E53C39EA4B68AD454C2415629CF4540C12355032435F5FA4E13D775A4466B0E1364DBD)
 
-- 第一个，妇人床上坐，代表阴人得势，如果你是太太一卜，一定是婆婆在那里作怪，那如果是当官的，那一定是代表上面一定有阴人在做官。阴人得势呢，除了指女人以外，也指的是小人，所以一定有暗灾，必有暗灾，要小心哦，背后有人偷偷要害你，所以呢，或者是小人为主管。
-- 第二个，烛在风中，险也，危险。有两种状况，气色上可以看到，1.面如枯槁。就是人都枯萎了，头发都没有油了，干干的枯起来了，我们脸上的油和头发上的油，叫做气。隐在皮肤下面的颜色就叫做色。摸摸看鼻子出油，要是鼻子没有油了，头发也没有油了，就是险也，快死了。2.面如潮红，整个脸是红色的，你说老师他的气色很好我说他快要死了，这个红是没有亮的红。就好像整个血色浮起来一样，这种往往都是中毒的样子，就是危险，我们相上面这叫做风中残烛。所以如果你在那边打麻将，你看对面自摸的那个人呢，头发是蓬起来了，快死了，懂不懂我的意思。他的原因不见得是身体重病，可能明天就出车祸死掉，两个礼拜内可以看到这个气色。3.那还有，有的时候临床上看到的是，蓝色，其实就是青色的，我们以节气来说，40个节气，木火土金水，木是青色的，土是黄色的，金是白色的，水是黑色的，木是春天，火是夏天，金是秋天，水是冬天，五行相生，如果我们在相生的时间看到气色，代表吉，相克的时间，代表凶。比如你在秋天的时候在打高尔夫球，看到一个人，脸上发青，有没有，这个人很快就会买单哦。春天的时候发青无所谓啦。哦，以此类推下去。 
+- 第一个，妇人床上坐，代表阴人得势，如果你是太太一卜，一定是婆婆在那里作怪，那如果是当官的，那一定是代表上面一定有阴人在做官。阴人得势呢，除了指女人以外，也指的是小人，所以一定有暗灾，**必有暗灾**，要小心哦，背后有人偷偷要害你，所以呢，或者是小人为主管。
+- 第二个，烛在风中，险也，危险。有两种状况，气色上可以看到，**1.面如枯槁。**就是人都枯萎了，头发都没有油了，干干的枯起来了，我们脸上的油和头发上的油，叫做气。隐在皮肤下面的颜色就叫做色。摸摸看鼻子出油，要是鼻子没有油了，头发也没有油了，就是险也，快死了。**2.面如潮红。**整个脸是红色的，你说老师他的气色很好我说他快要死了，这个红是没有亮的红。就好像整个血色浮起来一样，这种往往都是中毒的样子，就是危险，我们相上面这叫做风中残烛。所以如果你在那边打麻将，你看对面自摸的那个人呢，头发是蓬起来了，快死了，懂不懂我的意思。他的原因不见得是身体重病，可能明天就出车祸死掉，两个礼拜内可以看到这个气色。3.那还有，有的时候临床上看到的是，**蓝色**，其实就是青色的，我们以节气来说，40个节气，木火土金水，木是青色的，土是黄色的，金是白色的，水是黑色的，木是春天，火是夏天，金是秋天，水是冬天，五行相生，如果我们在相生的时间看到气色，代表吉，相克的时间，代表凶。比如你在秋天的时候在打高尔夫球，看到一个人，脸上发青，有没有，这个人很快就会买单哦。春天的时候发青无所谓啦。哦，以此类推下去。 
 - 第三，葫芦在地上，代表医药无救，如果你卜疾病，完了，医药无救。暗中有毒计，也是，你暗中葫芦里面卖什么药啊。卜疾病的话，卜到这个山地剥很危险。非常的危险。 
 - 第四，缫丝，一团乱丝在地上，代表这个事情非常繁琐，诸位在这里要记得一点，有一个人尽量把事情弄得越来越简单，有一个人在尽量把事情弄得越来越复杂，前一个人就是诚实不会骗你的，越弄越复杂的就是想骗你。他让你搞不清楚嘛，想骗你。
 - 第五，山下有官人坐，代表有靠山，但是阴人为祸，即使你有靠山，但是有阴人为祸，有小人在后面 害你。
 - 第六，冠巾挂树上，有求去的象，我不干了，还有安乐的象。过去历史上有出现过，为什么安乐呢，白色的丝巾挂在木头上面，这不是樂嘛。所以杨贵妃就死在这上面，如果属木上面带一个帽子，不就是宋嘛，如果树木上面加一个尺，不是朱嘛，所以中国人是读图，你不要读字。 
 
 ####　４.阳宅
-阳宅上面来说，整个山地剥，我把总卦讲给你看。比如说这个人居住在很危险的地方，好像风中的残烛一样，心乱如麻，无计可施，为什么呢，阴人当道。这个时候，以退为乐。读完了，是不是？ 
-所以处剥之时呢，闪开一遍，闪远一点。等到剥到极就好了，天下大乱的时候你再出来，人心思变。 
-阳宅上面呢，三儿子居母位。 
+阳宅上面来说，整个山地剥，我把总卦讲给你看。比如说这个人居住在很危险的地方，好像风中的残烛一样，心乱如麻，无计可施，为什么呢，阴人当道。这个时候，以退为乐。读完了，是不是？ 所以处剥之时呢，闪开一遍，闪远一点。等到剥到极就好了，天下大乱的时候你再出来，人心思变。 
+阳宅上面呢，**三儿子居母位。** 
 
 - 第一，主耗破家业。
 - 第二个，心生毒害。你哪天发现你三儿子那么小人，就是这样子。
@@ -252,7 +255,7 @@ tags:
 - 第五，多灾病，病痛很多。 
 所以这是大凶之地，不是很好。所以不要乱住。 
 
-诸位，刚才就是在提醒你，千万不要把你小孩子教成山地剥哦。所以卦上面有的话，我们在人间道，教育上也要注意，你把小孩子教得外面什么话都听，谁讲的话他也听，好了，被坏人讲话就拐跑了，失踪婴儿就这样来的。你这样教儿子，他一定要坐乖最好，好了，他变成山地剥了。没有自己的主见。他就被剥了懂不懂，然后你就很痛苦了，这个剥由内生嘛。早因在自己身上哦。一定要让小孩子要有主见。 
+诸位，刚才就是在提醒你，千万不要把你小孩子教成山地剥哦。所以卦上面有的话，我们在人间道，教育上也要注意，你把小孩子教得外面什么话都听，谁讲的话他也听，好了，被坏人讲话就拐跑了，失踪婴儿就这样来的。你这样教儿子，他一定要坐乖最好，好了，他变成山地剥了。没有自己的主见。他就被剥了懂不懂，然后你就很痛苦了，这个剥由内生嘛。早因在自己身上，一定要让小孩子要有主见。 
 
 ### （四）地雷复 [䷘]
 地雷复。复卦和剥卦，刚好是反的。 剥到极限了以后，人民会思变，思治，治世会来临，君子之道始复，刚开始恢复的时候，所以阳生在下面，众阴还在上面，懂不懂，复之道就在这里，刚开始，始复。那么刚开始始复的时候，有人发现，这样很好啊，你光是一个人，独木难支，难撑大局。一个人力量太弱，一定要众心协力，就成了哦，如果人人敢讲话，每天台北市几百万人统统聚过来说
@@ -263,9 +266,9 @@ tags:
 人间道。 
 - 第一个，协力可胜。要同心协力才行。 
 - 第二个，复之始，不失复，贞，易经讲的贞，指的是坚心，刚开始恢复的时候，那个念头很薄弱，不能再失掉，懂不懂，要小心，戒之初。 
-- 第三个，易经提到，复里面，休复之美。第一爻是什么，是下位，结果是君子，那你的上位，上位的人，能下，能够追从于下位的君子之道的人呢，这叫做体仁。这叫做休复之美，现在谁听下面的。我在上面，我怎么会错，我是登辉啊我怎么会错呢。我信的是基督教我从来不会骗人啊，哦，不可以哦。这是休复之美。 
-- 第四个呢，频复之戒。就是频频恢复的意思，就是复而又失，失而又复，每天在那里来往，在对和不对之间，复和失去之间来往，不够坚心，这叫做频复之戒，我们要警戒。 这个就是迷途不改。后来的问题会很大，因为花了太多时间再失和复之间取舍，没有花很多时间去修身进德。这个时候迷途不改，易经上面说，招凶。 
-- 第五，学问之道，无他，求学没有什么好特别的，知过立复而已，知道过错马上修正自己。就这四个字而已。很多人学一门学问，学到后来，学到最高顶上，拿到博士以后，他就开始骄傲不得了，有一天发现他的东西，不对，我现在告诉你，他就不是君子了，君子马上就知道他不对了，一定经过我们的假设，再经过验证，还有看结果，比如说你是会计师，你是统计学博士，你是什么什么博士，现在外面博士一大票，他们在研究事情在事前都谈到很多几率，啊百分之七十啊，百分之三十，哎，我是医生，你来找我，哎陈先生你看我开刀下去会怎么样，医生就讲话了，没关系，根据我们的专家的判断我们的统计，这一刀下去百分之七十会好，百分之三十不会好，你们听了以为很好，你们以为你们聪明，我看你们是笨蛋，我听的不对哦，听明，医生对不起哦对你来说是70比30，对我来说，不是1就是0哦。哪有什么70/30的。这就是现在的专家，懂不懂我的意思，拿什么几率嘛，所以很多人，读了书以后，回来了，他研究了很多资料，一个决策者，他需要各方面做很多的资料给他，来增加他的判断，来做决策，结果真正会判断的人，他不会依据这些专家的资料，没有用的，真正决策的人，易经啊，在开始的时候，就知道成败了。四个人下棋，你懂易经之道，就是AB哦，开始下两步棋，我输了，我从新来过，另外两个最后剩下一个帅还在那不认输，你认为哪一个是高手啊，易经在一开始就知道了，所以君子是事天，一开始就有机锋，履霜坚冰至，一开始就晓得了，你还在那边谈什么几率还不相信，错了，错了再回头，人事已非了，懂不懂。你关于就教育一个决策做错了，下面损坏的有多少，因为你一念之错。啊错了没关系我们改过来三年一会，又错了再改过来，每天在那里花时间在那里改，失而复，复而失，有没有，哦，现在就是这样子啊。小人就这样子啊，他不懂啊。会做事的人，不会哦。 
+- 第三个，易经提到，复里面，休复之美。第一爻是什么，是下位，结果是君子，那你的上位，上位的人，能下，能够追从于下位的君子之道的人呢，这叫做体仁，这叫做休复之美。现在谁听下面的，我在上面，我怎么会错，我是登辉啊我怎么会错呢，我信的是基督教我从来不会骗人啊，不可以哦，这是休复之美。 
+- 第四个，频复之戒。就是频频恢复的意思，就是复而又失，失而又复，每天在那里来往，在对和不对之间，复和失去之间来往，不够坚心，这叫做频复之戒，我们要警戒，这个就是迷途不改，后来的问题会很大，因为花了太多时间再失和复之间取舍，没有花很多时间去修身进德。这个时候迷途不改，易经上面说，招凶。 
+- 第五，学问之道，无他，求学没有什么好特别的，**知过立复而已**，知道过错马上修正自己。就这四个字而已。很多人学一门学问，学到后来，学到最高顶上，拿到博士以后，他就开始骄傲不得了，有一天发现他的东西，不对，我现在告诉你，他就不是君子了，君子马上就知道他不对了，一定经过我们的假设，再经过验证，还有看结果，比如说你是会计师，你是统计学博士，你是什么什么博士，现在外面博士一大票，他们在研究事情在事前都谈到很多几率，啊百分之七十啊，百分之三十，哎，我是医生，你来找我，哎陈先生你看我开刀下去会怎么样，医生就讲话了，没关系，根据我们的专家的判断我们的统计，这一刀下去百分之七十会好，百分之三十不会好，你们听了以为很好，你们以为你们聪明，我看你们是笨蛋，我听的不对哦，听明，医生对不起哦对你来说是70比30，对我来说，不是1就是0哦。哪有什么70/30的。这就是现在的专家，懂不懂我的意思，拿什么几率嘛，所以很多人，读了书以后，回来了，他研究了很多资料，一个决策者，他需要各方面做很多的资料给他，来增加他的判断，来做决策，结果真正会判断的人，他不会依据这些专家的资料，没有用的，真正决策的人，易经啊，在开始的时候，就知道成败了。四个人下棋，你懂易经之道，就是AB哦，开始下两步棋，我输了，我从新来过，另外两个最后剩下一个帅还在那不认输，你认为哪一个是高手啊，易经在一开始就知道了，所以君子是事天，一开始就有机锋，履霜坚冰至，一开始就晓得了，你还在那边谈什么几率还不相信，错了，错了再回头，人事已非了，懂不懂。你关于就教育一个决策做错了，下面损坏的有多少，因为你一念之错。啊错了没关系我们改过来三年一会，又错了再改过来，每天在那里花时间在那里改，失而复，复而失，有没有，哦，现在就是这样子啊。小人就这样子啊，他不懂啊。会做事的人，不会哦。 
 - 第六，迷复。执迷不悟。大凶。会做学问的人，始复，一开始就回头，你懂不懂我的意思，不会做学问的人呢，笨蛋呢，到了后来还执迷不悟啊。那就大凶啊。招凶之道。那到了执迷不悟阶段的时候，动则必有过失。时机上面，如果出师，出兵打仗，必败。如果君王入迷复之道的时候，国事凶。所以君子在刚开始发现不对的时候，马上就修正啊。修正有什么关系。
 
 当你遇到执迷不悟的时候，比如说你的小孩子，刚开始，他吸毒，一次回来被你狠狠地毒打一顿，每次都抓住他毒打，从此就不相信他会吸毒，要刚柔并用个，狠狠打一顿，夫妻两个一起打，打完第二天还是要准备便当让他准备去上课哦，不要讲了，他以后就不敢，那等到他后来积重难返执迷不悟的时候，已经无救了。国君如果到这里，国家就很危险了。你这个时候再出兵，很危险。动则必有过失，所以诸位你看外面很多制造问题的人，都是执迷不悟的人。 
@@ -284,18 +287,17 @@ tags:
 
 - 第一个，官人乘车，代表大使。使节，如果车姓，连姓，战姓，军队，还有代表大官调职的象。
 - 第二，上面有两只旗在动，诸位看，两个旗，鬥也，相斗的象，也代表将帅的象。一方之主的象。
-- 第三，堠子东字，诸位看到猴啊，猴发木形，猴子瘦干干的，发木形的人。你如果属猴的人，胖嘟嘟的，就不发哦。要很瘦，要像王永庆那样瘦瘦的。木形大利。 还有一个，東字，束怎么念，加一个中心，就是有心约束的象。東字，是十八日，所以是十八日至，也是东。哎奇怪我这个朋友怎么还不来看我，一卜，十八日到。 如果是卜到升迁，字比较难读，图比较好读。哎我怎么升迁命令还没有发布，一卜得到地雷复，哎，先生啊，十日有没有，来人，这是一个来，十天会来人，因此，十日来人封侯。数是十日，这是升官的时机。 
+- 第三，堠子东字，诸位看到猴啊，猴发木形，**猴子瘦干干的，发木形的人**。你如果属猴的人，胖嘟嘟的，就不发哦。要很瘦，要像王永庆那样瘦瘦的。木形大利。 还有一个，東字，束怎么念，加一个中心，就是有心约束的象。東字，是十八日，所以是十八日至，也是东。哎奇怪我这个朋友怎么还不来看我，一卜，**十八日到**。 如果是卜到升迁，字比较难读，图比较好读。哎我怎么升迁命令还没有发布，一卜得到地雷复，哎，先生啊，十日有没有，来人，这是一个来，十天会来人，因此，十日来人封侯。数是十日，这是升官的时机。 
 - 第四，一个将，持刀立，武威之人。或者是司法执行人。比如说刀斧手站在那边，法警啊，都是。 
 - 第五，一个兔子。兔子呢，代表属兔的人，或者是刘姓的人。老师刘跟兔有什么关系，劉上面不是一个卯嘛，卯是不是兔子啊。金刀插在地上面，就是兔子，讲的就是刘。所以汉朝开国的刘邦，姓刘，金刀插在地上，读图读到，所以刘是我们的大姓。当然，李也是我们的大姓啊，唐朝李家天下。 
 - 第六，一只老虎，讲什么，肖虎的人，王姓的人。
 
 #### 3.阳宅 
 阳宅部分，母居长子位，成格，妈妈住到大儿子的位置，地雷复，父母住在东宫上面，对于父亲来说，是天雷，对妈妈来说就是地雷。 
-- 第一个呢，女生男性，太太走出来像男人，先生走出来像女人，这就是地雷复哦。 
+- 第一个，女生男性，太太走出来像男人，先生走出来像女人，这就是地雷复哦。 
 - 第二个，武职大利。如果太太结婚，又是武官，住地雷复，哇你很厉害。 
 - 第三个，代夫出征。 
-- 第四个呢，发官不发财。如果你当官的可以，做生意的住在地雷复上面，没有用哦。不可以乱改。
+- 第四个，发官不发财。如果你当官的可以，做生意的住在地雷复上面，没有用，不可以乱改。
 - 第五，夫妻婚凶。原因，夫招官讼，官司。妻壮，女孩子太强了。因为这样子，离婚的原因就是这样子。地雷复。婚姻非常不好，如果你住在复卦上面，赶快搬走。但是利发武职。武职大利。 
-
 
 有没有什么疑问。诸位看我们易经上面图上的字的时候，测字也是一样的哦。测字抓机锋。懂不懂我的意思。 
