--- a/CURRENT/0常用模板.md
+++ b/CURRENT/0常用模板.md
@@ -111,3 +111,9 @@ tags:
 ---
 俗话说，适合自己的才是最好的。
 <!-- more -->
+
+
+
+
+![火泽睽](https://preview.cloud.189.cn/image/imageAction?param=2E89D460D97BD435211E03CB3BD88BF6C5CC4A25DA496FE6173D1F0782ED75960F10D169B5DA057299A008968A30EADC602926EA6E362268A27BEDE77AB6C2FC6FEF6384CF6B4BCBE42A2EDC2BDA63C3C337541772D76FA91A8FD3F3412CF6B5AA704A9B8D695C801AD2E97B25DD55A9)
+![火泽睽](https://preview.cloud.189.cn/image/imageAction?param=88403266F8E2289CCD86AC01F7325DE19E7211B106B6B8CEE69B26A5A7F3B17319DC8BF3BEE1569842B177C9418E47362F6FE70F78FE4B7A2EEEDEC15BE47B76FE36EBE396E368327E5781E942B242A416ADF9F5CD27C7E2A1271CF2D7EC8A8E4547EBE5907B17481FED77C578980943)
