--- a/UPLD/倪海厦_天纪004_64卦图解.md
+++ b/UPLD/倪海厦_天纪004_64卦图解.md
@@ -15,15 +15,19 @@ tags:
 
 <!-- more -->
 ## 一、南斗星系——七杀、破军、贪狼
+
 我们接着谈，下面有三个，都是南斗星系，七杀、破军、贪狼。这三个是一组的，一定会会到。那这三科呢，全部主的是武官，个性上面会有区别。
 
 ### （一）七杀
+
 七杀入命的人：目大，性急，多疑。如果你娶个太太是七杀入命，那你就差不多毁了一半了。很累啊，草木皆兵。七杀的个性，你一看就知道，他个性很急，很刚，这三颗星都是很阳刚性的。所以你看一个人个性很刚，谁的话也不听，一天到晚自以为是，就是七杀破军贪狼入命。
 
 ### （二）破军
+
 那破军呢，跟七杀的唯一区别，就是破军的人，比较**孤僻**，所以你看我们这个天文地理，比心理学还有用，破军个性很孤僻，一个人，孤芳自赏，人呢，瘦瘦的，很瘦，怎么养都不胖。破军星的人，不重利，对钱财不看重。如果你遇到一个女朋友，结果她的妈妈是破军星，如果你每天送你女朋友金银珠宝，她妈妈一定反对，所以招子放亮一点，要看清楚，那如果你女朋友是破军星，那就好了，她完全不重利，要感觉，钱多不重要。
 
 ### （三）贪狼星
+
 那贪狼星呢，在人事上面，这个是属于桃花星，这是主桃花星，像廉贞是次桃花。贪狼除了指的是桃花星，也指的是酒、色、财气、赌，统统在贪狼这里面。那贪狼的形貌又不一样了，比较魁梧，比较大，或者毛发比较多。
 
 这三颗星常常会在一起，武官有这种星是最好了，你看张飞这种毛发那么多，这是贪狼。这几个星个性会比较刚强固执。遇到这种人批八字，我们要记得人物志里面告诉我们的话，我没有放在讲义里面，刚愎自用的人，最容易被人家利用，要提醒他。
@@ -35,6 +39,7 @@ tags:
 那如果流年遇到七杀、破军两颗星，主辛苦奔波劳碌，孤单，一个人拼命去做事情，然后呢，又耗，钱财容易出去，又不容易聚财。这是他的星性。诸位用性去领悟他，不用去看书。书上写的诸位先不要管，先了解了以后，你三个月听完了以后，你已经变得很强了，强了以后，以后有空再看看那些书。否则你不了解，一看这些书就被书给绑了。
 
 ## 二、六杀星——羊陀火铃空劫
+
 这三个讲完了，后面有一组，我们叫六煞星。羊陀火铃空劫：羊叫擎羊，陀叫陀罗，火星，铃星，天空，地劫，这是我们六煞星。这个六煞出现的时候，他在你的命宫，你的有人的宫，或者是事业宫，什么叫有人的宫，比如父母命宫夫妻兄弟子女宫，他的解释就不一样，在没有人的宫，比如财帛官禄迁移啊，意义也不一样。但是基本脱离不要，统统都是煞星。
 
 我们在看煞星的时候，特别要注意，后面我们排出来的八字以后，都会有，庙、旺、利、陷，这个就是所谓星辰的亮度。亮度当然会影响。比如说今天太阳出现在白天，太阳很大，很亮，结果呢，天上乌云密布，太阳光没有办法透过去，他代表亮度不太好；如果是吉星，像我们前面说过的，反正所有的吉星入庙旺都最好，在利的时候是平平，在陷的时候是最差。那如果你遇到煞星在陷地，那是差中更差，你懂不懂我的意思，凶中之凶。如果你遇到陀罗星，结果火星是入庙，庙旺的话，这个煞星反而会变成吉星。
@@ -60,10 +65,11 @@ tags:
 还有看不到的小人，就是你看起来外面很健康，但是里面有癌症，就是开刀见血光，就是羊陀，如果流年遇到这两颗星，身体必开刀。这是我们算命我们可以知道的。同样的，举例，如果擎羊星代表刃，开血光，结果呢，它是庙、旺，庙和旺代表说，这个刀下去，平安无事，可能是小手术，没有事，但是没有事还是要警戒哦。
 
 有没有什么问题，如果你们人事的问题，遇到这两个人的问题，遇到他落陷的时候，最可怕，来阴的，诸位，你怎么知道他来阴的，看相就可以看出来了。有个人站在你面前，跟你讲话，眼睛这样子，鼻子，嘴巴，哎，左边眉毛有一道纹上去，这就是正面讲你好话，转身你不注意就讲你坏话：
- 
+
 我看过很多，甚至还说，我是信什么什么宗教的，我绝对不会骗你，不要讲这种话，你真的不要骗我，不要用宗教来压我，上帝没有说你信我的宗教就不会骗人，上帝只是说真理是对的，懂我的意思吗，很多人说，我是信什么什么宗教的，你一定要相信我，讲这种话的人，你就不用信了。贵人言简刚中，越是这样讲的人，越要骗你。这个眉毛上纹往上走的人，表里不一致，你知道为什么这样吗，他因为你在的时候，他和颜悦色，可是那个纹已经出来了，你一走的时候，小人讲人家坏话，是越讲越激动，眼睛这样子，一条纹就出来了，你一看，这个家伙不要接近。宁可戒之初！一开始就把他去掉，不必来往！你不跟他来往也能当上总统，不必要跟他的。对不对，无所谓啦，你不必要去说我要去交很多朋友，不需要。
 
 ## 三、总格
+
 那其他呢，这些主星，跟诸位先介绍这些主星，其他还有一些小星，像长生十二宫等等，很多小星，我们介绍命格的时候，我再陆续跟各位介绍。
 
 我们首先看一个八字的时候，第一个会面临到总格的问题。很多老师说，哎呀小孩子，你很聪明啊，被聪明给骗了。先生你要听明，这两个字看起来很像，你以为我讲错了，听听就能明白，这个人多厉害啊。
@@ -71,23 +77,29 @@ tags:
 我们看总格，一个八字的总格，我们命里有很多的格，其他的格，我尽量给你删掉，我们不要那么多格，我们尽量不要被形绑到，但是有一些特殊的，我要告诉你，就是属于例外。前面跟诸位介绍过的，比如说，命坐财星，或者是父母宫坐财星，或者是田宅宫有财星，这些都是生有祖业的。
 
 ### （一）日月夹财
+
 还有一种状况呢，第一个，叫做日月夹财。比如说，这是丑宫，子宫，寅宫，如果有一个人的命宫在丑，结果太阴在子，太阳在寅，所以日月刚好是他的左右两边，夹着，叫着日月夹财，夹在命上面，这个人一世财禄很大，包括先天的祖业，和后天的产业。那即使命宫里没有什么主星，没有关
 
 ### （二）紫府夹权
+
 第二个，紫府夹权。如果一个人的命宫，是紫薇天府来夹，掌权！
 
 ### （三）魁钺夹贵
+
 第三，魁钺夹贵。`天魁、天钺`我一会介绍，这两颗是科甲星。命宫旁边是天魁天钺来夹，是夹贵！
 
 ### （四）羊陀夹杀
+
 第四，那比较惨的呢，是羊陀夹杀，这个就比较惨了，命宫旁边刚好是擎羊和陀罗，把你夹到了，你呢，如果我们光是算命，算形，就是说，你这个人生下来一辈子都跟着小人，你家里面一片小人，外面朋友也是一片小人，你在劫难逃。讲完了，这个没有用。应该要反过来讲，先生，你命中注定小人很多，换句话说，你容易被人家影响，你要学习如何去面对小人，眼睛要看清楚，你要有这个观念，真理说的才是对的，爸爸说的妈妈说的不一定是对的。对不对，合理的我们接受。
 
 这种羊陀夹命的人，最容易被人家影响，告诉他个性上的缺点，然后他领悟了以后，了解了以后，这个灾就没有了。这是几个总格。
 
 ## 四、副星
+
 后面还有一些副星要介绍。一对对的。
 
 ### （一）文曲、文昌星
+
 第一对，曲昌，文曲文昌星。文曲星主才艺，博学，多能；文曲星，看起来比较斯文，文绉绉的。文昌星呢，代表科甲，读书考试，所以流年今天逢到化科，或者是文昌，那你今年金榜题名，当然后面还有两颗科甲星，我这里先讲文昌文曲，那如果文昌星坐命，没有文曲星来的话，这个人会变成书呆子，你知道什么叫书呆子？统统都学了，学而不思，则罔，迷惘！一下被人骗了。
 
 那如果这两颗星同时会到，那就变成文采风流。很多人是风流才子，写的诗很好，有文采，给男孩子是这样的，给女孩子就不好了，女孩子会到这两颗星，变成女孩子是桃花，在帮女孩子算命的时候，千万不要帮她算，哎，小姐你有桃花，你是个桃花命，千万不要这样子讲，你可以说，男孩子看到你会很喜欢你啊。各位如果你请我看过命，我没有很含蓄，我讲的是实话。
@@ -95,11 +107,13 @@ tags:
 那反过来，如果你34岁，流年逢到文昌，刚好文昌星是遇到化忌，是不是说代表他有考试，但是呢，代表不中。这样以此类推，加减就是，看我们看的很零星，其实合在一起就是很简单了。所以，千万不要以为很复杂，其实很简单。
 
 ### （二）天魁、天钺星
+
 第二对呢，天魁，天钺。这两颗星也是科甲，读书星。如果有一个人命里面，有天魁天钺，又有文昌文曲来会，我告诉你哦，他长得再粗鲁，再壮，考试都是拿第一。你不要看他一点都不像读书人，你们还没有学，所以你们不要先去设定，看到这个人斯斯文文的，就一定会读书，小姐你错了，有的人长得很粗鲁，讲话很洪亮，考试都是最棒的，千万不要被外形所惑。
 
 那你说老师我怎么知道科甲星很旺，我告诉你，手上有天柱纹，男左女右，有天柱纹，都是科甲很旺的。最明显的就是在手上，天柱纹，男左女右。
 
 ### （三）红鸾、天禧星
+
 第三对，红鸾，天禧，这是诸位最喜欢学的。看到这颗星，顾名思义，就知道，红鸾心动嘛，所以中国人说这个成语，其实是从斗数里来的。
 
 一般的红鸾天禧星，是代表喜庆的星，看你坐在哪里，看它怎么会。比如说，男人啊，命在红鸾，你的命宫里面就有红鸾星，必招美妻；女命红鸾呢，必有贵夫。
@@ -113,30 +127,37 @@ tags:
 那个流年怎么走的时候，我们会和运上面做加减，所以，这个部分，我会留在进入天文地理同时批的时候，批给你看，告诉你怎么计算，你就会了。最终是那个数，**斗数和易经**，完全讲象还有数。所以诸位看我们这一派，是象数综合，现在的人已经象看不懂，数不会弄。我们就专门挑人家看不懂的去弄，看得懂的书谁都看的懂啊，读书很简单啊，我们象是读图。
 
 ### （四）左辅、右弼星
+
 第四组，是左辅右弼星。这个左辅右弼是辅助紫微星的，只要紫微星出现，有左辅右弼来会，那这个紫微星就是君王！诸侯君王之相。
 
 ### （五）三台、八座星
+
 三台，八座呢，是辅助天府星的。这是南斗星君的文武两官。天府这个南斗星君遇到三台八座，这个南斗星君的解厄制化的能力就越强。北斗星君比南斗星君强，因为紫微星即使不碰上左右，他也可以解厄制化。这个天府星一定要逢到三台八座才有解厄制化的功能，否则光是一个天府星，解厄制化的功能没有，这是星相。
 
 第二个部分呢，刚才说了总格，其他的一个格我们在看例子的时候，慢慢跟各位讲。
 
 ## 五、十年大运
+
 这是一个很简单的命盘图，我们在排这个命的时候，有几个重点：
 
 ### （一）闰月生人
+
 闰月生人，做下月论。比方说你是农历四月，结果那个月刚好是闰四月，我们要把他排到五月去，这是闰月生的人要注意。
 
-### （二）子时生人。
+### （二）子时生人
+
 子时是从11-12-1点，12点是半夜，要注明一下。
 
 如果你刚好是11-12点生的，叫做晚子时。过了12点以后，叫做早子时。后面的，日子要换，12点要换第二天的。所以排斗数我们有早子、晚子。你是今天晚上11点半生的，你叫做今天这一天的晚子时生的。那你是今天凌晨十二点半生的，代表今天的早子时，我们排的时候，日子还是今天，早子时和晚子时排出来的八字是一样，过了十二点才算是第二天。
 
 ### （三）子丑寅卯十年大运
+
 我们来看子丑寅卯十年大运的时候，有句话，**命好不如限好。**
 
 比如说你的命宫里面，都是吉星，很多很多，就代表你先天很好，可是你的限，这个十年大运呢，`批流年的时候就叫做限`，这个十年是不好，这个命好不如限好，有的人命宫出来，三方四正会的时候，我们命宫、迁移、财帛、官禄，三方四正来会的时候，他本身会到的并不是很好，可是你看他流年很好，这叫做限好，限好比命好还重要。
 
 我看过很多八字一排出来，格局很好，什么什么格，结果我们批的时候，夭折，为什么，他命很好啊，可是限不好。夭折，看过很多哦，所以这就是让你容易失误的地方，所以刚开始讲第一个大限的时候，遇到这种情形的时候，你如何取判断，当然后面我们会实例结合来讲，那判断方法：
+
 1. 小儿善知人意，主夭，夭折。
 2. 小孩有大人的样子，主夭。
 
@@ -147,6 +168,7 @@ tags:
 所以小孩子，童蒙，要有小孩子的天真，所以我劝天下诸位妈妈们，你们小孩子去学校能学到的不要教他，要教他学校没有的，就好像很多妈妈在美国，还要教她小孩子英文，这不是猪啊，猪就这样死掉了，他每天在小学上课都是学的英文，还要劳烦你去教他英文，你要教他中文，教他没有的，才是妈妈的职责，所以你不用教小孩子在学校能学到的，你每天都带他出去玩，你就教他游泳啊溜冰啊打球啊，小孩子最不怕的，童蒙嘛，什么都不怕，以后他长大了一身是胆，我告诉你，到现在很多大人不敢提问，小时候妈妈没有教，小的时候不敢提，我爸爸就是小的时候不敢提，胆小，小孩子哦，你当妈妈的，陪他玩就好了，其他不用教，要不然 要老师干嘛，你嘴巴里看到老师叫老师好，你去教他，你是他妈妈还是他老师啊，你角色没有扮演对，让他去玩，让他童稚的相法出现，玩就玩，小孩子尽量让他天真、活泼、去玩，摔伤了没有关系，再玩，不要担心，我们大人脚摔伤，两礼拜才好，小孩子摔伤抖抖马上就好了，不要怕，你就是要培养他玩，所以天下所有的妈妈们，不要以为你教对了，即使你是老师，你也是妈妈，你在学校里教他是老师，回到家里你就带他去玩，个人是不赞成做暑假作业的，没有用的，到现在我一个暑假作业的题目都没有用到，不晓得当年干什么。
 
 ### （四）局
+
 这是特别要当心的地方。我们命有很多局，水二局、木三局、金四局、土五局、火六局。那这个呢，诸位不用去记，排的时候统统都有了，这个23456，本身水木金土火，本身没有什么意义。千万不要说，他是水局了，就从水的行业，水的行业有哪些，像冷饮业观光业旅游业等等，都属于水，你们不必像我那么熟，你知道他的性就好，千万不要说哎你是水局，你这个水最旺，你错了，不是这样子，没有什么代表和意义，只是我们排局定星座的时候用的。
 
 这个二，只是说，如果他命宫在这里，二只代表他这是2-11岁的大限，那12-21,22-31，有的时候是往这边走，有的时候是往这边走，看他是阴男阳女还是阳男阴女，这是排列的方法，那这里节约时间呢，我告诉各位说重点在哪里？
@@ -158,7 +180,7 @@ tags:
 十年大运我们要看对面，如果批小流年的时候，**小流年就不用看左右夹**了，批一年的小流年，只需要看`对宫和本宫`。怎么讲呢，只要看本宫
 
 我们假设从戌宫开始起子，比如说，你是43年生的，年干是甲午年，那民国83年，今年，在盘中占哪一个宫，我们怎么算，83-43+1=41岁，那41岁到底怎么算，我教各位一个方法，很快，从戌宫起子，我把几个宫用红色画起来，
- 
+
 ![计算今年宫](https://preview.cloud.189.cn/image/imageAction?param=DA1B411FE205C30A191C4E8D076930051EA8A9BAB90BCCE3573F67D478E3A572D06DFDDE6F0731C0595C2D7A6AF6839E0A9E5E4FB13EF9A664EBA0AC5D400D0364C41100CE82825C8DC9165917A49AEB07D5C2EE17E0D40D1AA016E61D24B77DAD38778A6ED9310DB9F43E7CDCF7AF9A)
 
 其他的不要看，我们从戌这里起子，子丑寅卯辰巳午为申酉戌亥，从这边开始算，算到午的时候，我们晓得午在这里，对不对，哦，他是甲午年生的，那就从午宫开始算一岁，那从午宫开始往上转，**男顺女逆**。你不要一个个数，一圈回来这个午宫就是13，再回来就是25,37，那38、39、40、41就在申这边了。懂不懂，很快的。因为给诸位排的那个层次没讲这个。你用这个方法一推就出来了。为什么不写在里面，外面电脑程序上面写几岁几岁，整个宫看的很乱，你会confuse，不需要，我们这样一看就好了，就算到了。
@@ -182,45 +204,58 @@ tags:
 介绍到这样子，诸位有没有什么疑问，听不懂不要紧，你把这个形式记下来，以后用，每一堂课我有好几个很好的案例给诸位，诸位看了以后，会用，一下就会了。所以教你们批，反过来教比较好，一直教理论，你听的也是很乏味。听到目前有没有什么不了解的？
 
 ## 六、补充
+
 ### （一）巨门星
+
 我们补充两颗星，前面忘掉了。第一个叫巨门星。这也是主力星，本身是一个凶星，不是吉星，代表口舌、是非，官司，牢狱之灾。如果巨门星是庙旺，那这个灾要去掉大半，变成能言善道，口才非常好，那如果是巨门星落陷，陷地，不亮的话，问题就来了，诸位看这个巨门，就是门很大，你看那个学校的门也很大，如果是庙旺的话，就是当学校的校长了；如果是落陷的话，门是关到的，监狱的门也是大，但是关闭的。落陷，坐在牢里，所以同样一颗星，他代表的意义不一样。
 
 巨门星主牢狱之灾，官司，纠纷，口舌，巨门星的人呢，有一种，个子很小，声量很大，形小声高。还有一种呢，也是长绒肥胖，毛发很多，也是巨门星的形象。
 
 ### （二）禄存星
+
 还有一颗星呢，我们叫禄存。禄存呢，同于化禄，禄存最重要的是指的是财星，像禄存星在命，这种人就是标准的**小气**，如果你的儿子和女儿的命中有禄存，你给他压岁钱，他统统藏起来，然后哪天跑出去的时候，他会用你的钱，他的钱留着，很小气。禄存如果在财帛，流年逢到禄存，财星都很旺，事业都会很旺，大赚钱。
 
 禄存同化禄，通常逢到天马，如果逢到天马，这是一个特殊的格，叫做**禄马交持**，天下没有白吃的午餐，我们在算命的道理也是一样，这个财禄来了的时候，一定要逢到天马，一定是很辛苦赚来的，所以逢到禄马交驰，会逢到很大的财。一般人呢，一个禄马交驰不得了了，有的人呢，禄存化禄，还禄马交驰在同宫，那是巨富！
 
 那巨富的人再逢到巨门星入庙的时候，代表他豪门宅第。如果生下来就是巨门入庙，禄马交驰在命，那就是豪门世家里面。你千万不要给他批出来，生下来就在牢里。不要批错了，入庙嘛。同一颗星他代表的意义不一样。
+
 ## 七、卦辞和象
+
 ### （一）六爻详解
+
 这个卦，易经的卦，他进入人间以后，在我们所看到的，就是乾为天的象，一般外面讲易经，讲爻课，一般他们讲辞，并没有把他的神传出来。所以刚开始这第一个卦，我会讲的很仔细，以后的卦以此类推。这个第一个爻叫初爻，二爻，三爻，四爻，五爻，六爻。
- 
+
 我们老祖宗呢，他把一个事情的发展，进展分成**六个阶段**，当你进入每一个阶段的时候，层次都不一样。怎么解释？比如说，你正好是位居第四爻，**在我们初爻的时候，叫做下，中爻也就是二爻的位置叫着将，三爻的位置叫做相，四爻的位置我们叫做宰，五爻的位置叫做君，六爻的位置叫做过。**
 
 #### 1.初爻（下爻）
+
 这是他的层次，所以易经我们讲初爻的时候，初爻是下爻，是**潜龙勿用**，下指的是下民，你还没有入朝当官，你在野，闲云野鹤，不是在官场，这是潜龙勿用。刚开始的时候，最开始的时机。那在潜龙勿用的时候，诸位要自修，这是自修最好的时机。
 
 #### 2.二爻
+
 当你有一天进入二爻的时候，为将的时候，当一个主管的时候，或者当一个县长的时候，我们叫**见龙在田**，易经上的爻辞是利见大人，这个文字上尽量少叙述，我尽量要这样子去想。这个意思是说，如果你今天当了主管，你还是阳，初爻也是阳，你当主管，跟你当百姓的心是一样的，懂不懂，刚开始你是阳，阳主刚，那到了二爻的时候，你还是阳，还是主刚，你不要当了官以后就忘记了你是潜龙的时候，现在很多人当官就忘了百姓懂不懂，不可以哦，要阳刚，内心不能因为你做了主管而改变，所以这个时候利见大人，这个时候**适合你去交很多对你有益的朋友**，诸位怎么样选择对你有益的朋友：
+
 - 第一个交比你懂得多的人，不要老是交那些比你不懂的人。
 - 第二个，术业有专攻，交跟你同样类型的人，比如说你是律师，我是医师，我们在一起，律师医师的问题就解决了，对不对，哦，你是会计师，那我们三个可以开一个国家了。
 - 千万不要交那种一天到晚到你面前借钱的，
 
 #### 3.三爻
+
 进入第三爻的时候，我们易经分两段，到第三了，**这是下卦，这是上卦**，下面是内，上面是外。对下卦来说，第三爻是不是到顶了，所以你从下往上升，到顶啦，易经说什么，**终日乾乾**。为什么要这样？当你再升一级，到相的时候，你每天要警惕自己，再要进德修业。所以呢，有人到42岁以后，还去修博士，因为到了这个阶段，如果再不去进德修业，上不去了。
 
 #### 4.四爻
+
 但是从初爻到三爻，内在都是阳刚的，内在都不变，不要忘记了你做百姓时候，百姓的苦恼，不要忘了。这个时候要进德修业。
 当你终日乾乾、进德修业的时候，不要往上看，要往下看，这个时候，你会跳到外卦，跳到第四爻，做宰相的时候，做君王的左右手，这个时候要**或跃在渊**，为什么要，龙指的是一个刚正的人，你到这个时候呢，要待时机而动，待机而动，到底是跑回深渊呢，还是继续呆在这边，要看你的主子，你的君王，要顺时而动，不能乱动。看清楚时局。
 
 举例，如果我们当到这个位置，结果有一天开始政争，为了位置开始争权，这个时候，如果我们是相，我们进入宰的时候，利见大人，我已经修到博士了，对不对，进德修业，那这个阶段，会近天子了，如果有政争的现象产生，最好的是什么，**跑路**。有机会到国外去当大使，我就去了，不要参与进去，这叫做因时而动，因为在争的时候，你走哪边都不对哦，将来都会有仇人，那出去的话，等到政争停下来了，君爻见的时候，你自然而然会受重用，所以我们受重用的都是国外回来的，速度快一点。
 
 #### 5.五爻
+
 这样你在宰这个位置上，就很稳，或跃，就是看时机而动，否则你一念之差，终身没有了，就没有机会再回头了，当你进入君王的时候，当你有一天做了天子以后，我们叫**飞龙在天**，那你注意看，从下面到上面，阳阳阳阳一路，即使你从最下在野的时候，一直干到是天子的时候，你的心都没有动哦，都是刚正，守着你的原则在做事情，所以乾卦叫贞正，一定要坚心，不要忘了你是百姓的身份，你有一天还会做百姓，这是到了第五爻。
 
 #### 6.六爻
+
 如果，易经上面来说，你当了君王，结果呢，你没有往下看，你还在往上看，还不够，皇帝怎么够呢，我要当天子，当圣人，天子不够了啊，我要当圣人了哦，我要当神，当你进入第六爻的时候。你还是往上看的时候，叫做**亢龙有悔**，过激的龙，天下你只相信自己不相信任何人，请问你，全国两千万人，都是没有能力的吗，不一定，造成无民无辅，进入亢龙有悔时，你会永远没有百姓跟到你，没有人敢辅佐你，比如谁，袁世凯！当总统怎么够，我要当皇帝，当了皇帝还不够，我要当天子，当神！亢龙，诸位，当到君王了，一定要往下看，绝对不要往上看，六个爻，这是天机。
 
 如果有一个人来找你，倪先生，我现在遇到问题，我现在是在相这个阶段，你看我是继续出国读博士进修好，还是继续留在这里当官好，今年已经四十岁了，如果我出国读书，会把老婆孩子留在这边，分居很痛苦，我不去拿那个博士帽的话，可能我的官运就到此为止。他就在这时候终日乾乾，不知道怎么办，你告诉他，进德修业，去读书！才会再进一步。不去读书，到此为止了。
@@ -228,9 +263,11 @@ tags:
 如果是宰这个阶段的人，来找你呢，你告诉他，要见机而动，见时而动，这个时，就是我刚才讲的，外地会比本地好；如果是初爻这个时机来找你的，你告诉他，好好地进修，然后参加考试，准备进入第二个阶段；那来找你的人，不一定是哪一个阶段，还有你自己知道自己面临哪个阶段，要知道是什么时候，要怎么做。
 
 ### （二）六十四卦图解
+
 下面介绍六十四卦，每个卦都有爻变，比如说我们乾为天，你如果按照这个原理来做事情，你就是乾为天，了解我的意思吧，懂不懂我的意思。比如说我们有一个卦，天地否，你如果按照天地否的每个爻的方式来做，你就否了，可能还要加个病，痞子了。
 
 所以我们研究易经八卦，可以让自己变成那个卦，也可以那个人变成那个卦，然后看到这个人在什么状态之下，我们就知道他目前处在哪一个卦的第几爻，然后从这个爻要往上走，如何从这个爻，从这个卦，让他变成地天泰，或者火天大有，或者是进入乾为天，一下，你的念就改过来了。这就是易经。所以我们讲易经的时候，从乾为天第一个讲，第一个这是天的性，天的定位，再来讲坤为地，天地定位，然后开始循环了，就好像手表一样，一分两分，那如果你走到25分，如何变成，我们马上就看到了，你会变成什么，然后就是26，27,28，我们就看到了，这就是我们要学的东西。就是站在外面看到里面藏什么。
+
 #### 1.乾为天 [䷀]
 
 ![乾为天](https://preview.cloud.189.cn/image/imageAction?param=9009257B37F34902A1D93BBF9621A156C414767E6DAD7F02FC41BD7AF0A87EFBBD3D7D44129D5D5A70B212C25F4AD83C49F4430077CEEF2F4F91EDA9534BDB2D719DBD6BEE8EF519434390AA42D033D14F87602E42E6ED80BC3D6AC8DD94D21332E66789B811B42BBA3BD01796707650)
@@ -240,7 +277,7 @@ tags:
 这个图有个官人在登梯，有没有，空中有个路，有个人在那里磨玉。玉上面有光，月在空中，这是什么意思啊，下面这个解曰，你不要看，只是把那个图，解释一下。
 
 如果今天有个人来占卜，来找你，倪先生，我今天来找你，我父亲病重，能不能卜卦看看有什么问题，一卜，卜到乾为天。楼梯旁边，上面有个官人在上面：
- 
+
 梯上的官人，就是棺，你不要被图绑住了。懂我的意思把。
 
 那如果以人间道来说，倪先生，我的官运不亨通，以后会不会亨通？一卜卦，乾为天，你就跟他说，官人站在梯上，就是居上位而不骄傲，你没升官就是因为你居上位而太骄了。你看他看那个摩玉的人，往下看，你看乾为天那个在楼梯，往上看，爬楼梯，老祖宗就告诉你往下看嘛，有个人在磨玉。玉啊，空中有一个禄，代表是空想，意思是说，你要**断念**，我们是来做官，不是为了钱的，禄要放在空中。
@@ -307,13 +344,13 @@ tags:
 有个人，从空中下来，一个猴蹲在那边，一个墙，一个马在下面，一个十一个嘴巴，口在中间，两串钱在地上，一个人坐到，一个人站着，官人啊，什么意思啊。诸位呢，进入占卜，如果你占卜，卜到这个卦，坤为地，有几种解释，我统统解释给你听。
 
 首先，一个人坐在椅子上，一个人站在这里，这是官人，对不对，地上是不是两串钱，是不是这样，两串钱嘛，人家画的不好，又不是毕加索，串嘛，是不是这样写，两串钱，代表忧心忡忡。
- 
+
 两串钱是忧心忡忡，然后钱放在地上，官人看到钱为什么忧心忡忡，想拿又不敢拿，贪污。
 
 那十一口，是不是吉啊，这是一种解释，不是说贪污是吉，这是两件事哦。十一口，这个十，一，加上口，代表陳；
 
 然后呢，一个人从空中下来，人代表民心，代表有人检举，检举也是民心啊，有一匹马，马有两个解释，一个是**肖马，属马的人**。另外一个呢，这个**马回头**，看到没有，第一个属马的人逢此卦调动，一定会调动，变动。
- 
+
 后面呢，你看一个人坐到，一个人站到，中间有个小山头，有四个点啊，你看我怎么写，四点在土上，黑呀！读图给你看啊。你说画的很分开啊。
 我跟诸位讲，有人卜卦，我讲个例子你听，联合起来你听，有一次我一个朋友来卜卦，一卜坤为地，他是司法界的人士，他本身是属马的，然后他现在办的是公家单位贪污的案子，两个人，联合起来贪污，已经被关的人，姓陈，然后是有人检举上来，财查他们贪污的被关的，你看像不像？是不是吓一跳啊。
 
