--- a/UPLD/光伏产业报告.md
+++ b/UPLD/光伏产业报告.md
@@ -24,10 +24,12 @@ tags:
 
 对于光伏产业来说，成本决定了是否能够大量普及。2021年，光伏发电成本0.35元。成本的快速降低也是光伏产业的特点。
 
-### 1.政策的延续性。
+### 1.政策的延续性
+
 我国从2009年出台光伏补贴政策，十年间，光伏发电量增长了1300多倍。
 
-### 2.政策的拐点。
+### 2.政策的拐点
+
 2021年整县推进分布式光伏政策出台，同时取消了补贴政策。
 
 ## 三、整县推进“分布式光伏”——政策推动分布式光伏推广
@@ -55,12 +57,18 @@ tags:
 
 ### （一）通威股份——硅料——上游
 
-#### 1.硅料是周期性体现最充分的环节。
-#### 2.如何判断周期：
+#### 1.硅料是周期性体现最充分的环节
+
+#### 2.如何判断周期
+
 ##### a.需求端
+
   判断市场有多大，要考虑到国家的政策方针
+
 ##### b.供给端
+
   看产能有多少，比如合格率、开工率、其他行业的跨界选手
+
 ##### c.结合时间进行估算
 
 ### （二）隆基股份——硅片——中游
@@ -76,4 +84,3 @@ tags:
 ## 七、思维导图
 
 ![思维导图](https://preview.cloud.189.cn/image/imageAction?param=989A1224240E0CC55ED646B55F8C9576A51BDDC2247960785CCEA7091FB90B43564B9DE4568EB80FCD857A06B7D6C341199CD5F095ED67AC7D535C23A6DB33D53B702A36247702CAA8B567422D8284D88ABE65E054A506A6B904F9A65409DA27DF938A42A3EBAA55841C137BC43818EB)
-
