--- a/UPLD/公文_汇报材料.md
+++ b/UPLD/公文_汇报材料.md
@@ -15,26 +15,32 @@ tags:
 <!-- more -->
 下面仅仅罗列一些注意事项以及写作的一些参考，重点是把功夫用在平时。
 
->  前提：对标（上级要求）
->  - 对中央精神（可以直接化用，作为小标题）
->  - 对上级部署（一般是省市出台的文件）
->  - 对听汇报人的关注点（此次汇报检查内容，汇报人所分管的工作）
->  - 对领导风格（多沟通。汇报人风格，有的汇报人喜欢听故事，有的喜欢听道理。）
+> 前提：对标（上级要求）
+
+- 对中央精神（可以直接化用，作为小标题）
+- 对上级部署（一般是省市出台的文件）
+- 对听汇报人的关注点（此次汇报检查内容，汇报人所分管的工作）
+- 对领导风格（多沟通。汇报人风格，有的汇报人喜欢听故事，有的喜欢听道理。）
 
 ## 一、立意
+
 ### （一）上级想听什么
+
 - 会议部署的任务
 - 上级相关提法
 
 ### （二）现状是什么
+
 - 存在的问题
 - 具体的措施
 
 ### （三）特色是什么
+
 - 单位的特点、特征
 - 相关数据支撑
 
 ### （四）亮点有什么
+
 - 创新点、先进人物
 - 总结提炼单位长时间做法
 
