--- a/UPLD/随笔002_思考记录，相信“复利”的力量.md
+++ b/UPLD/随笔002_思考记录，相信“复利”的力量.md
@@ -12,7 +12,9 @@ tags:
 <!-- more -->
 
 ## 一、信息庞杂，少即是多
-### 📔 我们现在是信息过载，不是信息匮乏。
+
+### 📔 我们现在是信息过载，不是信息匮乏
+
 我们处在一个信息产出冗余的时代，相较于古代并不发达的印刷技术，手机和互联网的普及使得每个人都可以是信息的生产者，同时，我们更是信息的接受者。
 
 有个数据，在互联网上，有90%的人事信息的消费者，只有2%的人在创作。看完后，自己不觉大吃一惊，就好像拼命向前的轮子，戛然而止。使我不得不思考一个问题：我们在消费信息的同时，信息也在消费着我们。
@@ -20,6 +22,7 @@ tags:
 勒庞在《乌合之众》中描述的集体的不理智，在当今互联网高度发达的催化下，变得瑜伽疯狂。我们今天还在谴责的男主，明天就发生了180度翻转，在网上开始带货；我们指责着新冠疫情给我们生活带来的种种不便，在网络中义愤填膺……
 
 ### 📔 减少信息对自己的打扰
+
 取消了各类的微信表情包，更多地用文字交流。诚然，表情包在一定程度上胜过千言万语，比文字更加胜多活泼，但也在倒逼自己文字表达的准确性和严谨性。
 
 🎉 **重要的新闻，你永远都不会错过。**
@@ -27,23 +30,25 @@ tags:
 手机上的新闻APP，公众号的殷勤推送，搜索引擎的热搜排行……当一个社会热点产生，手机里面充斥着相关信息，即便你对该事件全然无知，经过这么多信息源的“耳濡目染”，你马上就会建立起对事件的一些了解。所以，大可不必订阅更多的公众号，也大可不必为了追逐重要的新闻而产生焦虑，因为重要的新闻你永远不会错过。
 
 ### 📔 关注新闻事实，而不是观点
+
 作为信息的接受者，会产生一种不可避免的非主观的立场。这是对一件事情本能的反馈。如何避免被带节奏，如何在狂热的信息中解脱出来，才是接受信息的前提，如果不做分别，全盘接受，最后只会沦被他人信息左右的提线木偶。
 
 **更多的去关注新闻事件本身** 而尽量地抛开作者情绪表达的内容。
 
-
 ## 二、学会重复做一件事
 
 ### 📨 开始回归简单
+
 取消订阅了大批量的公众号，只留下了工具类的内容，卸载掉多余的信息源，kindle上订阅的RSS，手机上使用的是邮箱订阅的newsletter，通过一周左右的阅读后，留下5-6个。
 
 前段时间忙于工作，忙于寻找工具。因为早期接触“开源”比较多的缘故，也经历过网盘集体倒逼、各家笔记格式互不兼容的尴尬和无奈，遍寻各类笔记软件无果后，最终回到了文本文档，开始用此记录。
 
-`Vscode + Github_pages + Markdown语法 ` 成为了电脑记录的主要方式，本地存储备份，资料挂在自建博客上，开源和自建也免去了后期平台跑路收费的问题。
+`Vscode + Github_pages + Markdown语法` 成为了电脑记录的主要方式，本地存储备份，资料挂在自建博客上，开源和自建也免去了后期平台跑路收费的问题。
 
-手机上也找到了一个开源的 `Markdown `编辑器，手机应用也在精简中，短期内不会新增手机APP。后期大概率我是不会用苹果手机了。😃
+手机上也找到了一个开源的 `Markdown`编辑器，手机应用也在精简中，短期内不会新增手机APP。后期大概率我是不会用苹果手机了。😃
 
 ### 📨 强迫输出到发现记录
+
 之前也尝试过坚持每天输出一些文字，哪怕是三言两语的灵光乍现，或许是不吐不快的行云流水。都因为坚持、因为强迫性无疾而终了。
 
 我想，写作应该是言之有物的，是一种表的的强烈欲望。而不应该是用一种毅力去坚持的事情，过多的认为就变成了“伪”。
@@ -51,6 +56,7 @@ tags:
 不如转个弯，换个思路。就是去记录自己的思考，减少自己情感的表达，多读、多看自然会有想法，加上更加方便的工具，输出是不会少的。当然，目前我还处在数量的堆砌阶段，远没有达到对质量的严苛要求水平。
 
 ### 📨 重复做一件事情
+
 - 王信文的每周一更坚持了一年
 - 孟岩的投资实证进行了五年
 - 罗振宇在公众号 **得到** 坚持每天发一分钟的语音坚持了十年
@@ -58,6 +64,7 @@ tags:
 他们都有异于常人的能力和毅力，但都只是把一件小事儿做到足够长的时间。
 
 ## 三、思考代替学习
+
 ### 📆 坚持学习
 
 🎉 **每个段落只讲一个中心主题。**
@@ -65,12 +72,14 @@ tags:
 
 这些日子因为疫情的影响，自己可以自由支配的时间成倍增长。除了必须要看的会计和财管，也开始学习英语和中医课程，在Github上更新代码等事情。
 
-### 📆 忙碌容易让人忘记思考。
+### 📆 忙碌容易让人忘记思考
+
 充实感是忙碌带来的必然结果，尤其是学习这件事情，太多时间的投入和机械性的誊写容易造成认真学习的假象，要时刻警惕和反省。
 
 写作、学习都需要用思考来指引，多问几个为什么总是好的。强怕自己从庞杂的信息中跳脱出来也是这个原因。太多的信息容易麻痹和掩盖真相。
 
 ### 📆 给自己一个小目标
+>
 > 弃我去者，昨日之日不可留。乱我心者，今日之日多烦忧。
 > ——李白《宣州谢朓楼饯别校书叔云》
 
