--- a/UPLD/倪海厦_天纪005_紫微星在子宫.md
+++ b/UPLD/倪海厦_天纪005_紫微星在子宫.md
@@ -15,13 +15,16 @@ tags:
 
 <!-- more -->
 ## 一、前言
+
 诸位已经拿到案例讲义了，有十二张。我仔细跟各位介绍，这十二张为什么给十二张，我们所有的星，统统是按照北斗星君，诸位在排八字的时候就知道，是以北斗星君为主，其他星都是按照北斗星君在转，所以我们以紫薇星为主，所以，所以从第一张到第十二张，紫微星在子宫、丑宫，在寅卯辰巳刚好绕一圈回来，所以十二张，刚好紫薇星在十二个位置。如果以紫薇星来看的话，我们不看其他，就光以紫微星来看的话，八字就是这十二个。了解我的意思吧，那其他的变化，只是宫的变化，还有宫，命宫会转啊，还有科权禄忌，会转动、变化，但是基本上就是这样子。十二种形式，星都会聚在一起，因为这个紫微星，统统聚在一起，排起来都是一样的，这样子我们从这个角度来教比较简单，如果光教一些什么哪些星在一起叫做什么，什么什么格，这样教的话，你反而不好记。我们光以紫薇星来看。
 诸位，我们介绍的时候，一张张的批，会批得非常详细，利用批的同时呢，来教诸位如何看以外，还有如何批八字。统统结合例子讲。
 
 ## 二、紫微星在子宫
+
 首先诸位看第一张，辛丑年三月五号，戌时生人。我们批这个八字，为什么用这个八字，因为这个八字紫微星刚好在子宫，诸位先不要看什么命宫官禄宫财帛宫，你光看星，紫微星，转一圈。可能紫微星在子宫，命宫不一定在午宫，命宫可能会有十二个地方，了解我的意思把。
 
 ### （一）大原则
+
 那我们首先拿到一个八字，有一个大原则，诸位要知道。诸位来看，这个人，命宫在午宫，贪狼入命，紫薇星在对面，如果，我们以时间来说，各位注意看哦，所以我们在批的时候来讲，贪狼星呢，他是一个桃花星，但是，贪狼星有个大原则，他以在亥子宫，亥宫是晚上9-11点，子宫是11到凌晨一点，这两个宫，我们又叫做水宫，如果贪狼星在**亥宫或者在子宫才是正格桃花星**。如果贪狼星在午宫，你不要随便乱批桃花星哦，他不是桃花星，他是武官星，那贪狼、破军、七杀，这些武官星呢，最希望，最好是，碰到火和铃，所以你们看书，会有一句话，叫做：火贪格，火贵格。就是主出武贵，武官。
 
 ![紫微星在子宫](https://preview.cloud.189.cn/image/imageAction?param=9E849DF6021CDFC48C5F248D2B31B2160C752CD7932B7DB983FAB6473332944D03A01A5962E270FDED0874A196528F33387EBA6A06DD1DB5373FC87849810A54609F539BB184E0A82EFEBB90E1D5E2DC3F2A4728E8B4FDFF56E2EEFF8E023B3879B473D33BE9593C5345B7ECE453D25E)
@@ -29,23 +32,30 @@ tags:
 诸位，所有的午时坐命的武官，晚上的贪狼星，要长得高大，魁梧，女孩子男孩子都一样，肥厚，午时的贪狼，武曲、七杀、破军，反而要长得很小，越小越瘦越好。举例，你看我们王生就是这样的命，你看他跑出来，干干的，红红的，头发往上面翘，这是标准的火型的人，火形的人，所以王生是将军。那火格就是瘦卡卡的，你看那个林文礼，也是矮小的，空军最矮的就是他了，他是总司令，那是大贵！反而是大贵，所以你们批八字，不要乱批哦。今天以前，你们看到的好的，其实是反的，懂不懂我的意思，
 
 #### 1.相上的五种形
+
 我们在相上面，把人分成五种形。
 
 ##### a.木形
+
 一种是是木形，瘦瘦高高的，像王永庆就是木形的，那木形的人呢，我们要形出现，一定要纯，很纯才行，比如说你脸很瘦，手很瘦，肚子很大，那不是木形，要纯木，要从头到脚都瘦，连那个脚伸出来都是干干的，手伸出来也没有木，纯木。
 
 ##### b.纯火
+
 纯火呢，也是干干的，但是红红的很热，好像火焰山那样的头。土形的呢，就是厚重，像我们过去的总-/统，经国先生，就是土形人，很厚重，土是地厚嘛。所以头就是要圆圆的，脚一定要方方的，地是方的，天是圆的，手伸出来也是厚厚的，摸到没有骨头，然后全身圆圆的厚厚的，重重的，这才是纯土形的人。你如果遇到一个土形局，脸圆圆的，其他都像啊，结果手伸出来，干干的，就不是纯土形局的人。因为他有一个部分不合。
 
 ##### c.金形
+
 纯金形局的人呢，比如说，什么叫金，金是白色的，所以要方方的，金属都是方形的，像钻石切割出来都是方方的，白白的，手伸出来，都要是方的，我们的林洋港林院长，就是金形的。
 
 ##### d.水形
+
 水形局的人呢，要圆圆的，到哪里看，从哪个角度看，都是圆的，谁呢，我们的考试院长，邱焕，脸是圆的，额头也是圆的，手伸出来也是圆的，厚厚的肥肥的，圆形的，这是水形局的人。
 那我们在相上要成局的人，一定要纯，越纯的越贵，非富即贵。这是第一个看相的原则。
 
 #### 2.特殊相位
+
 ##### a.南人北相，北人南相
+
 第二个，有两句话送给诸位，诸位看相书的，都会看到，南人北相，北人南相。这在过去大陆上看的最明显，长江以北，北方人大口吃肉，大碗喝酒这样的吃，一直吃，所以北方人看起来很高壮大，你看山东人又高又大，哪一个突然跑一个山东人出来，瘦瘦小小的，皮肤白白的，娇娇细细的，这叫做北人南相，大贵。长江以南的南方人，如果你是南方人，台湾人，广东人，这边都是南方人，南方人跑出来，因为南方是鱼米之乡，所以比较斯文秀气，结果跑出一个南方人，比那个吃馒头的人还高还魁梧，那叫做南人北相，这也是非富即贵，这些特殊的贵相诸位要知道。
 
 那我们为什么算命要去看这些相，光算命的时候，在我们这里，只是占了三分之一，**我们有天文、地理、还有人事**，以后我会慢慢把这三条路并为一条。那在介绍相的时候，如果有办法，先不要管人间道和地理的部分，光是命的部分，如果能够把命相同参的话，会增加算命的很多准确性，帮你做加或帮你作减。会有这个好处，所以我要跟给位介绍这些东西。
@@ -53,19 +63,27 @@ tags:
 各位来看这个，贪狼入命的人，一般有生杀之权，然后你看到他下面有个天魁星有没有，有没有看到，天魁星是主什么，主发科甲，代表这个人有文有武，**贪狼是武，天魁是文**，是不是文武双全。如果这个文武双全，给一个男的，那太好了，有的女孩子很不幸，拿到这种命，很累哦，那我们算命就跟她说，你这是男命女身啊。诸位看了她的命宫以后，我们再看看她的官禄宫，我们批一个八字，先定她的三方四正，先看她的本人。
 
 ## 三、迷津
+
 所以我们算命，分两个部分，先叫做迷津，指点迷津；第二个部分，是批流年。这两个都是属于算命的内容。当然，我们还有三、四，还又运的部分，还没有介绍。
 
 那官禄宫，是坐七杀和擎羊，我上堂课就跟各位讲过，那个杀破狼是一定会在一起的，那官禄宫是最喜欢是权星入进来，掌权的星进来，那我们命上有几种权，有几颗星都代表权。
+
 ### （一）代表权的星
+
 #### 1.四化星
+
 第一个就是四化星的化权；
 
 #### 2.紫微加上七杀
+
 第二个就是紫薇加上七杀，紫微星加上七杀同宫，这两个也代表权，话句话说，有一个官禄宫是化权，有一个官禄宫是紫微七杀，这个时候呢，他是官权加重，非常好，那现在这个人的八字的官禄宫只有七杀跟擎羊，没有化权，所以他当官，势必不要，有人当官好，她当官就不好，当官要有权才行，要不然当个小官干吗？
 
 #### 3.财星和权星
+
 还有一种，官禄宫很特殊第一种批法，如果呢，财星跟权星会在一起，那就变成什么？变成银行的总经理啊，中国银行的总经理，财权很大，一批就巨量100亿，但是不是他自己的，这叫做财权。那财权的人，如何去看呢，注意看鼻子，这鼻子下来，有两种是本身的财，像狮子鼻子那样，很肉，你什么时候去动物园看看狮子的鼻子，很大很多肉，还有悬胆鼻，很直，瘦瘦长长的鼻子，这种人是大富，如果他没有这种鼻子，很挺，长得很好，肉不是很厚，然后他的颧骨很大，这种人就是掌财权的人，你手握过去他手软绵绵的，贵和富的手都很软。那你官禄宫有煞星在里面，那你当官当然不容易了。
+
 #### 4.财帛
+
 再看看他的财帛宫，各位看他的财帛宫这里，有写一个身宫，看到把，我本来想跟诸位介绍身宫，可是我觉得在批的时候介绍比较好。我们这个身宫，定义是什么，**简单讲就是后天**，比如身宫在财帛，他就会在私人企业做事情，如果身宫在官禄，她自然就会去公家机关上班，身宫在迁移，他自然而然去到外地去发展，有的人身命同宫呢，那就是他的先天和后天都是一样的。
 
 比如说，我的命里面化权化禄，然后我身命同宫，我生下来家里就很有钱，然后长大了，继承祖业，就一辈子讲完了。
@@ -82,11 +100,13 @@ tags:
 那像这种人呢，专科技术专长，然后破军星是要流浪在外，走天下的，专业技术专长，她要捧着饭碗走天下。那你说老师怎么看她的相，后面的脑壳是这样子的，这是脖子，他的骨头是这样子的：这种人，一辈子，到处四海为家，但是她唱歌好不好，唱的真好，虽然脸不怎么样，但是唱歌唱的真好。然后她声名远播。看后脑勺就能看到。
 
 #### 5.迁移
+
 接着看迁移，迁移是坐紫微星，紫微星在子宫，我一再跟诸位前面就讲过，紫微星一定要有左辅右弼来会合，结果她是紫微星一颗星在外地，有没有，是不是子，有第一个解释，我们批正格的时候，是讲迷津，是讲一辈子的，我们不管你几岁，我们先把你的终生先讲出来，第一个，你紫微星在外，代表你到外地去会逢到贵人，紫微星是皇帝星，大贵星，第二个，这个紫微星来说，就是你本身也是紫微星，你一个人在外地，到头来是孤君，孤独的皇帝。
 
 从这些迹象显示，我们看到，一个女孩子的命，拿到男人的命，然后又在外地，孤单的话，恐怕先生就会有问题，这个时候就有暗示给我们了，这个我们就要注意看，已经暗示我们了，这里，了解我的意思把，所以你会不会让这个女孩子去当官，不会吧，她一定走财方面发展，走私人公司发展。所以你看她天魁，天钺，化科星进来，这是我们算命的第一个重点。
 
 ### （二）第二个重点，诸位我们看左右
+
 天同、巨门化禄在父母宫，还有呢，兄弟宫，太阴落陷，注意看这个陷。为什么太阴是限，因为这是巳宫，巳是代表上午九点到十一点，结果月亮出来，了解我的意思把，巳时应该出太阳，结果月亮跑出来了。
 
 那你看，酉时，是不是太阳在这边，也是陷地。这里我要提醒诸位一下，我们看女孩子的太阳和太阴，一个人的命，月亮太阳，就代表爸爸妈妈，所以天和地，太阳和太阴，在养众生，就好像父母亲在养育子女，是一样的象。那她的太阳是陷，太阴也是陷的，一般来讲，这样日月反背的人，一般来说，只要太阳、太阴是反过来的话，**大部分的人是离祖，离开家乡，到外乡去发展。**这个八字，目前人在国外，在美国。
@@ -96,6 +116,7 @@ tags:
 第三个解释呢，一般来说，日月反背的人，她做的有些事情，会让她父母为她担心烦恼，我这里讲的很直接，因为每一个八字担心烦恼的角度不一样，像她，一会我们会讲夫妻宫，可能是因为她很好啊，可是到了中年的话，万一她先生有事情，出事了，她后来一个人带着孩子，那诸位想想，爸爸妈妈肯定会担心。
 
 #### 1.什么叫克，什么叫旺
+
 那过去的书说日月反背，克父母。但是他们没有把这个克解释的很好。这里我顺带解释一下，什么叫克，什么叫旺。
 
 因为中国以前是竹简写书，刻下去很麻烦，所以我们陈述事情陈述不完，但是精神是一样的，什么叫精神，比如说我走到路上，不认识你，我说先生，你借我十万块我买车子，你不把我当成神经病，我没有克到你哦，没有害到你哦。可是如果我是你弟弟，我说哥哥，我出车祸了，把人家撞了，赶快给我十万块给他，要不我要去坐牢。你给了，这就叫做克。所以说，能够影响到你的，他克的到，懂不懂，克不是说跟父母感情不好，是感情太好了。
@@ -111,6 +132,7 @@ tags:
 所以**一个宫里面有个原则，就是你有煞星在里面，吉星来了，煞星力量就很差**，什么吉星都没有，一个小煞星，哪怕一个地劫或者天空，可能就会要你的命。后面我们有很多案例给诸位看。很多都发生了。
 
 #### 2.疾厄宫
+
 诸位看她的疾厄宫，各位有没有看到，第一个肾脏，为什么肾脏，因为酉宫化忌，你不要管他什么化忌，化忌最不好了。我常常给别人批八字，想把这个忌给你擦掉，可是没有办法，擦掉的话，没有警告啊。化忌在酉宫，酉宫代表肾，这是第一个。
 
 第二个，你看她诸宫里面，所有的星里面，是不是火星、地空在这个地方，在丑宫，疾厄宫里面，是不是，疾厄宫在丑宫，丑宫在内脏中代表肝，然后正因为是个女孩子，然后看整个命盘，头肩胸左右两边，这个正好是妇科子宫，右边卵巢的地方。左边是紫微，右边是火星、地空，对不对？妇科一定不好。
@@ -118,6 +140,7 @@ tags:
 先跟她讲好，讲好以后，什么时候不好，我们在后面批流年给你看啊。现在还没有批流年，**现在批的是整格。这一辈子要注意的事情，迷津就是这辈子要注意的事情。**好，诸位看，我们最后讲婚姻，婚姻最精彩哦。最后讲。
 
 #### 3.朋友宫
+
 好，我们现在看朋友宫。在这边，是天机天马，这种星，你注意看，我们有主动和被动，她的命里面，朋友宫是天马，天马星落在朋友宫，你注意听我讲话的顺序，她的天马星落在朋友宫，所以她会为朋友奔波跑动，有的天马星在子女宫，有的天马行在父母宫。
 
 天机星是一个很平和的星，如果有很多财星吉星落在朋友宫的时候，意味着跟朋友合伙做事业一定大赚钱，如果有很多空耗的星，比如羊陀火铃，空劫，或者化忌，巨门这些煞星口舌星在朋友宫的话，代表她跟朋友合伙的话，会朋友变仇人，上帝也没有规定好朋友合伙会赚钱，没有哦。这是原则。
@@ -125,6 +148,7 @@ tags:
 一般相士说哎这是忧喜参半，这不是废话，你跟他说，你这位小姐，你这个命的人，最好一辈子靠自己，你交朋友好了，你朋友交多了是你方负担，你靠不了朋友。这样批才重要，你忧喜参半，这不是废话。
 
 #### 4.子女宫
+
 很多人算命，跟人家说，你命犯小人，你命有贵人，这种话都不要讲，你知道什么叫命犯小人，我有有没有解释过，你命中有小人，他看到小人，就会相信，他就对小人特别有兴趣。好，诸位来回头看这个子女宫，子女宫是不是一个空的，空空的，对面是化忌，我们看宫，一定要看对宫，子女宫空的时候，没有的时候，我们要看对面，懂不懂我的意思，这个子女宫的对宫，是不是在这边，对宫是不是化忌，煞，所以说无子！没有儿子。
 
 一般来说，我们要看先生的命，如果先生的命中有儿子的话，跟她的命中，夫妻八字合在一起，先生命中有2个，太太命里没有，还是照样会生两个哦，生两个都比较像先生。那女儿不知道。
@@ -138,11 +162,12 @@ tags:
 现在社会上很多人，他认为事情之前不可能，事情之后他就后悔，我们学了这个不能有这种经验哦，有些事情是可以得的经验，有些事情是不可得的经验。
 
 #### 5.夫妻宫
+
 夫妻宫：诸位看，廉贞星、天府星在夫妻宫，这个廉贞星，本身是很清廉的，当官有廉贞星很清廉的，逢到天府星，南斗星君在里面，这两个加起来，是很温和的星，这种人，长得很清秀，很漂亮，个子不高，也是很正派，厚道的一种人。
 
 但是你注意看她的夫妻宫，我们看的话，要看三方四正。
 你看她的福德，是武曲、天相、陀罗陷，右弼，铃星，那看他的三方四正，红线画出来，
- 
+
 你注意看她的先生，夫妻宫，请问你，是不是科、权都没有会到，都没有，像科权禄都没有会到，这种人，叫做正才。有的人，命宫在这里，三方四正中科权禄都没有会到，是正才，正财正官，就是一辈子要帮人家做，领薪水，因为你命里没有科权。
 
 她的先生没有科权禄，反而太太有科在里面，虽然她先生很好，但是适合帮人家做，领薪水，到老了拿退休金养老就好了。
@@ -151,9 +176,12 @@ tags:
 我们算命呢，就是要把问题找出来，如何让她生儿子，是我们化解的方式。算命的功能就在这里。这是我们看`总格`的时候。
 
 ## 四、流年
+
 好，我们来看流年，诸位还没有进入天文地理同批的时候，所以地理我们先不要加进来。我们先算命。书你自己看。
 批流年的时候，**诸位要观象**。不要拿书背起来，背起来也不会批的哦。
+
 ### （一）第一个流年
+
 诸位看第一个流年，我把它放大。这个是田宅宫，34-43岁，宫里有几颗星，太阳化权，有没有，天梁、禄存，文昌化忌。为什么要你看这个，34-43，这十年中间化忌，而刚好跟太阳是同宫，女孩子的命，太阳就代表先生，代表丈夫，代表儿子，所以第一个，我们看这34-43之间，十年之中，上不见父，下不见子，中不见夫，这一出来就很煞，然后我们再一看，糟糕，这个人命太强了，这种人孤军奋战，女孩子，是武官命，武官命是适合一个人去打仗，也是划不来嘛，一个人去。可是她先生很好啊，那为什么她先生那么好，那她到头来为什么会这样一个人去孤军奋战的现象，哦，原来她在这个时候会有灾，第一个，34-43岁之间，太阳处于化忌，这十年会发生这个事情。
 
 举个例，如果在你十几岁，比如说14-23岁，这十年之中，这边有个太阴星或者太阳星落陷，看不到，那就是这段时间，你的父亲或者你的母亲会有问题。以此类推，推到这边，对她来说，太阳代表什么，她先生，你看她44-53岁这十年大运，是七杀星在本宫，值令星，也就是说，44-53岁她一个人孤军奋战，一个人在那边做事。好，这是一个十年大运。
@@ -161,13 +189,14 @@ tags:
 那这个是民国50年生的，今年虚岁34岁，会不会算啊。那我们看看流年。重新来过。这个摘要赶快先讲。让我们事前发现到。
 
 我们从这个戌宫，起子，她是辛丑年生的，属牛的，子丑，是不是在这里，未宫落25岁，37岁，是不是在这边，男孩子顺转，女孩子逆转，今年算她几岁，37,36,35,34落这边，有没有问题，很快就找出来了，现在这个会算了把。各位，田宅宫这里是34-43，太阳在这边，其他星不要写了，化忌，田宅宫。那34岁是事业宫，夫妻宫在对宫这边，34,35,36,37,38,39,40岁。
- 
+
 现在外面很多人算命算的不好，问题在哪里，就是没有把宫解释出来，这个宫，我们在批流年的时候**宫位当年值日发生之大事。**
 
 举例，今年34岁，她来找你算命，今年的流年正好在事业宫，她就是今天来问你，想问事业。如果是明年来，就是问田宅问财产，后年来福德宫，就是问婚姻，如果她是40岁来找你，她就是来看夫妻，你懂我的意思吗？
 
 所以，一个宫就代表她当年发生的，最想问最严重的事情。
 那这里有两种大限计算的方法：
+
 - 一种是未来十年，无大运，大限在今年。
 - 未来一年无大运，大限在前一年。
 
@@ -180,12 +209,15 @@ tags:
 所以她40岁有这个限，刚才是提供我们的那些资料，待会后面还有一个她女儿的八字，她今年生到女儿，结果她女儿七岁的时候，她爸有灾，从她的命看到了，从她女儿的命也看到了，从她的命看到还不见得一定是对的，为什么，跟这位小姐同时间生的人很多，不一定嫁同样的先生，对不对，那刚好，她女儿命中也是这样子，这个时候我们就要注意了。这个流年的一个限。那这样的一个大限，我们如何取解他.
 
 ### （二）阳宅死先生
+
 房子来说，东南西北，有两种阳宅死先生，死老公的哦。
 
 #### 1.厕所在房子中间
+
 第一种，厕所在房子的中间，它没有临靠的边，你不要管门哦。我们讲易，把阳宅简化，四个字就讲完了，你不要管门怎么开，厕所隔在房子的中间，这是凶宅，这种死的一定是心脏病，中风，气喘。
 
-#### 2.西北角是厨房。
+#### 2.西北角是厨房
+
 第二种凶宅呢，西北角是厨房。西北角是乾卦，西南角是坤卦，太太住到先生的位置，是地天泰，那乾这里如果是厨房，厨房是刀象，所以这个也主夫妻死别。
 
 厕所在中间位置，为什么主心脏中风气喘呢，诸位看，一个门，如果你厕所有靠边，就会有开窗，开就是方格子，如果你一个门在那边，没有窗户，就是一个心脏闷到的象，象不对，所以我们看东西，精神就是象，所以以后室内设计再怎么设计，那个神还在那里，懂不懂，我们取象最准。了解我的意思吗？那有学生问我，厨房如果在坤方，是不是死太太？厨房在东宫，是不是死长子，东南宫死长女，在北方死儿子，以此类推，但是阳宅占三分之一，必须你命上有灾。
@@ -200,12 +232,15 @@ tags:
 我们要告诉她，你这个小姐，你一定要坚心哦，想住西北角，很好啊，可是好的时候要警惕啊，我提醒她。我们所谓做阴德，今天很多人去帮人家忙，洗碗洗衣服，这些都是交易。什么是阴德，我帮了她她还不知道。可以啊，你要不信，你可以以身试法，看我是不是对的，也无所谓啊，你没有这个经验，怎么敢跟你讲这个话。这是我们算命的一些功能。
 
 ### （三）无子宅
+
 #### 1.缺东宫
+
 这里还有一点，我们有两种无子宅。一个房子，东南西北，一个房子，不要管别的，你看东边，是客厅，是空的，缺东宫嘛，你缺东宫，当然没有儿子啊。随便你睡哪一间，东宫是不是客厅，这个东边，跟你睡哪一间没有关系。
 
 #### 2.床压倒东边墙
+
 第二种，叫做没有儿子的阳宅，有的人家里，东边呢，有个房间，但是床好死不死，压到东边的墙壁，压到东边的墙壁要负负得正。
- 
+
 举例给你听，我这个房子这里是东南西北，如果我们这间房间，是夫妻的主卧房，把床靠在那边，那生下来的就是女儿。
 
 可是同样一个宫，在东宫这里，有的人家里有房间，把床移开来，不要靠东边，靠北边，或者靠西边，生下来的就是儿子，所以过去哦，如果我早生几年，中国妇女解放了，知道为什么吗，那个四合院同样的房子，那个婆婆就说，大媳妇住那个房间，生儿子，你是二媳妇，同样住那个房间，就生不到儿子，其实她是冤枉的，因为二儿子娶媳妇，她把房子重新装潢，床搬动了，生不到儿子，就是床压到东边墙边。儿媳妇被婆婆整惨了，就这样子。
@@ -215,21 +250,27 @@ tags:
 你看我们算个命，他有这个问题，我们马上给他解掉。你刚结婚，我们就要告诉他，你的命中没有儿子，你专挑这种没有儿子的房子去住哦，那个人很好玩，一个萝卜一个坑，他的命中没有儿子，他找来的房子，都是这样子，看了七八个都是这样子，然后好不容易找个有东宫的，他床头靠那边。这个时候我们用运推一下他就好了。那你说老师我房子没办法住，没有关系，你跑到客厅来行房就好了。客厅住只是暂时的嘛，一个月就那三天，你哪里每天都怀孕，那是怪胎，我们要住西北角，这才是夫妻一世的位置，懂不懂，那怀孕只是暂时的，如果到东南边怀孕就是女孩子嘛，东往北就是男孩子，对不对，懂不懂，阳宅上，你看东边，东南是长女，东边是长子，东北是三子，所以东往北斗是男的，东往南都是女的，有没有，那你要先男后女，还是先女后男，自己挑啊，至少比那个天天喊一男一女好的积极把。喊得口号都很难做到的。嘴巴讲没有用，要实际上去体会。
 
 ## 五、六十四卦
+
 ### （一）水雷屯[䷂]
+
 #### 1.卦象
+
 ##### a.屯象
+
 首先呢，诸位看，我们前面介绍了乾为天，后面介绍坤为地，就是天地定位之后，有天有地以后，开始了，所有世界上的万物都是夹在天地之间，物之始生，物啊，任何东西，**刚开始出来的时候，就是屯！**
 
 所以易经就是这样一个个动作推下来，我们先定天的德，地的性，定了之后，天地之间，开始第一个爻定出来，有天地之后，第一个出来是屯，屯的象，因为物之始生，阴阳刚开始交，叫做物之始生。如果阴阳始交，未成泽，就是屯的象。
 
 ##### b.泽象
+
 如果已经成泽，就是雨都下来了，掉在地上，一个水洼一个水洼的，已经成泽，就是为解卦。
 
 ##### c.否象
+
 如果天地的阴阳不交，完全不交，否。所以阴阳始交为屯，已经交了以后为解，阴阳不交的时候就是否。
 
 那在人间来说，刚好逢到天下屯难，未亨泰之时也。诸位不要忘了，这个水雷屯。`卦呢，指的是事，爻指的是事之时也`。事的时机，很重要。现在我们介绍水雷屯卦。上面是水，雷呢，初阳。
- 
+
 上面是水，下面是雷，这是物象，卦的象，所有的爻呢，是事的时机。我们可能从这个爻入手，也可能从这个爻入手，凡是你这一辈子遇到屯的时候，就是说没有亨通的时候，你不了解，**物之始生**嘛，包括刚开始进一个公司，包括你换了一个新环境，完全不了解的时候，都属于屯。那你有时候接一个位置时，有的从最低开始干，有的从君王开始干，进去的时机都不一样，我们用的态度统统不一样，这是我们以后介绍爻变的时候，重点在这里。
 
 屯卦呢，以卦体而言，这个水就是坎卦，是`险`，诸位以后看到坎，看到水，就是险，雷呢，代表震，代表`动`，动的象.
@@ -237,8 +278,11 @@ tags:
 卦体是照样，外卦是险，内卦是动，他整个卦就是：心里面想动，可是外面是险，外险内动，遇到这种情形，你想动，而不明了外面的时机，所以屯卦就是要告诉我们，要坚心，在哪里呢，以明而动。不明而动，则动于险中。不动还好，一动就危险了。当然选择不动啊，不动比危险要好啊。
 
 我们老祖宗看到物之刚开始的时候，对外不明，所以呢，易经里爻辞写了，利建侯，诸位以后看到这个利建侯，就知道屯之时呢，要去广结善缘，广招辅弼，广结贤能的人，找资助，找辅弼的人才。这个是先不要动，待时而动。
+
 #### 2.爻辞
+
 ##### a.初爻
+
 那易经呢，如果你是初爻，第一爻，如果你是屯的时候，你刚开始进去的时候，你的职务是最下的，在下，从小兵开始干，易经说，你要**盘桓，利居贞，利建侯**，两个利。
 
 我们晓得，这个阳爻，代表刚，阳刚，代表就算是再有能力的人，你刚开始，居于下位的时候，要盘桓，不要剧进，不要急于求进，很多人第一天报道，第二天就想干科长，第三年想干处长，就是剧进啊，要盘桓，盘桓的时候，为什么要这个利居贞，即使还没有得到你想要的，你要`坚心`，不能动，还有利建侯，广交贤能之人，这是始，第一爻的时候。但是盘桓的时候，一定要利居贞哦，这是一个原则。这个原则我们在天地里面就讲过了，要有刚，要有你做事的原则。有一句话，君子和而不同，小人同而不和。为什么，就是君子有他自己的原则，就算今天发生冲突以后，我们事后和解，但是我不能改变我的原则，小人呢，同而不和，如果有了纠纷产生了以后，小人目的就是要钱，一旦给钱了，好好，马上和解了。君子不会，一定要对他的行为负责。
@@ -248,6 +292,7 @@ tags:
 后面还有一个他的象，一爻，有个原则，叫**以贵下贱，大得民也。** 以前我们有一个人做到了，谁呢，严家淦，严家淦先生很好，怎么讲，他就是盘桓，他刚到省政府报到，不了解里面的人啊，屯啊，他以贵下贱，他对他下面的人，不要说职员了，他对下面的工友都很高兴，对他很好，对他很尊重，你好我今天来这里报到还请以后多多照顾我多帮帮我谢谢你。他离开省政府的时候，他跟每个人都握手，包括门口的工友，谢谢你我这几年都是靠你们帮忙照顾，有空来看我。这是什么，以贵下贱。
 
 ##### b.二爻
+
 六二，易经上面讲六，代表阴，你别真的来个六啊，易经上面讲九，代表的是阳，六二的意思就是说第二爻为阴，像这个第一爻为阳爻的话，也可以叫九一。或者初九，初爻为阳爻，以此类推，这个叫什么，九五！所以是君王的位，九五之尊！
 如果你是将，你是一个银行的经理，换到另外一个银行去当经理，你去的时候，里面的人你通通不认识，也是屯的意思，处在这个时候，易经也说了，如果下面有很多手下，要屯如邅如，乘马班如。匪寇婚媾，女子贞不字，十年乃字。这都是易经是原文，为什么是这样子？
 
@@ -255,16 +300,17 @@ tags:
 我们看这里，也是十年乃字啊，十年了就跑来了。很好玩，就在这个点上，他为什么早不来晚不来算。
 
 ##### c.三爻
+
 六三呢，第三个位置是阳位，结果是阴爻，阴爻居在阳位，那这三个是动，上面三个是险，那是不是这个第三爻**跟险最近**啊，所以易经给六三下个定义：
 
 > 六三，即鹿无虞，唯入于林中。君子几，不如舍。往吝。
-
 
 吝就是咎、悔恨，意思是说，当你到了象的位置的时候，你发觉上面是险，跟你的君王之间有一个阴的爻夹在中间，代表你的想法、好意、忠心，没有办法直接传到君王的耳朵里面，因为君王被群阴所包，你跟君王之间隔着一道阴柔，了解我的意思把，结果你很好的意见给他，他拿去给君王就变质掉了，这个时候怎么办，这个时候易经说，就好像即鹿无虞，这个**虞是向导**，你到树林里面去打鹿，结果你没有导游，鹿没打到，自己迷路了，遇到这样的情形，我们晓得前面是有险，对不对，如果没有导游，君子宁可舍掉，你不要想办法从这边跨越过来到这边来，越级，以为很好，结果会受到伤害，你的信用也受到影响。
 
 即使你当时能成，这个阴爻也会说你为什么跨越过我，遇到这种情况的时候，不如舍，就是舍掉。易经告诉我们进退取舍之道。舍掉，不要干了。再往前走，就一定会得到悔恨。你一碰到这种情况，马上不要干了，马上离开，你要是不信邪在干下去，就往吝了，遭到纠纷。
 
 ##### d.六爻
+
 那你如果再进一级，六四，易经说：
 
 > 乘马班如，求婚媾，往吉，无不利。
@@ -272,6 +318,7 @@ tags:
 为什么这么讲，六四这个是阴爻，因为近于君，为什么这个是屯，屯的意思是你不明，你如果进去的位置，刚好你爸爸是董事长，你是总经理，你不明了情形，对不对，你一进去，就是这个象？乘马班如，求婚媾，往吉，无不利。为什么说求婚媾，不是真正去求婚哦，而是说你要真正去了解情形，代表你的才能不到那边，要用贤人，到手下去发觉贤人，求婚媾，好像求结婚一样，去发觉贤人，找贤人来辅佐你，所以每个位置有每个位置不同的做法，如果两个经理，你刚好进来这边，他刚好进来这边，结果他要跟君沟通要经过你，结果你正在找贤，他不干了，他离开，赶紧把他找回来，贵人呢，君子、人才，难进易出，他为什么赶走，他到哪里都有工作啊，小人易进难出，你赶他都赶不走。所以第三爻这个人要这个人的立场，第四爻这个人要有这个人的立场，那你要考察下面的人是不是贤才，你考研他们，故意做成坏人，故意装傻，让下面所有人的意见反映不到君王那边去，你看离职不敢的可以把他抓回来，还继续呆在那边的就是小人。这是辨识君子小人，64个卦讲完了，整个人间道就出来了。这是六四爻的意思，因此如果你处于天子之下最大的，宰相之位，一定要举用贤才。你不明了，一定要举用贤才,千万不要太相信自己的能力。
 
 ##### e.五爻
+
 如果进入九五，来这个公司，一进来就是董事长，易经辞曰：
 
 > 屯其膏，小贞吉，大贞凶。
@@ -285,6 +332,7 @@ tags:
 有的人，过去有句话，周王那时候诸侯权重，鼎还在朝都，有一次楚国的使节就问九鼎一个有多重，叫做**问鼎轻重，必叛**。如果你有一个朋友来问你，请问你你有多少钱，这就叫做问鼎轻重，这种一定是小人，你管人家啊？我曾经骂过一个小人，他在后面讲我坏话讲了十年，他在结婚前跑来问我，他问你知不知道我的未婚夫银行存款有多少钱？问鼎轻重。如果你是律师，如果有个人来问你，请问你什么时候考上的，办过多少案子，这就叫问鼎轻重，知道吧，尤其是你的手下来问你，必叛，要注意，履霜坚冰至哦，这是我们老祖宗告诉我们的。所以，处屯之时，特别要谨慎。
 
 ##### f.六爻
+
 那到了九六之时，第六爻的时候，上六，最上面是阴位，是阴爻，柔，阴柔居，屯之极。这就好像，险极又无援。很危险又没有外援的象。上六的爻辞怎么写：
 
 > 乘马班如，泣血涟如。
@@ -294,6 +342,7 @@ tags:
 所以上六，这个爻，一定要有阳刚来住，用贤乃解，贤要用阳刚之人。这个阳刚之人，包括你在法律上，是阳刚的，或者是领导力很强的一个人，这个阳刚之人是一个形容词啊，不是一个名词啊，代表一个个体。一个政体。你不要找黑道来解决啊。这个阳刚代表政体。法院是正体，警察局是正体。那君王没办法，他求外援，对不对，找美国帮忙啊,就是这样子。所以说，如果到了屯的极限，你不知道怎么为，就很危险，你赶快要外求，就不会有事。
 
 #### 3.图解
+
 诸位看这个卦上的图解。
 
 ![水雷屯](https://preview.cloud.189.cn/image/imageAction?param=DB1F7EA5BB929AAE5D75FFFD2234CCD83F5D092496B0F109E59D3337FF616DB89E8D4B194C3BAED43D49C9252CBDF7EC797189A858DDEBD60BE55E552516F0965E8E01B9ED8E94B2BD96AE97D776861ECCB7C9C1CDE4FB78C4A7676F238DD82CD422381A0D6847FE35500E28BDA046AC)
@@ -315,7 +364,7 @@ tags:
 他来找你卜卦，又不信，这种人，就是活在事情发生之前，认为不可能，事情发生之后又后悔，世界上十之八九都是这种人。
 
 - 有个人在那边望，如果卜疾病，人亡，望者，亡也，这个望字是不是这样写，旦夕而亡。快挂了，快走人了。
-    
+
 - 人立在那边，人立是不是位啊，意思说在位也。
 
 - 这里画了一个盒子，盒子是先成后破。如果你卜到这个卦，如果你要动，他的结果，先成后破，所以，卜到水雷屯的话，告诉他，如果你要事情很快地解决，去找个属牛的，那你说我爸刚好属牛，那你赶紧找他去，你说我这辈子就不听他的话，所以你这辈子就是水雷屯。你懂我的意思吗。
@@ -335,6 +384,7 @@ tags:
 我们算命很厉害，算命是谈果的，我们卜个卦就弄的很清楚。诸位学过以后，千万不要拿不义之财，一个人财一辈子有限的哦，如果该拿三千块，你拿了二十万，改天你就出一个车祸，刚好赔19万七千块。包括你的车子，他的车子，还有你的身体健康在内。不该你的就不要去取。
 
 #### 4.阳宅
+
 哦，还有阳宅。水雷屯的象从哪里来的呢。二子是坎卦，长子是雷卦，次子居长子位，就是屯卦出现。
 
 为什么我们要讨论阳宅上面，你住的位置不一样，你的念就不一样，你的想法就不一样，想法就会影响到做法。你可以试一下看，如果你有二儿子，你试着让他住到大儿子那边去，他就变成水雷屯了，然后你看，早上起来，他就在那边观望，看看大家在干什么，这是第一个，只要有书信来，好的事情，比如你婆婆打电话来说来吃饭，刚好是你二儿子接的，好我知道了，他就不讲，不说，屯啊。他说她请我吃饭就好了啊，关你们什么事啊。他想法就改变了。
@@ -352,15 +402,18 @@ tags:
 我们在观屯的象的时候，如果他位置住错了，我们在批八字的时候，要做加减，以后我们卦介绍完了，我们后面进度会慢慢加快，大家对卦熟了，我们就进度加快，到时候我们天文地理放在一起看，那屯卦如何做加减，比如他的命中看，他的二儿子命里是28岁结婚，结果你不晓得阳宅，二儿子住到东宫上面，结果26岁就结婚了，你懂我的意思吗，他提前了嘛，结果他大儿子住坎位，结果哥哥听弟弟的。弟弟变成大儿子，然后呢，变成弟弟结婚，哥哥还没有结婚，这世界上这种事情太多了，对不对，不然你告诉我为什么，找不到更好的理由，就先听我的，先迷后得，先假设是对的，然后去验证。
 
 ### （二）山水蒙[䷃]
+
 从屯，水雷屯，物之始，古代圣人授之以屯的时候，屯之后呢，开始有智慧，智慧开始了，就是蒙。山水蒙完全谈如何启蒙。你是笨蛋，没有关系，启蒙的方法对就好，所以启蒙的技巧很重要，所以各位能够把山水蒙的卦意了解，你如果了解的话，你就是大智大慧的人，启蒙呢，为什么说蒙，是山下有水，这是水雷屯的续卦，一步步进来，小孩子先生出来，在妈妈肚子里的叫做屯，一生下来呱呱落地，就是蒙了，为什么叫做蒙，从卦体来说，上面是山，下面是水，**山下有水，遇险而止**。这个水是不是险，一个人，遇险而止，莫知所之，蒙象也。蒙的象。
 
 #### 1.卦象
+
 这是什么意思，我们一个人，出行，遇到险，一看到不对，停下来了，你在犹豫，就是蒙，懂不懂，所以世界上不是说任何什么事情都是很清楚，这个时候，如果能够拨蒙，那瞬间就能看的很清楚。有的宗教家天天念经十年，也不一定有这种蒙的智慧，宗教家常用一些咒语和经书来让你发蒙，诸位如果能够了解易经，不需要这些外在的东西。
 你只要看到一个人，遇险而止，不晓得往哪边走，这就是蒙的象。看到前面，你不知所措，你自然会停下来，因为你没办法做决策的时候，自然而然会先停下来，这是人的本性，这就是蒙。蒙的象。
 
 易经上，山为止也，水呢险也，山水蒙是外止内险，易经说这就是山水蒙，外面是停，不知道怎么办，里面是险，担心担忧受怕，不知道怎么办，那就是蒙。诸位，当你有一天在家里面，突然说，怎么办，有事情来了，不知道怎么办，你不敢动，这就是蒙。蒙了就要找启蒙，术业有专攻，比如说这件事情是因为官司引起的，你要找专家，这是讲蒙的时机、意义。
 
 ##### a.原文
+>
 > 匪我求童蒙，童蒙求我。初筮告，再三渎，渎则不告。利贞。
 
 这是发蒙之道。这个怎么解释，小孩子的蒙，叫做童蒙，你会发现你的儿子、女儿，你发现他，他现在心里想，我要一杯牛奶，然后他来找你，你把他扯到其他的扯了半天，他还是我要牛奶。童蒙，他坚心，不是我找这个小孩子，是这个小孩子来找我，是童蒙，是最好的蒙，最好启蒙的就是童蒙，后面还有很多种蒙，还有笨蛋的启蒙方法。
@@ -375,6 +428,7 @@ tags:
 因为他年龄很大，已经是成蒙了，所以我们的初中高中教育有问题，其实就是要保持平常心，保持童蒙，很开朗地来问你，你有什么好问的，你不问，是你放不下自己的身段。孔子、尧舜都不耻下问，他之所以为圣。所以你发现小孩子很可爱，我发现小孩子很好沟通，就是他是童蒙。一看就开朗，什么话就直接讲了，最好，拐弯抹角讲，就不要理他了。我有一次我跟朋友在一起，我讲错一句话，朋友小孩子就从头到尾追问到底，最好，坚心啊，大智慧啊，可是他爸妈说你别将不好意思，其实是好事啊。你看那个小孩子在那边，他坐一个小时，玩玩具玩的很专心，你把他拉开来，他还是想着要去玩。你有没有办法做到每一个小时每一分钟都专心做一件事情，很难，你做不到，为什么，因为你已经不是童蒙，你已经成蒙了。后面蒙有好几个阶段，诸位想办法让他自己变成童蒙。诸位来学这个班，先把自己变成童蒙。最好，童蒙吸收完以后，再去判断。
 
 ##### b. 蒙卦，吉卦
+
 这是蒙卦，你启蒙的方法是对的，大吉哦。蒙卦是吉卦。有的人已经进入蠢的阶段，就很难启蒙了。双目似睁未睁，两眼无神，眼睛好像打不开来，诸位看眼睛的相，眼睛不在于大小，眼睛在乎有神，眼睛似睁未睁好像打不开来的样子，然后两眼无神，这是蠢。这个平常我是没有那个菩萨慈悲心肠来给你开蠢，开蒙，所以我碰到蠢的，我立刻不讲，讲完了我就走人，这个很累。
 
 比如手我们好心跟他说要这样子，他说真的吗，他还在怀疑，这就是蠢！这种人我看的太多了，所以说我们要注重观察，我们给蠢下个定义，因为他不知道哪里是对，他自以为是，诸位，术业有专攻，你不懂，你就问人家，这就是童蒙，有的人呢，半瓶子水叮当响，他读法律的，他研究的不是这个，然后他在那边卖文章啊。半瓶子水，遇到这种最累，我们宁可去找一个，任何一个不管什么专业，完全不懂的最好，懂不懂我的意思。那个懂的弄了半天，还要先把杯子洗掉再装水进去。找麻烦啊，你又不欠他。所以不要变成蠢蛋。双目无神这种人都是悖的，学而不思，思而不学。学了以后，要用自己脑筋去想。
