--- a/UPLD/倪海厦_天纪006_紫微星在丑宫、寅宫、山水蒙、水天需、天水讼、地水师.md
+++ b/UPLD/倪海厦_天纪006_紫微星在丑宫、寅宫、山水蒙、水天需、天水讼、地水师.md
@@ -1,5 +1,5 @@
 ---
-title: 倪海厦_天纪006_紫微星在丑宫、寅宫
+title: 倪海厦_天纪006_紫微星在丑宫、寅宫、山水蒙、水天需、天水讼、地水师
 date: 2023-01-24
 categories:
    - 医学生活
@@ -15,23 +15,29 @@ tags:
 
 <!-- more -->
 ## 一、前言
+
 ### （一）方位概念
+
 介绍下一个案例之前呢，我们先介绍几个方位的观念。方位之前，先讲一下一样东西：
 
 #### 1.发旋判断时辰
+
 第一个，子午卯酉，偏左，或者居中；寅申巳亥，偏右；辰戌丑未，双旋以上。
 
 这就是说，我们有时候碰到客户，八字搞不清楚，他说五点钟左右生的，什么答案都有，你问他几点生的，答案很多，有说我爸爸早上喂猪的时候生的。我有一个方法，看后面的发旋。如果你是子午卯酉生的，发旋是在中央，或者中央偏左。如果你是寅申巳亥出身的，发旋一定偏右，所谓偏左偏右从后面看。如果是辰戌丑未生的，一定是双旋，两个旋以上，这是我们用发旋来判断出身时间的关系。
 
 #### 2.方位上的问题
+
 第二个，我们方位上的问题，方位上，卯时正东，午时正南，酉时正西，子时正北。诸位只要先知道正向就好了。可是我们实际上利用阳宅的时候，十二个宫，就是十二个地支，子丑寅卯辰巳午为申酉戌亥，我们把八字合到阳宅上看的时候，只看这十二个宫位而已，所以罗盘，以后到一定程度我会让诸位去买罗盘，罗盘买回来，上面有24个分金煞，实际上我们用在阳宅上，**就是十二**。其他多余的，我们用来看风水用的。看阴宅、山川河流。看房子的部位在整个大自然的位置。这是看风水，房子内部的叫地理，叫阳宅。
 
 ## 二、紫微星在丑宫
+
 诸位来看第二个案例：紫微星在丑宫。其他诸星都一样，当然科权禄忌要看八字，不一定永远在一起。那如果紫薇星在这边，旁边一定是跟着破军。
 
 ![紫微星在丑宫](https://preview.cloud.189.cn/image/imageAction?param=FD00016C62BC340179EFD59ADC17DD82D7F3C9ED44F171325E331D7307CC5F0337BB6CAAD33FFDAD3BEF2B95F4AA491F41391579BFE7603B2A5D267AFF17E7E63937CC9A19AB0553E77BF58AEF08FAAA662174D0BF3B3ED6F449EB54530C20F7D71EFE01D46778191AA4F0796F6B9360)
 
 ### （一）廉贪星在巳宫，命宫在亥宫
+
 这边陀罗、天府，太阴，其他都一样的。我们现在举例上面，命宫是在未这里，我们先不看命宫在这里。假设命宫在亥宫这里，命宫在这里，本身宫里是空的，对面是廉贪，这个廉贞贪狼都落陷在这个位置上，廉贞贪狼不单单是落陷，如果廉贞贪狼有一天跑到亥宫这里来，也是廉贪落陷，这里有一个特别的格局。我给命名为：**半空折翅**，这种八字就是一种天罗地网，中年限，什么叫中年限呢，30岁左右，我这边只是一个大概的原则，30岁，还要看流年，有的人29岁发生，有的人要到31/32岁发生，不一定。诸位只要看到廉贪在这里，或者在对宫，基本就是这个格局。会有夭折的现象，甚至这个人，我看过很多，有一种是先天带一些病症，发病死掉。有一种人，是环境造成他，他没有病，他自杀了。都会有这种现象，碰到这个格局非常不好。
 
 那如果按照这个命来看，你看他兄弟宫在午宫这边，先看命宫，命宫在这里，是坐天相，一般来讲，女孩子是天相星最好，天相是填上的宰相，是非常好的辅佐人才。天相的人一定是位高无权。这个天相落在命宫的人呢，他从来不去想权位，他是很好的辅佐人才，这是命宫坐天相。天相的人呢，比较瘦高，瘦瘦高高，高挑形，那如果有个人呢，他的天相是45-54岁大限，意思就是说45-54岁这个限内，他处于位高无权的状况。比如说干到行政院副院长，干不到正院长。他老是干副职。所以不单单是命宫，你要以此类推。如果流年遇到这个，也是以此类推这样批的。懂不懂我的意思，所以批八字要活用。如果你光看书，看不懂啦，没有用的，这样讲你就了解我的意思了把。
@@ -43,6 +49,7 @@ tags:
 那这个人的夫妻宫呢，刚好这个八字夫妻宫是在廉贞贪狼，我刚才讲过，廉贞贪狼是天罗地网，也是半空折翅，对不对，那我们怎么解释，我们星辰这么多，什么星不好，怎么搞得廉贞贪狼两颗大桃花星落陷坐在夫妻宫，我讲过，贪狼是酒色财十足的星，刚好又聚在夫妻宫，是不是他的婚姻就会很差，你不用看别的，你就光看这里，就就会有预感，这个人的婚姻不太好，有问题，配偶的问题一定很大。
 
 ### （二）廉杀，廉破，廉贪
+
 廉贞贪狼落在一起的时候，我们有廉杀，廉破，廉贪：
 
 廉贞七杀呢，半路死亡，半路埋尸；
@@ -72,14 +79,14 @@ tags:
 诸位看她的疾厄宫，陀罗落陷加铃星，疾厄宫是不是在寅宫啊，第一个，本来寅宫就是很煞了，寅是什么，内脏是肺，外科是右脚。第二个，你看她的太阴星在辰宫化忌，有没有，所以她的胃一定也不好，那巳宫坐廉贪，脾也不好。按照中医的观念来说呢，很惨哦，中医的观念，忧能伤肺，思能伤脾，所以诸位有时候感冒咳嗽，很奇怪，怎么咳嗽两三个月还没好，那是你的外症啊，实际上你没有想到，你在担忧事情，很紧张，很忧郁。还有思能伤脾，思虑太重了伤到脾脏，我们的胃跟脾是同时运动，胃一张大脾就缩小，脾以张大胃就缩小，那你思虑太重了，像梁山伯，脾脏就死掉了，胃也不蠕动，东西吃不下去，所以恋爱谈的很深，思念对方厉害的时候是吃不下东西，味同嚼蜡。酸甜苦辣吃下去没有味道，因为伤到脾了。
 
 你看看，一个女孩子，婚姻非常不好，再加上子女非常的不好的话，她是真是如同嚼蜡。尤其遇到这种廉贞贪狼，她就算先生没有死亡，也是如同死亡一样，命上面就看到了。如果我们去看她的阳宅，命运同参的时候，非常厉害，阳宅上面来看，东南西北，厨房在西北角，这是死别。
- 
+
 西北角的话，死夫；如果厨房在西南角，本人死，她自己死掉了。你懂不懂我的意思，知道为什么？西北是坤地，这是个女孩子的命嘛。西北角是夫，懂不懂我的意思，哦，这是男孩子，抱歉抱歉。如果是西北角是本人，如果西南角死太太。那这个是男人，娶这个太太也很惨啊，遇到这种情况，如果我们讲算命，今天没有讲人间道和地理，对他说，算了，你放掉你太太算了，反正她喜欢去什么地下舞厅啊赌场啊，会这样子哦，这是积重难返，很累的，
 
 如果这个命是个女孩子，这个先生就完了。
 那到底是**生离还是死别，决定在阳宅。**，西北角是厨房，死先生，西南角是厨房死太太。如果房子西北角是客厅，不是厨房，如果这是个男的，就是他本人跟他生离，客厅主的是生离，有没有介绍过。好，没关系，今天介绍。
 
 客厅在易经上的象，客厅嘛，象客人。如果房子东南西北，如果你家东边是客厅：
- 
+
 有两种情形，第一，夫妻住进去以后生不到儿子；第二种，有了儿子以后，住进去的儿子变成客人。结果你会发现很奇怪，以前家里住的儿子很孝顺，结果换了一个房子，很奇怪，儿子在家里如坐针毡，他就想到外面去，打电玩啊，出去玩啊，或者跟一些不良少年到公园里吸安非他命啊，客人！儿子变成客人。
 
 那如果西北角是客厅，顾名思义，是丈夫的位置，丈夫等于客人啊，把家当酒店，有几种人是这样，比方说先生当船员，飞行员，这些都是客人，有些小姐家里是这样房子，我说你在窗户挂个牌子叫做某某氏大旅馆，先生就像客人一样。然后我们看过很多，干军人的，警察的，船员、飞行员的，西北角都是客厅。因为西北方是夫妻的位置，如果西北方是客厅的话，主的是夫妻的**生离**，如果西北方是厨房的话，主的是**死别**。厨房我介绍过，厨房是肉放在案板上一刀下去的象，手术台上的刀子也一样。
@@ -94,6 +101,7 @@ tags:
 还有一个。诸位看到这个地方，武曲和七杀在这边，是不是，所以说紫微星在丑宫的时候，这几个星一定会会到这里来，日月会反背，比如说，这个是官禄宫，太阴星化忌，这个人当官就毁掉了，那明明是毁掉了，你还对他说你去当官很好啊，你害他做一件他一辈子做不到的事情，你知道我的意思吗，比如说你不是当官的料，我逼着你去当官，考到50岁还没有考中科考，50岁后就不能考了啊，那是谁害的，我害的，我们算命，是要看他的角色适合扮演什么，告诉他适合做什么，好，以此类推，懂我的意思把。
 
 ### （三）福德宫-武杀会
+
 好，这是福德宫，这是重点！武曲、七杀，这两颗星在一起的时候，诸位，要顾名思义，要想的，不要看书上。武杀会！
 
 - 第一个，是女子，逢这种武曲七杀，主孤单。你女孩子就好好在家里做家务好了，你去杀谁啊，就变成当武官，一个人去孤军奋战，拼命去做，这不是主孤单吗。
@@ -106,6 +114,7 @@ tags:
 如果男孩子，福德宫是主一辈子，他是武曲跟七杀，代表这个男孩子个性很刚强，他不喜欢靠祖业，一个人拼命去做事。如果是女孩子的福德宫遇到武曲七杀，福德宫是最难批的，她一辈子靠他自己，这个人面大骨粗，孤鸾，孤单的凤凰，不会结婚哦。那你一看她的阳宅，就问他小姐你为什么没有结婚去住爸爸的位置。慢慢会陆续跟各位介绍。这是武曲七杀。
 
 ## 三、流年
+
 那如果我们以这个八字来说，诸位看，这个33-42，你看他的流年，是不是太阴星在里面，官府，带死，然后红鸾星天喜星，大家看这个红鸾星是不是在辰宫对位回来，所以他在33-42岁这十年中间，我放大举例给你看，太阴星化忌，旁边还有小星，官府，死，这个宫，我们要去看对宫，对面是不是太阳，是不是太阳陷地，所以，他33-43岁这个大限十年：
 
 - 第一个，我们讲过，他无子福。没有儿子的福，诸位想想，他要是人死了，也就没有儿子的福了，对不对。
@@ -117,13 +126,16 @@ tags:
 所以我们往往算命给客户的建议，讲出来的话都是很简单，可是人家做不到，这就是过去算命的缺失在这里。你说建议43岁以后结婚，这是你很好的想法，但是想法跟事实不一样啊。所以说这个是废话。
 
 ### （一）化解
+
 还有呢，算命有化解的方式，外面的算命，遇到婚姻不好的时候，男女都一样，因为六是个阴数之极，九呢是阳数之极。所以说，我们算人的命，婚姻凶的时候，命解：
+
 - 第一个，二婚的对象；
 - 第二个，长七岁以上。
 
 有的人命理婚姻很不好，还没有结婚，到你这算命，你说哎先生或者是小姐，你找个对象离过婚的，跟他结婚，还有，年龄要相差七岁以上才行。那就不克了，这也是废话啊。这是一般外面算命的，但是我要告诉你，因为有的人命中就是这样子，结果他娶一个结过婚的，跟他相差七岁，没事！你懂我的意思吗，为什么，就是这个道理，第一个她离过婚，她理亏，本来脾气不好，也会忍耐，本来以前跟老公吵架敢出去喝酒跳舞的，现在不要意思去了啊，呆在家里面。还有一种呢，长起岁，本来我是先生脾气很坏，你跟我年龄差不多，你应该懂啊，我懂了你怎么不懂，如果遇到的太太是小你七岁，哎呀小妹妹算了，她还不懂事！同样一件事，对面的对象不同，造成态度不同。
 
 ### （二）合八字的精髓
+
 所以算命的，他的逻辑在这里。你如果跟我差不多大，你应该哦，你应该知道哦。冲突就来了。所以我们常常给人家合八字，看这两个人，八字放在一起，一看，居然这个八字是父女合，外面的形是夫妻男女，结果八字一看是父女合，哇，这个先生把他太太当女儿一样的宠爱，你看走在马路上，爸爸对女儿的态度跟对儿子的就不一样，儿子这样就一脚踢过去，女儿就抱在怀里，对不对，不一样。
 
 那有的是母子合，有的是兄妹合。有的是朋友合。对啊，看你是什么状况，所以我们在算命的时候，很厉害，我这样讲，诸位体会一下，因为八字的时候，我们有命宫，命宫是天相，如果他还没有结婚，我们帮他挑对象，一挑到命宫就是廉贞贪狼，是不是刚好死路一条。
@@ -131,6 +143,7 @@ tags:
 那现在我跟各位讲，合八字的精义在哪里？诸位要会哦，外面会算命还有不会算命的人，都误解了，包括很多算命的都不懂哦。合八字，今天有两个人要来合八字，这个合八字跟八字合是两回事。
 
 #### 1.合八字可以结婚；不合的八字，有时不合才可以结婚
+
 合八字的结果，第一个是合，第二个是不合。那你知道不知道，合八字可以结婚；不合的八字，有时不合才可以结婚，你知道不知道。
 我们看一个八字，一定要看先天之命，如果有的人，生下来，就是一世夫妻，找个八字合，太好了，就可以结婚了。那如果有的人，先天就是二婚命，怎么办，你如果算个命天生是二婚命，你找个跟他很合，那刚好，他就是二婚了。好，他的命宫是天相，你给他找一个廉贪落陷坐命的女人，你们两个太好了八字可以结婚，就惨了，对不对，很惨烈的。
 
@@ -165,6 +178,7 @@ tags:
 紫微星在这里，我们先不管他在什么宫，紫微星在这里的时候，**天府星跟他在一起，有没有看到，七杀一定在对面**，这就成了一个格。
 
 ### （一）紫府坐垣、七杀朝斗
+
 紫微天府在这个地方的时候，叫做紫府坐垣格。四个角就是垣。如果在这边的话，就叫做**七杀朝斗**。如果命宫在申宫，对换过来，我们是不是要看三方四正，怎么找，很简单，跳三格过来选一个。
 
 所以命宫出来，一定会到官禄宫，财帛宫，所谓三方四正就是命官禄财帛迁移，如果是紫府坐垣，或是七杀朝斗，这两个都是**大贵的星**，紫府坐垣的人呢，他将来位列三台，他会在天子身边当个将相之人，就是宰相，因为紫薇跟天府在这里，君王！真正的君王不一定是紫薇天府坐命，以后也可以给诸位一些八字看一下。位列三台，就是以前的司空这种。
@@ -175,24 +189,31 @@ tags:
 那如果这个不是命宫，如果这个人的官禄宫在这里怎么样，哇，那是大好，这两颗都是官星嘛，是不是。
 
 那如果这是财帛宫呢，这两颗星是财库，而且并不是财星，只是有很大的**权利**而已，并不是很大的财星，换句话说，如果财帛宫在这里的话，他到私人公司好好做事情，股票上市公司，比他到公家单位上班来的好，然后在私人公司里面当总经理，比如他到台塑去当个总经理，公司并不是他的，但是他表现太好了，一直提拔，平步青云上去，也会近天子之侧。所以他到底是去公家机关，还是私人公司，我们一念之间而已。
+
 ### （二）太阳陷落
+
 紫微天府在这里，那太阳在亥宫，太阴在卯宫，诸位想，在戌宫的时候，太阳已经很惨了，在亥宫呢，9-11点，卯宫呢，是5-7点，那一定是更暗对不对，就是比刚才的还要加凶，如果，你以此类推，按照易经的象来推，如果亥时，刚好是田宅宫在这里怎么办？晚上出太阳，你家房子这么会晚上出太阳，好大的火啊！对不对，火灾！对不对，这个火灾怎么来的，用象批。如果这个亥宫，亥时，不是田宅宫，是父母宫怎么办？太阳指的是爸爸，了解吧，以此类推。
 
 #### 1.夫妻宫
+
 如果是一个女孩子的命，亥宫是夫妻宫呢，太阳落陷地，太阳就是先生，看到没有。如果你看她的命宫，你看她的眼角，两根，没有第三根第四根，那她先生很好，你不要批她先生死掉，太太，您夫妻聚少离多，她先生可能是海员船员，很少回家，所以要看清楚哦。那这个女孩子坐你面前，已经面大骨粗声沙，你还说您夫妻聚少离多，她先生已经走人了啊。要招子放亮一点。就算你看不到相，阳宅拿来看看也可以嘛。可以加减一下。要弄清楚。
 
 #### 2.子女宫
+
 那如果这个亥宫是子女宫，会有儿子，儿子远离，不在身边，化忌代表儿子要死，有煞星，羊陀火铃空劫，进入子女宫，化忌的话，一定是死。化忌，或者是羊陀火铃空劫，再落陷的话，就是煞了。各位要注意一下。
 
 #### 3.疾厄宫
+
 那如果亥宫是疾厄宫呢，用象批哦，对，眼睛不好，你怎么把晚上的月亮看成太阳呢，你什么眼睛？青光眼啊，眼睛都看不到了嘛，日月反背。这样会以此类推吧。
 
 #### 4.财帛宫
+
 如果太阳星落陷，是坐财帛呢，哎呀，你晚上出太阳，在财帛宫，这个人做生意当老板就不行了，做生意当老板，一定要有权有禄，才行，你光有权，我们把星座分成很多，有的是化权，有的化禄，有的是财星，如果一个人的命宫，财禄星都会到了，或者说十年运上有权、禄星会到，这代表他可以做事业。
 
 如果他财帛宫上，太阳落陷，他去做生意，变成白天忙，晚上忙，忙了半天，还是空忙，你还在说先生你做事业大利，那不是害死人啊。害死人还不偿命，他一句话被你搞的一辈子好累啊。
 
 ### （三）武曲星入庙
+
 还有一个，武曲星在戌宫这边入庙，对宫贪狼也是入庙，贪狼在午是庙，在辰也是庙，有没有，意思是告诉各位，煞星武官星入庙是最好！大吉！**武官星入庙，这个人非常的刚强**，中国人讲刚强，我们八字里讲固执，孔子不是这样讲的，孔子说择善固执，对的事情坚持到底，易经上面说阳刚之人，讲的就是这种人，一定要有点个性哦。如果你娶一个太太，你说太太你到后面去买一包味精回来，结果一去三个小时还没回来，冲出去找到她，说太太你到哪里去了，太太说哦碰到一个朋友叫我去看电影，我就看电影去了，刚看完才回来。你如果娶这种太太，你就完了，为什么，她没有主见，别人两句话就把她拉走了，她忘掉了她自己要做什么事情，现在这种人很多，所以我常常说，龙卷风来了都吹人不走，两句话来了就把他吹走了。这种人怎么叫做坚心呢，这种人很多。你如果娶了这种人，你要小心哦，或者遇到这种小孩子，我就来修理他，把他拉回来。
 
 这很可怕，还有人更可怕，先天上他不是这样子，他是后天被爸爸妈妈训练成这个样子的，了解我的意思，有一天你在麦当劳，看一个妈妈带个女儿来，她绝对不会问女儿你要吃什么，汉堡，就讲完了。看电影，看这部，那部不能看，她都决定了，女儿没有选择的权利，是是是，唯唯嚅嚅，好了，出去遇到坏人，坏人说走，她就是，跟着走了，这都是不晓得嘛，这都是妈妈训练不好。妈妈说她是我女儿我当然担心当然对她好啊，你二十四小时看到她，你对女儿是照样，对你先生也是这样，你很可怕这个人。我就对妈妈讲，你去那个宗教场所静心念经，我来教你女儿，一个月之后绝对不同，非常有主见。
@@ -200,10 +221,11 @@ tags:
 所以诸位啊，作为父母，训练小孩子，我知道大家都平常忙于工作上班，我们小孩子送到学习去受教育，所以就不需要你去教他什么东西了，你不要回来说我教你历史，有老师教啊，你不要教他那些东西，你要教他的是你看你儿子，看他条件好的时候，看他想要什么，知道他的动态是什么，他很贫困的时候，一毛钱都没有的时候，你看他所不屑为什么事情，就可以知道儿子的心性，这个时候如何去扭转他，平常没事就带他去玩就好了。老师教的，你不用重复教他嘛，结果儿子学会我这一套，爸爸你返渎啊。所以很多爸爸妈妈一直在儿子面前讲人间的道理，你应该怎么做怎么做，千遍一律，他根本懒得听，**你应该问一些问题，知道儿子想要什么，才是重点。**
 
 ### （四）要遇到好的流年
+
 我们言归正传，武曲贪狼来会，这是武官带，如果是逢到疾厄宫，这种星就不是煞，以为都入庙，这种武官星一定要逢到官星，才会有，还有要逢到好的流年，什么叫做好的流年，你的命宫，刚好在这里，3-12岁，13-22岁，23-32,33-42岁，刚好终于进来，才好用嘛：
- 
+
 结果有一个人的命宫在这里，2-11岁，12岁-21岁会到这边，有个鸟用，12岁干将军啊，能好啊，你以为你是甘罗啊，十二岁做宰相，哪有那种机会啊。
- 
+
 所以我们说要有好的流年，懂我的意思把。才有用嘛，以此类推。懂我的意思把。你不要傻乎乎的，老师，这个位置很好，结果一看流年，好累啊。
 
 所以看八字的时候，要推理，才能够，过去两千多年前的东西，我们要适用在两千多年以后，环境再怎么改变，他的神没有变，懂不懂，不可能200年以后，小孩子生出来，十二岁就可以当将军，不可能的，结果他好的星，出来的时候不对，懂不懂。
@@ -222,13 +244,19 @@ tags:
 你看子女宫，不能光看一个宫，你要看三方四正，所以上，这个只是一个标杆，一直在转，一直在转，那我们不能统统画出来，那你完了，一个都看混了。
 
 ### （三）巨门星
+
 好，还有左上角，是不是巨门星在这里，这个巨门星已经是是非口舌星了，碰到巨门已经在吵架，打官司了，好，已经很凶了，再一个化忌，有没有，就会加重这个巨门星的煞，光一个巨门星就已经会打官司了，再加化忌，那就百分之百要打官司了，在劫难逃，那如果巨门星逢到天马星呢，诸位一定要以此类推，他骑着马打官司，一定是车祸嘛。想不开，车祸，那这是春夏秋冬，这个小子冬天发生车祸，是不是，要会以此类推下去哦。
+
 ### （四）十年
+
 那我们看十年，他这个八字十年刚好在这里，太阳在亥宫这里，是34-43岁，他是在田宅宫，那太阳在这里是陷地，不亮，对面是什么，巨门化忌，代表他34-43看不到太阳，如果这是一个女命，34-43岁已经没有太阳了，发生事情一定在33岁之前，懂不懂我的意思，为什么，太阳表示说夫妻不在了，先生聚少散多，可能是做海员飞行员，可是对面是化忌，就完了，一定是散。所以说要因地制宜。
 
 ## 五、六十四卦
+
 ### （一）山水蒙[䷃]
+
 #### 1.卦象
+
 蒙的象哦，山下有水，那山是外卦，水是内卦，水呢是险，内险，外是止的象，外止内险。
 
 举例，有个人到一个十字路口，不知道怎么走，因为心里有险道，慌了，动作停止，当他动作一停止下来在考虑，这就代表他在蒙的状况，所以易经有山水蒙，从这个动作，就知道蒙，我们人常常蒙的，懂不懂我的意思。
@@ -236,6 +264,7 @@ tags:
 所以蒙没有关系，要有童蒙，你在蒙没有关系，你要问嘛，敢问嘛，请教，不问我怎么知道呢，你要请教人家，人家一定会告诉你。可是有的人会渎蒙，就是他已经成为蒙了，成了笨蛋了，我是博士，我怎么可能会错，我是天下有名的人，我什么都知道，我走马路，我还要问人家啊，结果找不到，迷路的，就是他了。懂不懂，其实这个问题，哲学才叫着博士，其他都叫做专士，你叫他博士就完蛋了，我不懂，遇到十字路口，不知道怎么走，我可以问啊，像小孩子一样跑过去，哎请教一下怎么怎么样，他一定会回答你的嘛，好了，你自己去猜测，自己去以为，结果猜测以为出来的都不是事实。
 
 ##### a.去蒙之道
+
 这是蒙，那么易经会告诉我们为什么立这个蒙，人会经过这个阶段，他就讲了人间道，他说，去蒙之道，诸位呢，要帮小孩子启蒙，也要注意，
 
 > 必待诚心一致来求己，再告之，方能去蒙，必以贞正。
@@ -243,6 +272,7 @@ tags:
 去蒙之道，要有时机，所以易经呢，告诉我们时机如何掌握，有一个人，他是你先生，结果你从我们这个班上毕业学完了，他没有听过我的理论，我的理论到你身上，你告诉他，他就蒙掉了，你有没有发现现在很多人，你怎么讲他都不听，今天你明白了这个方法，你想要主动告诉他，没有用的，今天以后不要讲了，要等他诚心一致来求你，诸葛亮当年隐居在隆中，他就是看刘备来，刘备了不理他，他不是摆架子，看看你会不会听我的，你要来问我就是要听我的嘛，要不然你来问我干吗，现在很多人，去问了人家，然后回来还是自己的意见，那你何必当初去问你，你问了半天，浪费人家口舌，然后你自己又没有收到。一定要诚心一致，小孩子来问你的时候，他不懂啊，他诚心诚意，他是童蒙，诸位要保持这个童蒙，要保持赤子之心，诸位想想连尧舜都不耻下问，对不对，气量大一点嘛，现在很多才智之人，外面很多博士，肚子能容万卷书，一句话都容不下，你知道不知道？这叫做气量大吗，为什么容不下呢，他平常心来问你的时候，代表他想要，这个时机你告诉他，才能去蒙，否则他不想听，你后面跟着他，哦，你一定要听我的，很多妈妈现在都是照样，你不要理他，要待时机，待他诚心一致来求己，再告之，方能去蒙，必以贞正。必以贞正这句话很重要。
 
 ##### b.阳宅
+
 我们的阳宅学，易经的阳宅呢，东南西北，这个九宫八卦立位的时候，夫妻，子女，一千年也不会改变。
 
 这个卦就定在那里，外面的阳宅学，你找他来看，哎先生，对不对啊，你家这个东南西北，这里是客厅，你家客厅摆一个盆景比较好，这边挂一幅画比较好，讲完了哦，然后你明年再请他来，哎这里怎么可以摆画呢，你错了，这边摆错，这边要摆个鱼缸。先生你去年讲的话跟今年讲的怎么不一样呢，他本来不蒙了，被你造成蒙了，不贞正。前后不一样，你懂不懂。
@@ -251,6 +281,7 @@ tags:
 你根据什么，根据他自己说的，懂不懂，他今天说的，跟明天说的，不一样，等他真正死的那天也搞不清楚阳宅学真正好在哪里。太差了。那你放心，我们这里讲的是真正的方法，十年后，该是天地否还是天地否，大概讲天地fou，但是是一样的意思啊。这就不重要了，这是形嘛。这是去蒙之道。
 
 ##### c.国家立法之道
+
 所以过去我们古人，在民智未开，百姓还是蒙的时候呢，君王呢，
 
 > 发民之蒙，必以刑禁。
@@ -267,6 +298,7 @@ tags:
 即使我们不懂这个，我跟你打官司，告你，然后告我了，我赢了，你千万不要说，我赢了，我好开心，表现给你看看，我告诉你，你会增加仇恨，赢了我也不要去太乐。要指出是他错了，很谦和地对待人家，这样才不会有后遗症。这样就上下顺。所以个人认为当年tanm事件dxp他们这样做的，是对的，没有办法。你随便找个那边的人，不管是谁，处在这个位置，你看他怎么做。你要反面想啊，对不对。这都不对的。你在逼得没办法，这样子。诸位来看占卜。
 
 #### 2.读图
+
 有一只鹿站在地上，那你说老师我知道鹿者禄也。那你知道我为什么教你们读图啊。诸位是否知道以前有本《无字天书》，就是没有字，只有图啊，你当他白纸一张啊，好好笑！我们在读图啊。
 
 ![山水蒙](https://preview.cloud.189.cn/image/imageAction?param=20FF6A73CF6C31463F02D0B077546EE3CD6C266179E3EF5536D598D7B17B305A3567ACE70BF2E12CAB1A817DC4213478EE4C7EFB31A1E1F23C9F0311621E12AB942BD8AE34FD0D9EDB21183A0772257CF7CFC105D13D8C4CFC220450C445FCB05CBD3D29B11A306BB0401ED52C1C8176)
@@ -279,16 +311,21 @@ tags:
 - 结果呢，是一个盒子，一个盒子呢，是先成后破。
 
 整个卦，蒙啊，整个蒙卦，整个读起来，就是李姓的人，儿子夭折，如果出现蒙蔽的手段，为的是财禄，钱是在那边，但是真正的珠宝，还是在船上面，大家忧心忡忡，但是整个一句话，对不对，先成后破。
+
 ##### a. 为官之道
+
 所以为官之道，一定要有清廉，为政者，不可以有任何的贪念，大家都说要做大官，做大事，话谁都会说。但是要知行合一啊，千万不能说，你们做大事好了，大官我来当就好了，不可以哦，要知行合一，这是山水蒙。
 
 所以，除了蒙蔽，我们如何启蒙，反过来看，如果我用蒙蔽的手段对付你，你发现我在蒙蔽你的时候，这就代表说我有所企图，懂我的意思把。没有什么企图，有什么好蒙蔽的。蒙蔽了以后，启蒙，蒙之极，蒙就开了，对不对。
 
 ### （二）水天需[䷄]
+
 #### 1.卦象
+
 蒙开了，进入下一个卦，水天虚。为什么要水天需，水呢，外险，天呢，内健，天是刚健，如果一个人，内健，每天在家里充实自己，外险，外面很破烂，**需，需有等待的意思**，等待时机的意思。
 
 #### 2.原因
+
 那为什么蒙卦之后是水天需，这就好比一溜一溜的顺序，好像小孩子的成长，爸爸妈妈结婚的时候，叫做乾为天，坤为地，然后妈妈有一天怀孕了，胎儿在妈妈肚子里，叫做水雷屯，小孩子一生出来，山水蒙，那小孩子要成长，就是水天需，所以
 > 物之始生，必待养成.
 
@@ -300,6 +337,7 @@ tags:
 所以易经上，光看这个卦，诸位就知道了，有一个刚健的人，天是天下最刚健的人，结果他知道外险，越是刚健的人，他不会因为刚而急躁，求功心切，往前冲，他都知道要等待，这个就是很厉害了，懂不懂，水天需的卦就在这里。外面的人个性急躁，求功心切的人很多，但是他知道，越是照样，他越要等待时间，那就可怕了。那外面很多的庸才，一年十二个月，换了十三份工作，这种人就是庸才废物啊。他每天都在那里说时不与我你看我多有能力啊，可是老是找不到适合我的工作，世界上哪有那么适合你的工作，你又不是天子皇帝，我巴结你干嘛，对不对，应该要想办法让自己去适应环境才对，所以现在民心不古，就是这样子。
 
 #### 3.人间道
+
 人间道来说的话，刚健，刚是有自己的原则，健是非常有知识有学问的人，刚健之人，知险，知道外面是险的，待而再进，等待时机而进，这是至善之道。这是最好的做法。
 
 那至于六爻的爻变，诸位自己去看书，或者是看人间道，我会写在里面。如果以占卜来读这个图
@@ -325,18 +363,21 @@ tags:
 置之死地而后生，遇到这个事情，就是照样解。
 
 #### 5.阳宅
+
 那山水蒙，跟水天需，如果在阳宅上来看呢。
 
 ##### a.山水蒙
+
 山水蒙，一般来讲是东南西北，三子去住在二子的位置，蒙卦，但是这是表面上的解，解到神，精神上的解，就是妙用。
 
 不管是任何人，不管你是乾，坤，还是爸爸妈妈哥哥姐姐，随便，有一天住到北方的房间，北方是坎卦，是水，是险，险道中求，知道我的意思吗，什么叫险道中求？你爸爸住进水的位置，天水讼，跟人家打官司；你妈妈住进坎，地水师，出门跟人家吵架，反正任何人住进去，他会行险之道，所以很多人，没有结婚的人，有官司是非纠纷，几乎都是在正北。结了婚的人去住，也是正北，所以一个房子，中心店的正北方，一般来说，不要给人住，它是二子位没错，可是它是险道，诸位，以前四合院的时候，记得吗？这东南西北：
- 
+
 你要是连这个东南西北也会弄错那就没有办法了哦，那正北方是正厅，他就放祖先牌位在那里，没有住人。你看四合院一看，是不是这样，那你说我喜欢住正北，一住就坐牢去了，正北方是行险，所以你发现你的孩子很奇怪，老是喜欢去做一些冒险的动作，不是从墙上跳下去，就是去赌博式的活动，喜欢这些东西，他就是在行险，或者买毒品啊这些东西，这是住在正北方，诸位要记得！这是批到神。**所以不管你是谁，住到正北，下卦都是险。**
 
 山水蒙，但是我们阳宅上，刚好是三子住到二儿子的位置上的时候，婚姻就要加减。就是要提前，我这里先跟诸位介绍`提前`。那提前多久，以后我们举例的时候，我会综合讲。我会告诉诸位，如何提前，如何延后。
 
 ##### b.水天需
+
 那如果是水天需呢，在阳宅上面，这个水天需的意思呢，房子来说有东南西北，西北角是乾卦，正北方二子是坎卦，也就是代表二子住到爸爸的位置，这个叫做越位，越位的现象呢：
 
 - 第一个，智慧成长太快。住到爸爸的位置以后，你会发现你这个二子奇怪，怎么动作那么老成，出来不苟言笑，你跟他凶，他比你更凶，他要做爸爸，他就会认为他就是爸爸哦，他谁都要管哦，好处呢，他非常顾家，我就是爸爸，你们放心，你们不要出去做事，我出去赚钱好了，他就不想读书，他的想法我就是爸爸，我要替家承担，所以很多小孩子，爸爸妈妈根本不需要他去赚钱，他要去赚钱，你抓都抓不住他，就是因为住在乾位。
@@ -352,7 +393,9 @@ tags:
 到了更高的阶段，算命的八字，都变成形了，算命算半天，最后还是要改运嘛，有问题，最后变成没有问题，才是重点。
 
 ### （三）天水讼[䷅]
+
 #### 1.卦象
+
 再来是天水讼：为什么是天水讼，水天需是饮食之道，因为有饮食，大家就会去争，有了争以后，大家就有了讼，所以讼之初，一定是有争，有争夺。各位看，讼是官司诉讼纠纷的，外面是健，内卦是险，是不是变成外健内险，有一个人，外表装饰的很好，里面是空的，这是讼，诉讼的源头。
 
 比如说，我西装笔挺跑过来，然后开一部很好的车子来，先生你借我五十万，这是外健内险，同样一个人，如果外健内险，他每天都在做人，他做的很成功，世界上的好人坏人都叫他是好人，外健哦，但里面是空的，因为他花所有的时间去做人，从来没有时间去充实自己，内险，内心是空的，也就是外健内险，结果是被人家骗了满地，为什么，因为他要去做人，他就要对人家好啊，遇到坏人要求他，他就答应了，就是内险，他从来没有求内实，内心一定要实哦，讼之源，诉讼的源头。
@@ -360,6 +403,7 @@ tags:
 一般来说，诸位我们在看人的时候，已经开始官司了，都没有去溯源，溯源到这个人本身的心态，最开始，就是外健内险。还有人打肿脸充胖子啊，外健内险，你要借钱他说没关系我帮你借，结果他就吃官司了，都是这样子。所以讼是虚卦的续卦，因为食物有争执才有诉讼。
 
 #### 2.人间道
+
 所以我们人，在人间道来说，内心抱着侥幸的心理，外刚强不服人，这是致讼之源。
 
 如果我们看到一个人，内险外健，所以成讼！如果一个人，健而不险，不生讼，这个人一辈子不会打官司。反过来，如果这个人，险而不健呢，就不能讼，根本不能打官司了。了解他的意思吧。这都是属于人间道。一个人呢，如果是险而又健，是以讼也。会打官司。死不认错。
@@ -397,11 +441,12 @@ tags:
 所以诸位你只要记得，发生什么事情，管他对错，先认错，没有人会找你麻烦，找你打官司，打官司谁愿意啊，都是火大了要争一口气跟你干到底，懂不懂，所以车子出事，你不要管谁的对错，先下来，对不起对不起！一定没有事情，反正都有保险公司赔嘛，当然台湾是想尽办法不赔你，这是天水讼，所以我们很欢迎国外的保险公司进来。
 
 #### 4.阳宅
+
 天水讼啊，阳宅的位置呢，夫局二子位，必讼！所以爸爸如果住在正北方，做什么事情，都有官司， 他就会发现，我怎么这么倒霉，从我搬到这个房子，开车子从车库出去和人家打个官司，然后回到家里来也打官司，上班按电梯把脚夹到还要打官司，每天扯不完，讼！
 
 所以你在做事业上面，有一种人没有关系，就是你本来就在讼，比如说律师法官，讼啊，要是没有讼就没饭吃了。那其他的做生意，最好不要讼，对不对。
 住在这个位置上的时候，运上面，是命运的运，父降位，降到什么程度，好，诸位看这个，东南西北，父亲在这里，长子，妈妈在这里，爸爸是第一，妈妈是第二，长子第三，长女第四，第五是二子，
- 
+
 如果你的名字是爸爸，结果你不幸住到二子的位置，意思是说，降了五位，懂不懂我的意思，好，本来你的八字里面，32岁那一年是天同化权，哎这位先生，你32岁，掌权做主管，但是因为您住在这个位置上，发生官司是非纠纷，延误了5年，变成37岁才升。这是加减。要不然同时间生的人，同时生官同时发财啊。看位数在哪里？本来32岁化禄，化权又化禄，哎呀，张先生，您32岁的时候，您可以脱离开来自己做生意当老板，但是以为你住在北方位置，对不对，你要等到37岁以后才可以自行经商做老板，要延五年。以此类推。会不会看。
 
 还有，这个李先生，您住在正北方的位置，您老是在行险，您做的东西都是很冒险的，六合彩什么的，我表面卖槟榔，里面卖吗啡，天水讼，那你如果是住在西北角的话，内健就不是一样，外面卖槟榔，回到家里读书，所以不一样啊，内健在这两个位置就相差很多哦。这是行险，有贪念，懂不懂，有贪念产生，你才会去行险啊，你没有贪念行什么险。
@@ -409,7 +454,9 @@ tags:
 所以我们人，上次介绍艮卦，是止的象，就是目所不见，你没有看到，欲望就止住了嘛。女孩子一看到漂亮衣服，完了，人走了眼睛还这样斜着看。她就是不能止她的欲望。所以阳宅上一讲，这样子加减会了吧。
 
 ### （四）地水师[䷆]
+
 #### 1.卦象
+
 地水师，很好玩，爸爸住过来是天水讼，妈妈住过来是地水师。讼卦完了，就是地水师。诉讼打完了，一定会结仇，所以我刚才讲过，就算你打赢了，你不要沾沾自喜，到全世界去宣扬你打赢了，然后那个输了的他会恨你哦。打赢了也跟他说，很抱歉，我不是想跟你打官司，我只是想告诉你你的动作是错的。你要反过来想，你要认错，将来你服刑什么什么的，一样会很好的，你给人这样做，这样态度就没有了。如果你到处宣扬，你看我打赢了。所以讼之后，有师之道。所以两个国家开始吵，吵不完了，**武力解决**，就是师。
 
 为什么叫做地水师呢，我们古圣贤哲一看，地下有水，有没有，诸位你看地下水，都是聚在一起，聚的象，所有的部队聚集一起，是聚的象。
@@ -417,6 +464,7 @@ tags:
 水到地上来了，就是水地比嘛。水还是在下，叫做地水师。师有军队、出师、兵道，光是一个地水师，我们孙子就写了一个兵法，兵书，你看易经六个爻，从此你就是很好的名将，晓得如何出师，如何打仗。
 
 #### 2.内外卦
+
 我们如果以外卦内卦来看的话，变成地是顺，水是险，为外顺内险之道。
 比如说，我是受命出兵的将，部队都出去的时候，大家都集结，听命于我，其实我最紧张，打败了我怎么办，心里很紧张，兵是行险之道。意思就是提醒，不得宜势必要出师的时候，要战战兢兢，随时抱着打仗打败的打算，心态要这样子。
 
