--- a/UPLD/倪海厦_天纪008_紫微星在酉、戌、亥宫、天泽履、地天泰.md
+++ b/UPLD/倪海厦_天纪008_紫微星在酉、戌、亥宫、天泽履、地天泰.md
@@ -1,5 +1,5 @@
 ---
-title: 倪海厦_天纪008_紫微星在酉、戌、亥宫
+title: 倪海厦_天纪008_紫微星在酉、戌、亥宫、天泽履、地天泰
 date: 2023-01-28
 categories:
    - 医学生活
@@ -15,7 +15,9 @@ tags:
 
 <!-- more -->
 ## 一、紫微星在卯宫
+
 ### （一）宫格
+
 #### 1.午宫
 
 ![紫微星在卯宫](https://preview.cloud.189.cn/image/imageAction?param=B50EDBD65B228848ED0783F1CC0D3FDACEFB37D576A659E8645D2C9DC99D4D87179ECF547A233876C7CD3874CD073618843BAE09B88AD12AA3422BD509F4D638420AE37EB7B7707A71401AFC92E095CADF3DB3577EFB2A09D61198AF9AC2A4C4557B4A4105457924228FD8F315610F87)
@@ -27,12 +29,15 @@ tags:
 如果他**命宫在未**，午宫刚好是13-22岁，刚好是日丽中天，那有什么好，这个时候是很棒，考试都很棒，都是当班长班干部，到后来就没有太阳了，如果流年在日丽中天成格，最好在人生最精华的时间成格，用理去推。对不对，你那么小成格干嘛，小的时候都拿状元的，大的时候都是大时了了。这就是为什么，像我到这个时候，就是56岁了。这个是太阳星在午宫。
 
 #### 2.戌宫
+
 那会过来后，**巨门星在戌宫**这里，我们这个太阳入庙，巨门也庙旺，然后会到这个寅宫这里，命宫在寅宫的时候，也叫做巨日会命，懂不懂我的意思，巨日会命呢，一定是大财。财帛很大，什么叫大财，就是先天命中就带财，第二个呢，如果你大运会到，十年会到这个，也代表财，那太阳和巨门同时会到，大部分是商，财团，做巨匠，大生意的。
 
 那如果命宫正好是太阳出来了，就不是商了，如果你的命宫是日丽中天的话，**武职大利**，干军人一定最少干到参谋总长，我算过，我们陈燊龄陈将军就是这个命，我69年帮他算的时候他还是中将，我说你要干到参谋总长，他说我干到总司令就很好了。 紫微星在酉，就要注意看这个几个重点，其他的宫我们后面批八字案例时候来批。
 
 ## 二、紫微星在戌宫
+
 ### （一）宫格
+
 #### 1.未宫
 
 ![紫微星在戌宫](https://preview.cloud.189.cn/image/imageAction?param=CD3295FBB7A96609D0DEFE49B77942832A81FBDE72FB04FBF00867F28BA8BAF4808B54BED1BFD2C5FD080E8D974EE3EA16CE669A7F84A59EF4B5A5D007D5CB48C27519DEE8DBB66E84BEE70410FFE8683A40ABDADAABCD284ECA0213C47EAF9F854DAFA0879F5E3056FEC1B466DF9B56)
@@ -41,12 +46,15 @@ tags:
 第一个，太阳太阴都在未这里，那申这里是贪狼，寅这里是廉贞。这是未宫，这是丑宫，重复上次课讲过的，太阳太阴丑未中，日月同宫，日月会命；那申宫廉贞独坐。
 
 #### 2.丑宫
+
 那这个八字的特点在哪里，各位看到丑宫这里有个地劫看到没有，上次有介绍过，孤星独守的时候，这是大凶。非常的凶。不但本宫凶，对宫也凶，什么叫对宫也凶，比如说你的流年刚好走在未宫这里，对面是一颗孤孤的地劫来会，就代表那年是凶。那至于到底凶什么事情，我们看八字来决定。
 
 进入这个状况的时候，大家要特表注意这个大运会到这个雄宿朝元。地劫星这样的灾星。我提这个八字，就是说丑宫地劫星这个地方千万不要忽略掉。因为如果武曲地劫在辰宫这里，这个地劫就影响不大，大不了破点财而已，一颗星独守在那里，就很严重，特别要小心这个。
 
 ## 三、紫微星在亥宫
+
 ### （一）宫格
+
 #### 1.未宫
 
 ![紫微星在亥宫](https://preview.cloud.189.cn/image/imageAction?param=4EEEAE2276E54D43CFA733E0D655F779B756F8FCBE155F2F814C813EDEBEC44DBADFB88419A14EE8C267165C58DDC3B7A9F413EBC9728C8E1A5AE3FF13138707BDB2BF42F1EEDE35080D2E0857DF591FBD650B9123CE8B07E50680B8F58B3EB2AC0387F7856F8816C4A45E3D78F8D1C6)
@@ -54,9 +62,11 @@ tags:
 诸位看紫微星在亥。看这个八字，诸位看上面，未宫是武曲，贪狼，这个时候贪狼化权，武曲化禄，诸位看这两颗星同会在这边。
 
 #### 2.巳宫
+
 紫微星如果在巳宫的时候，武曲贪狼在丑宫，这统统属于上面，将星入命，那如果你命宫就在未这里，本身为将星格，如果你的44-53岁走到这里，那这个时候正好是升将的时候，一般来说，如果没有兵祸，没有革命没有打仗的话，按照这个系统的话，这个时候才能化将。那有兵灾出现的话，前面的将被干掉，后面的将往上升，那就很快，有战争的时候，有人30岁就干少将了，有这种现象。那在这个时候出现，是最好的时候。
 
 #### 3.巳宫
+
 廉贞破军在卯宫这里，看到没有，水中作冢，廉贞破军出现在两个地方，还有一个是酉宫这里，同时会到，就是死在水里面啊，那死在水上，我们有几个地方看到：
 
 - 第一个，还没死的时候，就看到了，鼻头上有这样的纹相。
@@ -64,6 +74,7 @@ tags:
 - 还有一种鼻子上有横纹，这是车祸。这几个是鼻子上的纹路，因为讲到这个，顺便介绍一下。
 
 ## 四、案例1
+
 那几天有两个，天文部分开始介绍案例。诸位先看一个男的。如果没有电脑排，手工排也没有关系，各位看他的命宫，太阳、天梁，财帛宫巳宫太阴，禄存，化权，用到我就讲到。**丑宫天魁星，命宫有天喜，迁移宫有红鸾星**，这个八字的重点，为什么要举这个例子给诸位看，这个八字有个重点，所以很多人批八字，就是福德宫不会批，你看他的福德宫，天机化忌，贪狼化禄在午宫，我们尽量不排盘，重点在批命上。他紫微星化科在子宫，在田宅宫。
 
 ![案例1](https://preview.cloud.189.cn/image/imageAction?param=98B1DB5538DC7E4F92CF7C271AF2BEDD47F9C6150204968D11E8824A76A8BE5F571EAE4BCCC6454AC764BBAD78985B54C0C756DAB9CC7E035C90D0DCDD364034C21044710E54D350047CCBE542E8B7803FF39800A300020E9763A30220E86E51041F46FEB362EEDAB3181289281C84C9)
@@ -85,6 +96,7 @@ tags:
 这个八字我为什么拿这个来举例，到我面前人死了来的知不知道。
 
 #### 1.面相
+
 一进来的时候，这个人是37年次的，民国80年来算，男的，进来的时候，我还没有看八字哦，我一看她的脸，当然不是本人来的，太太来的，**脸的印堂是白色的**，这个白不是润白哦，而是枯白，白的黯淡无光，颜色好像牙膏一样，牙膏还是亮亮的，你把牙膏挤出来，放久了，没有光，白白的，就好像你把牙膏和泥巴混合在一起的颜色，掺杂一点杂色下去，整个面色白色惨暗的，我们就知道这个人**带丧**的，坐在你面前，穿着衣服把那个戴孝的遮挡起来，看不到。看脸，带丧。所以你不用去遮外面的。一看我心里就有个数了，再一看，他先生的八字，福德宫化忌，这个那孩子福德宫，福德宫主一世的福禄，化忌的时候，就是一世都不顺，很累。
 
 如果过去我们算命，没有人和地理，先生，你去当悟因，就是当和尚，悟生妙真道，可能可以化解，这是光是算命的讲法了。您就好好地去当和尚好了，那一辈子这样就会很愉快，就会逃过这个生死大限。讲完这句话，叫做废话，所以外面算命哦，他的毛病很大。哎呀先生，您的婚姻有问题，你会二婚命，那我怎么办，简单啊你晚点结婚就好了啊，那几岁结婚，42岁，看玩笑，我做不到，你今天是男的还好，女的呢，对不读，所以外面很多算命的，提出的方法都不能化解，角度是消极的，啊呀，先生，你这个婚姻不好啊，你这个是二婚命，那我怎么样化解，很简单，你嫁个男孩子离过婚的就行，我不要，所以话很好讲啊，人家要不要啊。对不对。
@@ -92,19 +104,24 @@ tags:
 那像这种命的时候，如果我们光算命，就是说僧道了。你不要看其他的，光着一个福德宫天机化忌就很累了。那你看这个命，我们怎么批他：
 
 #### 2.财帛宫
+
 第一个，他的财帛宫化权，还有禄存，这叫做权禄相逢，权禄相逢的人，进财帛，他一定会去做事业当老板。
 
 #### 3.迁移宫
+
 第二个，身在迁移，身宫是后天发展，在迁移宫，他不但会去做生意自己当老板，他还会把生意发展到外地去。
 第三，然后，这个人呢，太阳在酉时下山了，太阴在巳时出来，者叫做日月反背格。所以他生意一定是白天忙了晚上还要忙，加倍的辛苦。**一般，所有的日月反背格，一组的，都是夫妻聚少散多**，懂不懂我的意思，谁都是一样。
 
 #### 4.子女宫
+
 第四，这个命里面来说，午宫是子女宫，他既然一定会去做生意，你不要看他的流年，看他的格就知道权禄在这边，会去做生意，你就不要跟他说，如果你当官会怎么样，根本没有这条路嘛，你还说什么如果，懂不懂，你就这条路讲完了，那我不做生意我当官好了，讲不通，他算的时候，已经44岁了，还如果去当公务员，这话就不要讲了，批的时候，就时候先生您没有官带。对不对，如果我们批八字。他这个八字一拿出来，他太太刚拿出来，我就写个字，死，就写完了，写别的还写错了。可是我们批的时候，是按照这个批，懂不懂我的意思。他常常在外地。
 
 #### 5.夫妻宫
+
 第五，那你看看他命里面的夫妻，是不是天同，巨门，还有天钺，都是科甲星，有没有，还有曲、昌，都是夫妻宫，一大票星在里面，第一个意义，他的太太多才多艺；他的夫妻如果没有其他那些星，光是一个巨门，那夫妻吵架打架，**那如果你有个巨门，就是吵架难免了，**哪个夫妻不吵架的；天同呢，仁和，还是不会有问题，他夫妻宫不会生离，那你福德宫为什么化忌，不会生离，那就是死别了，福德宫就是讲夫妻宫啊，我一直跟各位讲，福德宫十足可以把他当成夫妻宫来看。
 
 #### 6.交友宫
+
 第六，这个呢，你看他的交友宫，破军，左辅，地劫，天马，是不是在这里，我们批八字的时候，诸位注意一点，我们有主动和被动，什么叫做主动，他的朋友宫这里是破军左辅地劫天马，顾名思义，他的朋友是天马带地劫，劳多功少，还带破财，破军也是破耗，破军也代表征战，打仗，我不是讲过，军人要有这个命。
 
 好，那如果他主动去找朋友，挺好了，合伙做生意，各位读过了，已经叫做山水蒙，始蒙，君子去蒙之道，以果决行。用结果来决定他的行为，算命就是一个讨论果的哲学，所以算命不管中间过程，他只论成败，所以易经呢，也是不管过程，它只论成败，先生，任何事情，到了结果的时候，**不是1就是0。**我去做生意，赚钱还是赔钱；我去考试，上和不上两个结果；我去坐飞机，平安还是凶煞，两个结果；大概会平安，什么话嘛。做生意大概会赚钱，什么话嘛，不可以这样讲。
@@ -128,23 +145,29 @@ tags:
 所以，我们第一个八字要来批的时候，我们的重点来了。要**星得正位**。比如说，官禄宫化权，最好了，当官的本来就要掌权嘛，对不对。
 
 #### 7.官禄宫
+
 那如果官禄宫化禄，这两个，一个是贪官，我给你讲可以，你看到了不要讲哦，你不要太直，刚直可以，也有分寸哦。也不要太过了。太过了人家把你干掉。官员财禄很大，还有一种，他不是贪官，官禄宫，禄星很大，代表他在银行当主管，银行也是当官啊，他手一批一百亿，结果钱又不是他的，他一个月拿十几万的薪水，钱很大，但是他掌的是财权。这个要特别注意的。
 
 那财权、官权，我们怎么区分，一点都不难，看颧骨，看鼻子，诸位以后看一下中央银行总裁的鼻子，那么大，可是那个大鼻子，有两种是巨富，一个是瘦瘦长长细细，像那个悬胆一样，连鼻孔都看不到似的，像一个猪胆挂在这里一样，大富，还有像狮鼻，肉很多，直通通下来，这是大富。哎，这位先生鼻子长的很好，管事业啊，可是没有那么直通啊，他就变成财权很大，他本身不是有钱人，他在帮人家管钱，就像以前的掌柜的。管财权。老板以前挑掌柜的，恩，看鼻子，长得很好啊，鼻孔都看不到，连柜台里客人掉的钱都会给我。这个最好。
 
 ### （二）流年
+
 还有，这个八字，如果我们来批，流年的时候，这个要注意看流年，23-32岁，在亥宫这里，33-42在子宫这里，43-52岁在丑宫这里，53-62岁在寅宫这里，诸位看下面的十年大运：
-#### 1.未来十年无大运，大限在前十年。
+
+#### 1.未来十年无大运，大限在前十年
+
 - 第一个，未来十年无大运，大限在前十年。53-62岁，全部是耗星，看到没有，看本宫，全部是煞星，这个时候，他没有大运，很凶，诸位就要小心前面十年，就是说53岁以后他已经没有了，懂不懂，我们先看十年一个宫。
 
 - 第二个重点呢，化忌在本宫，还有化忌在对宫呢，不一样，诸位看他是戊子年生的，子年的时候，37岁在戌这里，男孩子是不是顺算，对不对，38亥，39子，40丑，41寅，42卯，43辰，44岁刚好在巳宫这里，有没有，注意哦，你不要当成文字，当成图来读，第一个，对面**有煞星来会**，未来十年又没有大运，本宫呢，今年把太阳看成月亮，你一出去，把白天的太阳看成月亮，一定死了，眼睛闭到了，象只有一次，你眼睛闭到了，看不到日月啊，叫做**目不见日月**，你死掉了当然看不到嘛，所以大限就在这里。
 
 ##### a.23-32岁
+
 举例，23-32岁在亥宫，他是不是化忌，那是不是小的时候，戌宫这里也有大限，早年的大限，小孩子的大限的时候，在父母上面，也就是说，他13岁-22岁，这时候，不管他是什么灾星，虽然未来十年，没有大运，可是他有贵人，就是父母宫，就是在这一段，读初中高中大学的期间，爸爸妈妈是他的执行官，有没有，这个大限，爸爸妈妈在旁边，这个灾会没有。
 
 那你说，老师，为什么后面会有，他后面是官禄和朋友，他这里本来就不好，对不对，所以他死的时候，是被人家杀死的丢在水里面。那为什么不杀我，要杀他，一定是知道你有什么，而且人家还不是开奔驰的哦，晚上开着aotomotor的时候被人家干掉了，丢在河里面。台北的警察很好玩，两边的警察在那边看，漂过来我这边就是我的，大家都想推过去啊，省的这种大案子难办的要死，对不对，所有一遍漂，警察一边看。
 
 ##### b.33-42岁
+
 这个八字，可惜在哪里，可惜在子宫，一个紫微星化科，紫微星化科在33-42岁，这个我们批八字，我们要会判断，如果这个命格，本身不是去做生意，是去做官的，到了33-42岁，是不是大利最好啊，因为当官的要科甲，考试能考上，从此就发布命令啊，科字在这里，那如果他是做生意的，这个科在这里，没有用，懂不懂我的意思，好了，你跟他说，先生你33-42岁科甲很旺，他说对不起，我是做生意的，对啊，他是一个做生意的人嘛，你搞错了，懂不懂我的意思。
 
 所以如果这个时候做生意，进来33-42岁化科，不代表做生意，这个科就代表名气很大，声名远播，懂不懂，所以他33-42岁做得很好，对面是化禄，赚钱而且声名很大。在工商业发展的时候，会在工商业做一个举足轻重的角色，青年有成，所以他一定会去做生意。
@@ -154,6 +177,7 @@ tags:
 那如果他28岁来找你算命怎么办，你要怎么讲这个话，你说，先生啊，因为你这个十年不好，因为这个大运他不好，所以你不要在乎多少钱，而要在乎学到多少东西，你之所以后面会很好，是因为这个时候，你学到了很多东西，所以如果你在乎你赚多少钱，你的想法在这里的时候，你每天上班都很痛苦。如果你想32岁钱，帮人家做，领人家的薪水，来学做老板的经验，你每天工作就很愉快了，一个天地否，一个地天泰。这就是人间道。所以天地否和地天泰是序卦，一念之间就进去了。然后他在32岁听了你的话，他就开始很愉快了，人事已经种进去了，所以诸位，我们作为一个算命师，本身修养有多少，外面的算命师看两本书就够了，搞不好，跟你算的时候，书在下面偷看呢。
 
 #### 2.子女宫
+
 子女宫，像这个贪狼星，你不要管其他的星，像这种星，贪狼星有的时候是阴星，阳星，诸位不要去管阴阳星，贪狼这个武官星出现的时候，杀破狼，作为武官星的时候，都是阳星，你就把他当成男的，所以他会有一个儿子，算命的时候，我们女儿不看，贪狼只有一个，如果看他太太的八字拿来看，他太太命里面也有一个儿子，你就变成两个儿子，那一个像爸爸，一个像妈妈，脸庞像爸爸的儿子，像他的儿子，你看他贪狼在午宫化禄，贪居子午，有没有，最旺，又化禄，他这个儿子将来干什么的，做生意当大老板，如果没有化禄，武官，你讲对了，化禄你懂不懂我的意思，你叫他取当武官他是不是就会去军机采购泄密啊。
 
 如果他儿子不是贪狼化禄，是化科呢，自由业，医师律师会计师建筑师，自由业就是专科，自己打仗，我自己干，我干小兵还是老板，干将军还是老板，一个人打仗，自由业一个人开一个事务所，就是这样的，武官坐命然后一个化科就够了。
@@ -161,24 +185,31 @@ tags:
 那如果一个化科进来，还有一个化权呢，科和权都在一起怎么办，很简单嘛，同样是医生，光是一个化科的就开一个小诊所，或者到医学院当教授，那如果化科化权呢，哦，到医院当主任当院长哦。所以医学院的主任院长，也是医生哦，那有的人，只有一个化科，可能他只能考到律师，当个律师，有的人不是啊，没事干就干干法官，没事又回去，这是各安天命。这样子加减会吧。所以如果立一个法则来批的话，你们不会批的，可是告诉你这个原则，你就会了。
 
 #### 3.兄弟宫
+
 诸位看这个八字，他的兄弟宫，是天相武曲，你先不要想太多，甚至把我以前讲过的忘掉，你看到这个就应该知道是好星嘛，你说你兄弟宫坏了，这就搞错了，看到好星的时候，先不要确定他，看看他的眉毛，我们人的眉毛呢，是兄弟宫，**左边叫罗睺，右边叫计都**，眉毛最好要细要长，越细越长代表兄弟大贵，有的人又细又长，尾巴旋起来，
- 
+
 也是兄弟众多。但是狼性不长。有时候心很正，有些时候不正。性不定。如果命上面，加上相上面，加在一起的时候，就很清楚，不会被误解。那他的命中是化权化禄，他的兄弟没有，那如果跟兄弟合伙，变成他来当老板，他的兄弟姐妹来帮他做事情，他刚好做天子，他兄弟一个做武一个做文，武的话当业务经理，文的话，当里面的行政经理，人事经理，所以兄弟助力大，宜合伙。他来当老板，兄弟来当股东，那这个跟朋友合伙，绝对不行。
 
 ## 五、生离死别
+
 夫妻死别、生离。
 
 ### （一）斗数
+
 #### 1.福德宫凶
+
 第一个，福德宫，凶；化忌、廉破、廉贪、凶。这是代表夫妻死别或者是生离。
 
 #### 2.阳宅
+
 阳宅都一样，西北方是厨房，死夫；西南方是厨房，死妻；西北方是客厅，生离，必须命上要有灾，运上有灾，加起来就是三分之二了，大于人事。他的命上要离婚，阳宅上又是夫妻生离的位置，天和地，命是三分之一，地理是三分之一，当我们遇到这种情况，我们用三分之一的人间道，劝了半天，还是离掉了。懂不懂我的意思，因为命和地理加起来的三分之二，大于人间道。
 
 #### 3.易经
+
 那诸位要是进入到易经神的层次，诸位把运拿掉，光是运和人间道，我就不需要运，所以你达到神的阶段时，随便你睡东北西南，你是金刚不坏，了解我的意思吧，所以我们只要随便两个加在一起，他的意义就不一样，如果你一定要用运去改的话，会很累，有的时候你要去住厕所，可怜，为什么，因为建筑师不懂啊，给你乱画，所有建筑师画的都是形，我敢说这句话，你是建筑师可以来找我，我们有神啊，上帝有规定你住到好的房子，就不会破财啊。我看到一大堆人住小房子大发财，赚到钱以后买个大房子，住进去就赔光了，然后又跑回来住个小房子，这有个真是的案例的。
 
 #### 4.相
+
 然后我们在相上面，夫妻死别，那个**鱼尾纹**，眼睛纹往下走，是生离，那死别的时候呢，眼睛奸门的地方，有暗纹，非常的黑暗，那这个是已死，印堂上也会看到白色。如果对方没死，相上注定要死
 
 - 男人呢，脸是哭脸，没事在那边哭什么呢，没事在那里笑也不对，无事在那里笑，心生毒计，歹人哦。
@@ -193,14 +224,18 @@ tags:
 我们曾经过去有学生这样做啊，家里做完了，第二天隔壁邻居先生出车祸过世了，他吓死了，我说没办法啊，各安天命，也不是我做的啊，你知道我的意思把，只是我们计算到那一天，到底是不是害到别人，这是不可知的，因为也不知道对方的八字，是不是刚好这一天走到头，这个部分是无法验证的部分。
 
 ## 六、六十四卦
+
 ### （一）天泽履 [䷉]
+
 诸位看这个小畜卦的序卦，我们叫天泽履。
 小畜卦的序卦，为什么是履，小畜卦是聚的象，那人聚在一起以后，大家在一起，就礼尚往来了，所以**履，礼也。**而制履之道也就是履，化解履的状况，也就是礼。
 
 #### 1.卦象
+
 那为什么叫做天泽履，天在上面，泽在下，天本来就是在上面，沼泽本来就是在下面嘛，这叫做尊卑、上下，长幼有序，**长幼有序就是礼的源头**。礼的本。但是现在外面的老师，所有的宗教家，不管你信什么宗教，都是嘴巴上会讲道理，道理人人会说啊，说我们长幼有序很好，结果回到家里，儿子打爸爸，妹妹结婚姐姐还没有结婚，夫妻要闹离婚，对不对，还有那同性恋，那现在很可怕，我给那些宗教家信仰宗教的人一个建议，非常多的人，信了宗教以后，拿了宗教，是一个形，懂不懂我的意思，然后他每个礼拜乖乖地去听道理，他认为听完道理就是圣人，我就不会错了，这种人很多哦，礼拜六才讲完说上帝说不要任意批评别人，有一天上帝会批评你，礼拜天早上，人家送礼到家里来，你就说这种礼怎么可以送家里来，这不是丢脸吗，懂不懂我的意思，背后批评人家，这种人相当多，这个表里要合一的，这是礼的源头。因为我们的祖宗看到天在上，泽在下，天地的顺序，就是礼的本。
 
 #### 2.人间道
+
 进入人间道，诸位看，天是外卦，这是内卦，外是刚健，外健，泽呢，是兑卦，是喜悦的悦，**外健内悦**，我们两个来往，我表示健，表示正直，里面很喜悦地和你谈话，这是真诚的象。这就叫做礼。
 
 履卦当年的时候，子路卜到这个卦，讲履卦的状况给你听，子路有一天到山里面，老虎在睡觉，他走走，不小心踩到了老虎的尾巴，老虎在睡觉啊就醒来火大谁踩我的尾巴，老虎睡眼惺忪看看你是谁，子路一踩道一看哇不得了，往前跑也不是，往回退也不是，站在那里也不是，我在看他，这就意思告诉你进退两难，所以礼很难啊。真正的礼，你要恰到好处，很难，懂不懂我的意思，你礼做的好，就算踩道老虎尾巴，老虎都不会咬你，你礼做的太过，或者做的不及，都不行，这是形容礼的很难！礼是非常难的一样东西。所以这个卦就是告诉我们，人啊，不要有过多的贪念，贪念太多了以后，就没有礼了。我们去争利，现在的社会上，我们分士农工商，君子：礼要有限制，把你限制在一定的范围，自由也要有限制的，当有限制的时候，我们人就会有定志，各安其位，算命就是一个很好的各安其位的方法。
@@ -210,6 +245,7 @@ tags:
 现在我们社会上，士人，从下到公务员，上到部长院长总统，都一样，士人日夜所念的就是如何我更尊荣，现在百姓看你坐汽车出来没什么稀奇，部长院长都坐汽车，不行，我要坐飞机出来给你看，太过。所有的都想日夜尊荣，然后农工商的人呢，每天在那里想，我要赚亿万的钱财，已经没有限制了，这个时候，亿万的人口都在互相交利，那你想想看，大家的心怎么会连在一起，你要让天下不要乱，都很难啊，一定会大乱的，所以我们君子，处履的时候，一定要有礼，利就要有限制，就好像我们自由也有一定的限制，没有限制我开车开到总统面前停下来，我高兴啊，自由，这不是胡说八道。一定要有限制，有了限制，最重要的，就是每个人都会安于他的位置，这个时候人心就统统在一起，当你安于你的位置的时候，你不会去羡慕别人嘛，你王永庆有100亿吃牛肉饭和我吃的牛肉饭是一样的，你每次吃牛肉饭放一块黄金啊，毒死了啊。一样的嘛，为什么有贪念呢？所以我们为什么要去算命，就是叫你各安其命，我们为什么要去改阳宅，也是叫你各安其命。
 
 #### 3.卦辞
+
 那各位看这个天泽履，爻卦上面看的时候，我们老祖宗画的这个样子，天在这里，泽在这里，是不是，爻卦：
 
 到后面的时候，456爻全部是阳，上面一个卦，下面一个卦，对不对，456都是阳，就是礼之终，就是礼的终极，到了礼的顶的时候，诸位要记住一个原则，叫做**始终如一**。
@@ -219,6 +255,7 @@ tags:
 这是一个动作，所以我们眼睛要去看，看一个人，有没有礼，你只要看他对别人有钱没有钱都是一样对待，这是真正有利的人。现在社会上很多人，嘴巴上讲说巴结有钱人，这句话是自己在巴结奉承有钱人，他不敢讲自己，他赶快先讲别人，这叫恶人先告状，所以读心的时候就是他在讲这个话的时候，他就是这样子的人，懂不懂我的意思。真的有礼的人，对上下左右都是一样的，根本不要讲这句话，是有礼的人，不会去想，脑筋是天生的，不会想这句话，所以诸位出去遇到这种人，就知道了，那就是他，他讲的就是他自己，懂不懂，这是礼之道。始终如一这是他最好的精神。这是礼的极限，能够做到这个样子不得了了。
 
 #### 4.读图
+
 诸位看占卜。
 
 ![天泽履](https://preview.cloud.189.cn/image/imageAction?param=7E85AEDA8DB1035750D4BF5ED344D1ED262E900A9D9ED30944B0AAFF00EA4D58D132292336E452A2272CE1CD3734EF84BBDDA52B989BF69FC84DF5719E9E20F7527AED3472D1B519CBDE944F83BC64B89D43D0877772D861BF894DA9F84B4336EE7B5418B8CC36FC3EFA329D8925BEDD)
@@ -236,6 +273,7 @@ tags:
 **诸位在这种进退两难的时候，礼仪之道可以解。礼能解履。**
 
 #### 5.阳宅
+
 阳宅的部分：什么时候有履卦的现象，爸爸没有安其位，乱睡，本来父亲是主这个西北方，结果住到西方位置去了，这个时候，你叫做天泽履，你太太是地泽率，不要讲她，还没讲到。所以很多男人结婚以后，住到西厢以后，他就发生了一些事情，怎么搞得，进退两难，想往前冲啊，不敢，怕老虎追你咬你，想往后回嘛也不敢，站在那边也不对，老虎在看你，你敢踩我尾巴我正火大呢，他会进退两难哦。
 
 比如说，有一个人想选乡长，已经干乡长两任了，干乡长是在没有什么意思，两任之间有个人有野心，也想当乡长，他势力很大，那我又向说乡长干的不想干了，想去做省议员，可是如果我省议员没选上怎么办，那我乡下乡长没干怎么办，往前走把后面被人家干掉，站在这里不动，省议员那个很可惜，干在原地又有威胁，他跟我竞争搞不好我竞争不过他。天泽履嘛。怎么办，送礼去啊，你别问我，问我还是送礼，问我第三遍，我还是送礼，懂不懂。只有这个化解之道。
@@ -243,9 +281,11 @@ tags:
 那是人事上的化解，那阳宅上，住回西北角，那就是乾为天哦。那是地理位置上改，那是运气会很好。当你一睡回西北角的时候，上面就来了，有个马脸的，鼻子大大的，讲话声音细细的，武官挤在一起的，哎呀没有关系啊我们国民党人才很多你不要跟他竞选他乡长干的不错。不要竞争何必嘛，就是这样。你一住乾为天，就会有这种事情跑下来。
 
 ### （二）地天泰 [䷊]
+
 来，我们来看地天泰，履之后啊，履的序卦，是泰卦。为什么履之后是泰卦，我刚才讲了，履卦就是有礼嘛，履的终极是始终如一，如果全人类都是始终如一，天下治世就来临了，就进入泰了，所以易经很细，一步一步把你设定好，你在哪一个阶段，有一个卦来代表你，所以呢，履之后为泰卦，泰卦出现的时候：
 
 #### 1.卦象
+
 这是上，这是下，我们有天有地，天气一定是下降的，地气呢，一定是上升的，这是就所谓的阴阳交合，阳向下，阴向山，所以你看大自然，太阳照射的时候，地面上的水气蒸发到上面空中，看到没有，叫做天地在交合，阴阳在相交的状态，天地通畅，所以地在上，天在下，就是地天泰，这是天纪，自然界的现象，那如果有一天天在上面不下来，地在下面，就是什么，天地否，就是后面我们来介绍的。
 
 这是自然界的现象，地天泰，这是外卦，这是内卦，一个人外面是地，地是什么，顺，下卦是健，就把这个卦解完了，有一个人，里面呢实力非常充足，内健，每天天行健君子以自强不息，外面呢，这个人非常的谦和有礼，这肯定不是我哦。地天泰，你看我的个性多了就知道我是什么卦了，你要让他处泰，就是要有礼，始终如一，所以如果你从进入社会，到哪里去都是有礼，始终如一，你永远就是有利，结果就是泰卦，你得到就是泰，你有没有发现，好人坏人都会叫你好人，地天泰，这是一个人的外相。
@@ -268,17 +308,19 @@ tags:
 你就是地天泰。所以你要站在我的肩膀上往上走，我帮你在下面抬上去，所以你们看像不像一个空杯子，我要叫你们做一个空杯子。
 
 #### 2.卦辞
+
 可是现在全世界的老师都不是这样子，尤其台湾的，我是老师哦，至刚的，我是老师我怎么会错我从教育部师范大学毕业，我是至刚的，我就是对的，小朋友进来了，看到你，老师好，吓死了，初爻啊，阴柔啊，第二个不得了也吓一跳不敢随便进来讲话，讲话还得了，家长也不敢讲话，结果是否的，训练一票否的出来，现在的教育是否子再教育否子。
 
 小孩子都很聪明，结果被否子训练出来，变成笨蛋，就是你把师道放在太上面，师道是至刚的，但是在最下面，然后变个爻给你看，这是否嘛。
 
 你去看这老师是什么样的老师，然后初爻这是学生，二爻是家长，第三爻是家长会，学生说这老师太刚了我不要干，就变成：这就是天雷无妄卦，小孩子就会遭无妄之灾。在学校里面，老师会找机会整他。那家长也反对，怎么对付我儿子，第二爻也变成阳：就是天泽履，你干完了还要送礼哦，不然你儿子更倒霉，那如果家长会也站在孩子这边，就是乾为天，可是如果有一天，一个小孩子在这里动，家长会也动，家长会装傻不知道：
- 
+
 爸爸妈妈不要反应，由学生直接跟家长会反应，爸爸妈妈都不要来，让老师知道你父母亲不知道这件事，天火同人，解他的卦就在这里，易经上已经写的很清楚了啊，只是你没有看到。你去把他换换换，看哪个卦最好，你就用那个方法去做。真理本来就是在那边嘛，你自己不知道，所以易经是五经之首。
 
 你把我弄成地天泰，还是天地否，全在你的一念之间。这个初爻的位置，成为地天泰，易经里面最好的卦就是地天泰，成为初爻的位置，一定是刚性的，看录音带的或者到我们这里的学生，进来的时候是阴，为什么，他把我放在上面，为什么是阴，老师你看看这个怎么样，不行丢掉，有疑问来问，我让他丢掉，舍不掉，他回家还在看，然后再来问第二次，还是不行，然后问第三次，还是不行，这就变成他往下走，我往上走，这就变成否了。泰就是，要站在我的立场，统统学完以后，再去拿去验证，看结果，
 
 #### 3.测字
+
 那易经可以用在文字上，可以用到所有的东西解释他。有人写咒，我测字给你看，咒啊，是哭字的首，号角的号，你在那边念咒，我听到的是鬼哭神嚎。那我们把易经的易拿出来测，易是日当头，太阳在正中间，勿呢，是易之尾，如果你正大刚直，刚正广大，你的结尾是这样，全天下的事就变得很简单了。所以复杂的东西，被人想出来的，你今天媳妇嫁到一个家里面去，你婆婆，一开始进来的时候，是阴，哎，我先生过世了，我只有这个独生子，好不容易把儿子养大了，我当然了跟外面人说我要给儿子找媳妇，心不是这样想的，我儿子有了媳妇不要妈妈怎么办，阴啊，外面是健，我给儿子找媳妇是对的，你看我办结婚酒席给亲朋好友看，里面是阴啊，表里不一致懂不懂，然后阴的动作在那边做，然后嘴巴讲的我要对儿子好，我要去照顾我儿子，动作上都是每天回家就婆婆和媳妇都拿一双拖鞋站门口，儿子一看，穿谁的。否了！两个背道而驰。所以在一念之间，同样一件事情，同样一个状况，就是一念之间，那你要去做泰，马上变泰，所以包括学习，所有的事情，都可以用这个解释。虽然我没有孩子念书，但是我知道这个顺序，所以以后儿子如果觉得老师教的不对，儿子直接找家长会去，自己去，你小孩子要独立，为什么什么事情都要妈妈出面，独立起来他脑经清楚了，走在路上人家骗都骗不走他，我告诉你，有没有道理啊。
 
 那如果，老师在这边，儿子生气回来不敢讲，闷在肚子里面，结果你知道了，你没有经过儿子同意就跑到学校跟老师干起来，臭骂老师，然后家长会也不知道：这不就是天水讼，到头来打官司啦，两个互相告伤害，你的鼻子也打肿了，老师眼睛也打青了，学了易经就要随时把你的状况设立进去，然后你把符号弄出来，马上正确的决策就出来了，这是真理，那一本经书上有写？所以易经是五经之首，诸位我绝对没有排斥宗教，但是我跟诸位讲了半天，是千万不要被形绑住了，懂不懂我的意思，老师跟学生家长吵架吵了半天，气得半死，会到办公室喝水，他去倒水，杯子是这样子空的，然后杯子放旁边，然后跑到神坛说神啊我没有做错，你看我多关心学生啊，他在跟形讲话，神就在这边，懂不懂，真正的神在杯子这里，还有神你要保佑我哦，千万不要被孩子的家长群起而攻之，等下校长都知道，让我没饭吃，你在跟形在讲，真理在杯子这里，你刚才吵架口渴拿水去喝，所以我们人要有海的性，是什么，是海乃百川，容乃大，我们一个水库，太小还要排水，海就不需要排了。
@@ -288,31 +330,36 @@ tags:
 可是如果你很烦，很厌烦，妈的，这个东西讲的有什么用，你当场一念产生就是地天泰啊，所以呢，诸位，好坏真的就在一念之间。泰和否，就隔一张纸。你一转身就变成否，不要做否啊。这是治泰之道，所以诸位要记得**外柔内健。**
 
 #### 4.包荒
+
 诸位看占卜。
 前面讲包荒，这代表一个器量，我要提出来，器量的大小。诸位学了这个出去以后，如何去鉴定一个人器量的大小，话很会说啊，我器量很大，肚量很大，你要相信我，我是度量很大的人！这话谁都会说嘛。如何鉴定，四个：
 
-##### 1.大人之量，能容奸邪，不能容刚直。
+##### 1.大人之量，能容奸邪，不能容刚直
+
 大官的人，宰相肚里能撑船对吧，所以他手下犯了错误，他能够容忍，如果底下比较刚直直接说你错了，他不能容。你说他的器量在哪里。
 
-##### 2.文人之量，能容万卷，不能容异见。
+##### 2.文人之量，能容万卷，不能容异见
+
 读书的人呢，读书很多，我是博士，我怎么会错，你倪海厦讲的一定是错的。好，易经学长在这里，说我是易经学会，我怎么会错呢，那执行长说对嘛我支持他，我们会员我跟了他十几年，都没有人超越过他，他怎么会错，然后会长一回家，哎呀怎么出现这个样子怎么印证；执行长一回家，糟糕好像会长不太对；然后会员一回家，哎呀我怎么没听到这么好的易经啊，否！懂不懂我的意思。
 
 那你如果如果中华民国易经学会的会长，要然让全世界的人都知道已经，你自己要刚嘛，把老师踩在下面，然后假设我是对的，然后验证，再看结果，这就是泰的。
 
-##### 3.豪富之量，能容万金，不能让一个人。
+##### 3.豪富之量，能容万金，不能让一个人
+
 有钱人小气鬼。
 
-##### 4.才人之量，能谋万全，不能认一过。
+##### 4.才人之量，能谋万全，不能认一过
+
 有才华的人，万种可能都谋到了，但是不能承认一个过失。
 诸位从我们这个班上训练出去呢，回来你还是否的时候，错都在我当初择徒不好，这是我的错，我为什么错，我不是找理由，我就不相信启不了蒙，所以我一开始就跟你们讲，没有把你们教起来，是我不行，我希望全天下的老师，用这个来鼓励。
 
 #### 5.读图
+
 诸位看，读图，现在讲多了，我上下左右讲，以后把易经讲成一个圆球形，让你看，哎哟，是圆的嘛。就怕你听完了一会，晚上睡不着觉。占卜，你卜筮，一占，哇，地天泰：
 
 ![地天泰](https://preview.cloud.189.cn/image/imageAction?param=6B017516C1D07F75A1555BB23E574A9D6CB125F52C82B30AC3939FB93A42BEE84A385DC8E7BBFAD5EBA902D3A97B596EBA9826348AA50785A387834F34592F43A0075121D5C9684AD8A29BD1F2B670DF79DC0CDEA01A44474AF733335CC6EE711AB22D7463DE2BAFF6BA8E0A2B1C50ED)
 
 ![地天泰](https://preview.cloud.189.cn/image/imageAction?param=A93B5BE82FC5541EF5A3C5C0B320EEA26028D1BA70A1D4357EC22EEA4CEE8C415798476B2888C95D560239B439C78C94F23B90823BDF039DE4C26201089753DE4E2B8602ECD1C5CC8E171B73744037E95F7A6637759BD0C02C13A8E331176448E72B531FA54633800B92DCCA70992D84)
-
 
 - 第一，一个人爬楼梯，官人登梯，代表升迁顺遂。
 - 第二，月中桂开，代表政治清明。
@@ -326,6 +373,7 @@ tags:
 周公立官职，首先立的就是天官，那这个天官很苦的，谁愿意干，没有人愿意干的，所以几百年才会出一个，没有人愿意干，因为这个天官要不求名，不求利，名字叫什么都不知道，晚上天子睡觉的时候要当他保镖，天子生病的时候帮他看病，天子任命大将诸侯出兵的时候，天官要在后面讲皇帝这个人可以用这个人不能用。搞不好天官进去后宫还要被阉呢，看病还要靠这个天官，谁愿意啊，没人愿意。
 
 #### 6.阳宅
+
 阳宅上面：东南西北，坤地，乾地，母亲在坤，太太从坤地住到先生位置的时候，**妻居西北**，与夫同住，在一个屋子里面都算，成格。所以哦，我怀疑上帝是女人，这个女人呢，西南也可以住，西北也可以住，她住西南角是坤为地，她住西北角就是地天泰。男人只能住西北角啊，男人住到坤地就成了天地否了。所以很多男人是痞子，他不知道他住到痞子的位置。
 
 太太住到西北角，成格。主的是夫妻非常好，因为先生是乾为天，太太是地天泰。所以我每次都苦口婆心地讲去住西北角，拜托拜托，我怎么可能跟他把六十四卦讲一遍，可是我在这边刚强的要求人家住西北角。目的在这里。有的人有福，有的人无福。举例：
