--- a/UPLD/公文种类、行文规范及范文001_决议.md
+++ b/UPLD/公文种类、行文规范及范文001_决议.md
@@ -26,7 +26,6 @@ tags:
 
 下行文：决议、决定、通告、意见、通知、通报、批复、函、纪要
 
-
 ## 二、公文种类
 
 《党政机关公文处理工作条例》经党中央、国务院同意，由中央办公厅、国务院办公厅于2012年4月16日印发，自2012年7月1日正式施行。根据《党政机关公文处理工作条例》规定，公文种类主要有15种：
@@ -34,8 +33,11 @@ tags:
 决议、决定、命令（令）、公报、公告、通告、意见、通知、通报、报告、请示、批复、议案、函、纪要
 
 ## 三、行文规则
+
 行文关系根据隶属关系和职权范围确定。一般不得越级行文，特殊情况需要越级行文的，应当同时抄送被越过的机关。
-### 1.向上级机关行文，应当遵循以下规则：
+
+### 1.向上级机关行文，应当遵循以下规则
+
 - 原则上主送一个上级机关，根据需要同时抄送相关上级机关和同级机关，不抄送下级机关。
 - 党委、政府的部门向上级主管部门请示、报告重大事项，应当经本级党委、政府同意或者授权；属于部门职权范围内的事项应当直接报送上级主管部门。
 - 下级机关的请示事项，如需以本机关名义向上级机关请示，应当提出倾向性意见后上报，不得原文转报上级机关。
@@ -43,7 +45,8 @@ tags:
 - 除上级机关负责人直接交办事项外，不得以本机关名义向上级机关负责人报送公文，不得以本机关负责人名义向上级机关报送公文。
 - 受双重领导的机关向一个上级机关行文，必要时抄送另一个上级机关。
 
-### 2.向下级机关行文，应当遵循以下规则：
+### 2.向下级机关行文，应当遵循以下规则
+
 - 主送受理机关，根据需要抄送相关机关。重要行文应当同时抄送发文机关的直接上级机关。
 - 党委、政府的办公厅（室）根据本级党委、政府授权，可以向下级党委、政府行文，其他部门和单位不得向下级党委、政府发布指令性公文或者在公文中向下级党委、政府提出指令性要求。需经政府审批的具体事项，经政府同意后可以由政府职能部门行文，文中须注明已经政府同意。
 - 党委、政府的部门在各自职权范围内可以向下级党委、政府的相关部门行文。
@@ -67,26 +70,32 @@ tags:
 
 决议由首部和正文两部分组成。
 
-#### 1.首部。
+#### 1.首部
+
 包括标题和成文时间两个项目。
 
 （1）标题。决议的标题有两种形式：一种是由发文机关(或会议名称)、事由和文种构成;另一种是事由和文种构成。
 
 ​（2）成文时间。即决议正式通过的日期。一般放在标题下，在小括号内注明会议名称及通过时间，也可只写年月日。
 
-#### 2.正文。
+#### 2.正文
+
 由决议根据、决议事项和结语三部分组成。
 
 ##### a.决议缘由
+
   一般简要说明有关会议审议决议涉及事项的情况，陈述作出决议的原因、根据、背景、目的或意义。
 
-##### b.决议事项：
+##### b.决议事项
+
   写明会议通过的决议事项，或会议对有关文件、事项作出的评价、决定，或对有关工作做出的部署安排和要求、措施。
 
-##### c.结语：
+##### c.结语
+
   一般紧扣决议事项有针对性地提出希望、号召和执行要求。有的决议可不单列这部分。
 
-##### d.落款。
+##### d.落款
+
   法文机关+落款日期，可省略。
 
 ### （三）范文示例
