--- a/UPLD/公文种类、行文规范及范文002_决定.md
+++ b/UPLD/公文种类、行文规范及范文002_决定.md
@@ -25,7 +25,6 @@ tags:
 
 下行文：决议、决定、通告、意见、通知、通报、批复、函、纪要
 
-
 ## 二、公文种类
 
 《党政机关公文处理工作条例》经党中央、国务院同意，由中央办公厅、国务院办公厅于2012年4月16日印发，自2012年7月1日正式施行。根据《党政机关公文处理工作条例》规定，公文种类主要有15种：
@@ -33,8 +32,11 @@ tags:
 决议、决定、命令（令）、公报、公告、通告、意见、通知、通报、报告、请示、批复、议案、函、纪要
 
 ## 三、行文规则
+
 行文关系根据隶属关系和职权范围确定。一般不得越级行文，特殊情况需要越级行文的，应当同时抄送被越过的机关。
-### 1.向上级机关行文，应当遵循以下规则：
+
+### 1.向上级机关行文，应当遵循以下规则
+
 - 原则上主送一个上级机关，根据需要同时抄送相关上级机关和同级机关，不抄送下级机关。
 - 党委、政府的部门向上级主管部门请示、报告重大事项，应当经本级党委、政府同意或者授权；属于部门职权范围内的事项应当直接报送上级主管部门。
 - 下级机关的请示事项，如需以本机关名义向上级机关请示，应当提出倾向性意见后上报，不得原文转报上级机关。
@@ -42,7 +44,8 @@ tags:
 - 除上级机关负责人直接交办事项外，不得以本机关名义向上级机关负责人报送公文，不得以本机关负责人名义向上级机关报送公文。
 - 受双重领导的机关向一个上级机关行文，必要时抄送另一个上级机关。
 
-### 2.向下级机关行文，应当遵循以下规则：
+### 2.向下级机关行文，应当遵循以下规则
+
 - 主送受理机关，根据需要抄送相关机关。重要行文应当同时抄送发文机关的直接上级机关。
 - 党委、政府的办公厅（室）根据本级党委、政府授权，可以向下级党委、政府行文，其他部门和单位不得向下级党委、政府发布指令性公文或者在公文中向下级党委、政府提出指令性要求。需经政府审批的具体事项，经政府同意后可以由政府职能部门行文，文中须注明已经政府同意。
 - 党委、政府的部门在各自职权范围内可以向下级党委、政府的相关部门行文。
@@ -60,16 +63,20 @@ tags:
 
 按照具体用途和内容的不同，可将决定分为以下四类。
 
-#### 1.法规性决定。
+#### 1.法规性决定
+
 用于发布权力机关制定、修订或试行的法律文件以及由政府部门制定的行政法规，如《X X 市人民政府关于修改<市商品交易市场管理规定>的决定》。
 
-#### 2.指挥性决定。
+#### 2.指挥性决定
+
 用于对某个问题、某种事项、某种行动进行决策性的指挥部署，如《X X 市政府关于加快全市工业发展的决定》。
 
-#### 3.奖惩性决定。
+#### 3.奖惩性决定
+
 用于表彰或处分有关的单位或个人，如《关于表彰2009年度先进集体和先进个人的决定》。
 
-#### 4.变更性决定。
+#### 4.变更性决定
+
 用于变更机构人事安排或撤销下级机关不适当的决定事项，如《国务院关于撤销X X 同志X X 省省长职务的决定》。
 
 ### （二）决议写作
@@ -77,9 +84,11 @@ tags:
 标题：决定的标题由发文机关(或通过决定的会议名称)、事由、文种三部分组成。如果是会议通过的决定，还应在标题的下方居中以括号注明批准、通过该决定的会议名称和通过的日期。
 
 #### 1.主送机关
+
 决定的主动机关为应该知照的单位或群体。普发性的决定没有主送机关。
 
 #### 2.正文
+
 一般包括决定依据、决定事项和执行要求三部分组成。
 
 ​决定依据要写明发布决定的背景、根据、目的或意义。行文要求简短明确。
@@ -87,20 +96,23 @@ tags:
 ​决定事项的写法，因决定种类的不同而有所不同。用于指挥工作的决定，这部分要写明工作任务、措施、方案、要求等，内容复杂时要用小标题或条款显示出层次来；用于批准事项的决定，这部分要表达出批准意见，如有必要，还可以对批准此事项的根据和意义予以阐述；用于表彰或惩戒的决定，这部分要写明表彰决定和项目，或处分决定和处罚方法。无论是哪一类的决定，决定事项都要写得准确具体，可行性强。
 
 #### 3.落款
+
 标明发文机关和成文日期
 
 ### （三）注意事项
 
-#### 1.文种使用要正确。
+#### 1.文种使用要正确
+
 决定的内容要和“决定”文种相符，避免把“决定”与“命令”等公文文种相混淆，写作之前要用心体会，正确区分。
 
-#### 2.原因要简短明确。
+#### 2.原因要简短明确
+
 决定是制约性非常强的公文，要求下级机关无条件执行。因此，行文时，对于做出决定的原因应写得简短明确，不可长篇大论，以示决定的强制性。
 
-#### 3.事项要具体可行。
+#### 3.事项要具体可行
+
 决定既然要求下级机关无条件执行，那么决定的事项就应该写得具体明确，具有一定的可行性，以利于下级机关遵照执行。
 
 ### （四）范文示例
-
 
 ![img](https://pic1.zhimg.com/80/v2-b44b96f736c2325e4255192e6d1055ec_1440w.jpg)
