--- a/UPLD/公文种类、行文规范及范文003_通知.md
+++ b/UPLD/公文种类、行文规范及范文003_通知.md
@@ -25,7 +25,6 @@ tags:
 
 下行文：决议、决定、通告、意见、通知、通报、批复、函、纪要
 
-
 ## 二、公文种类
 
 《党政机关公文处理工作条例》经党中央、国务院同意，由中央办公厅、国务院办公厅于2012年4月16日印发，自2012年7月1日正式施行。根据《党政机关公文处理工作条例》规定，公文种类主要有15种：
@@ -33,8 +32,11 @@ tags:
 决议、决定、命令（令）、公报、公告、通告、意见、通知、通报、报告、请示、批复、议案、函、纪要
 
 ## 三、行文规则
+
 行文关系根据隶属关系和职权范围确定。一般不得越级行文，特殊情况需要越级行文的，应当同时抄送被越过的机关。
-### 1.向上级机关行文，应当遵循以下规则：
+
+### 1.向上级机关行文，应当遵循以下规则
+
 - 原则上主送一个上级机关，根据需要同时抄送相关上级机关和同级机关，不抄送下级机关。
 - 党委、政府的部门向上级主管部门请示、报告重大事项，应当经本级党委、政府同意或者授权；属于部门职权范围内的事项应当直接报送上级主管部门。
 - 下级机关的请示事项，如需以本机关名义向上级机关请示，应当提出倾向性意见后上报，不得原文转报上级机关。
@@ -42,7 +44,8 @@ tags:
 - 除上级机关负责人直接交办事项外，不得以本机关名义向上级机关负责人报送公文，不得以本机关负责人名义向上级机关报送公文。
 - 受双重领导的机关向一个上级机关行文，必要时抄送另一个上级机关。
 
-### 2.向下级机关行文，应当遵循以下规则：
+### 2.向下级机关行文，应当遵循以下规则
+
 - 主送受理机关，根据需要抄送相关机关。重要行文应当同时抄送发文机关的直接上级机关。
 - 党委、政府的办公厅（室）根据本级党委、政府授权，可以向下级党委、政府行文，其他部门和单位不得向下级党委、政府发布指令性公文或者在公文中向下级党委、政府提出指令性要求。需经政府审批的具体事项，经政府同意后可以由政府职能部门行文，文中须注明已经政府同意。
 - 党委、政府的部门在各自职权范围内可以向下级党委、政府的相关部门行文。
@@ -53,24 +56,34 @@ tags:
 - 部门内设机构除办公厅（室）外不得对外正式行文。
 
 ## 四、通知
+
 通知是传达上级指示，部署安排工作，实施管理措施，处理公共事务，任免聘任干部，批转、转发、印发下级机关、上级机关及不相隶属机关有关公文，要求下级需要周知事项等使用的公文文种。通知使用最广泛，使用频率高，实践中象工作计划、总结和领导讲话等一些非规范性公文也一般用通知下发。
 
 ### （一）通知分类
+
 通知按其内容和功用不同，可将通知分为批示性通知、指示性通知、告知性通知和任免通知等几种。
 
 ### （二）通知的格式
+
 #### 1.通知标题
+
 通知一般都要有一个符合标题的“三要素”，即：发文机关、事由、文种，使人一看标题就知道是通知什么事情或要求做什么事情。
+
 #### 2.主送单位
+
 被通知单位就是文件的主送单位。
+
 #### 3.其他
+
 如果所通知的事项需要被通知的单位尽快知道，可在“通知”之前加“紧急”二字，这就是常见的“紧急通知”。
 
 ### （三）注意事项
+
 - 批示和指示性通知，防止将重要性或意义写的过长；
 - 告知性通知表述事项要清楚、准确、明确；
 - 语言运用上要平实无华，实事求是。
-- 
-### （四）范文示例
-![img](https://preview.cloud.189.cn/image/imageAction?param=134C67168945AF9237886FACB8562D4C6FE8C03BDD64B417A17C176741488F3F03749AD2456683872DB699D1B14B7C99ADB59F0389FB441C7941634B0F5593A749ADD385EE3A04A4170FF90C0AAEFC57D0DD286EBA144CA321FD0554F9F692D8999D29B90E3F8A28DD1C09F6A4577532)
+-
 
+### （四）范文示例
+
+![img](https://preview.cloud.189.cn/image/imageAction?param=134C67168945AF9237886FACB8562D4C6FE8C03BDD64B417A17C176741488F3F03749AD2456683872DB699D1B14B7C99ADB59F0389FB441C7941634B0F5593A749ADD385EE3A04A4170FF90C0AAEFC57D0DD286EBA144CA321FD0554F9F692D8999D29B90E3F8A28DD1C09F6A4577532)
