--- a/UPLD/土地开发.md
+++ b/UPLD/土地开发.md
@@ -14,115 +14,139 @@ tags:
 包括对尚未利用的土地进行开垦和利用，以扩大土地利用范围，也包括对已利用的土地进行整治，以提高土地利用率和集约经营程度。从狭义的角度理解，土地开发主要是对未利用土地的开发利用，要实现耕地总量动态平衡，未利用土地开发是补充耕地的一种有效途径。
 
 ## 一、土地利用开发流程
+
 ### （一）获取土地使用权
 
 开发商获取土地使用权的主要方式
 
-#### 1.通过行政划拨方式取得；
-#### 2.旧城改造取得中标地块国有土地使用权；
-#### 3.转让取得；
-#### 4.出让方式取得（招标、拍卖、协议出让三种方式）；
-#### 5.联合开发并报有关主管部门立项、审批后取得；
-#### 6.通过司法裁决取得；
-#### 7.通过兼并、收购等股权重组方式取得。
+#### 1.通过行政划拨方式取得
 
-### (二)征地拆迁，申办并取得《房屋拆迁许可证》。
+#### 2.旧城改造取得中标地块国有土地使用权
+
+#### 3.转让取得
+
+#### 4.出让方式取得（招标、拍卖、协议出让三种方式）
+
+#### 5.联合开发并报有关主管部门立项、审批后取得
+
+#### 6.通过司法裁决取得
+
+#### 7.通过兼并、收购等股权重组方式取得
+
+### (二)征地拆迁，申办并取得《房屋拆迁许可证》
+
 城市房屋拆迁是伴随着城市建设项目进行的，是城市建设的重要组成部分，尤其是旧城改造中的一个重要环节，处于建设项目的前期工作阶段。
 
 拆迁的主要内容包括：
+
 - 房屋拆建，如危旧房改造；
 - 城市功能、用地布局和空间结构的调整，如居住区、商业区、车站、生活服务设施等公共建筑的建设和改造；
 - 环境治理，如扩展绿地、治理污染工程等。
 
-### （三）申办拆迁许可证应提交以下申报资料：
+### （三）申办拆迁许可证应提交以下申报资料
 
-#### 1.填写《城市房屋拆迁申请表》一式五份；
-#### 2.建设项目批准文件；
-#### 3.建设用地规划许可证；
+#### 1.填写《城市房屋拆迁申请表》一式五份
+
+#### 2.建设项目批准文件
+
+#### 3.建设用地规划许可证
+
 #### 4.国有土地使用权批准文件（建设用地批准书或划拨决定书）
-#### 5.拆迁代办单位和评估机构资料。
-#### 6.拆迁安置计划和方案；
+
+#### 5.拆迁代办单位和评估机构资料
+
+#### 6.拆迁安置计划和方案
+
 （拆迁红线范围内房屋面积、户数、性质、用途等基本情况；拆迁方式；拆迁期限；还建方式及还建期限；产权清晰的安置用房证明；拆迁补偿资金来源及预算资金额度。）
 
 ## 二、土地利用开发阶段划分
-
 
 💡 土地开发全过程可以划分为三个阶段：一级、二级、三级。这三级开发连贯起来，就是一个从土地整理开始到产品运营的一个全过程。
 
 ### （一）一级开发
 
 #### 1.定义
+
 土地一级开发指由政府或其授权委托的企业，对一定区域范围内的城市国有土地、乡村集体土地进行统一的征地、拆迁、安置、补偿，并进行适当的市政配套设施建设，使该区域范围内的土地达到一定的建设条件（“三通一平”、“五通一平”或“七通一平”）使之成为“熟地”，再对熟地进行有偿出让或转让的过程。
 
-  - 三通一平指在土地开发时进行的通水、通电、通路、土地平整。
-  - 五通一平就是建筑中为了合理有序施工进行的前期准备工作，一般包括：通水、通电、通路、通讯、通排水、平整土地。
-  - 七通一平指的是土地在通过一级开发后，使其达到具备给水、排水、通电、通路、通讯、通暖气、通天燃气或煤气、以及场地平整的条件，使二级开发商可以进场后迅速开发建设。
+- 三通一平指在土地开发时进行的通水、通电、通路、土地平整。
+- 五通一平就是建筑中为了合理有序施工进行的前期准备工作，一般包括：通水、通电、通路、通讯、通排水、平整土地。
+- 七通一平指的是土地在通过一级开发后，使其达到具备给水、排水、通电、通路、通讯、通暖气、通天燃气或煤气、以及场地平整的条件，使二级开发商可以进场后迅速开发建设。
 
 #### 2.开发模式及对比
+
 一级开发项目模式具体可细分为八大类：旧城改造项目、城中村改造项目、旧厂房改造项目国有土地收购储备项目、土地一级开发项目、中心城区棚改项目、一次性招标棚改项目、土地开发棚改项目。虽然项目模式名称存在差异，但实际中有些模式只是由于历史原因导致项目模式发生变化，项目性质并未改变。
-           
 
 ### （二）二级开发
 
 #### 1.定义
+
 土地二级开发的典型就是房地产开发，即土地使用者经过开发建设，将新建成的房地产进行出售和出租的市场。一般指商品房首次进入流通领域进行交易而形成的市场。下文主要以房地产开发为例来为大家讲解**土地二级开发的流程**，希望对大家有所帮助！
 
 #### 2.阶段划分
+
 从开发、建设、经营、管理的程序上讲，房地产开发一般可分为五个阶段，即可行性研究和项目决策阶段、建设前期准备阶段、建设阶段、销售阶段和交付使用阶段。
 
 #### 3.各阶段解读
+
 ##### a.项目决策阶段
+
   房地产项目可行性研究阶段，房地产开发项目经董事会批准初步立项后，转由企业战略发展研究室进行可行性研究。
-   - 可行性研究的内容
+
+- 可行性研究的内容
     可行性研究的主要内容有：(1)项目概况；(2)开发项目用地的现场调查及动迁安置；(3)市场分析和建设规模的确定；(4)规划设计影响和环境保护;(5)资源供给及资本运作方案；(6)环境影响和环境保护；(7)项目开发模式、组织机构、岗位需求、管理费用的研究；(8)开发建设节点计划；(9)项目经济及社会效益分析；(10)结论及建议。
-   - 可行性研究小组成员知识组成：经济师、市场分析专家、房地产专家、建筑工程专家、财会师及律师。
-   - 可行性研究步骤，可行性研究按5个步骤进行：(1)项目公司接受委托或集团公司董事会立项；(2)调查研究；(3)方案选择与优化；(4)财务评价和经济评价；(5)编制可行性研究报告。
+- 可行性研究小组成员知识组成：经济师、市场分析专家、房地产专家、建筑工程专家、财会师及律师。
+- 可行性研究步骤，可行性研究按5个步骤进行：(1)项目公司接受委托或集团公司董事会立项；(2)调查研究；(3)方案选择与优化；(4)财务评价和经济评价；(5)编制可行性研究报告。
 
 ##### b.前期准备阶段
 
-   - 获取土地使用权。
+- 获取土地使用权。
 
    开发商获取土地使用权的主要方式：1）通过行政划拨方式取得；2）旧城改造取得中标地块国有土地使用权；3）转让取得；4）出让方式取得（招标、拍卖、协议出让三种方式）；5）联合开发并报有关主管部门立项、审批后取得；6）通过司法裁决取得；7）通过兼并、收购等股权重组方式取得。
 
-   - 征地拆迁，申办并取得《房屋拆迁许可证》。
+- 征地拆迁，申办并取得《房屋拆迁许可证》。
 
    拆迁的主要内容包括：(1)房屋拆建，如危旧房改造；(2)城市功能、用地布局和空间结构的调整，如居住区、商业区、车站、生活服务设施等公共建筑的建设和改造；(3)环境治理，如扩展绿地、治理污染工程等。因此，城市房屋拆迁是伴随着城市建设项目进行的，是城市建设的重要组成部分，尤其是旧城改造中的一个重要环节，处于建设项目的前期工作阶段。
 
 ##### c.规划设计阶段
-  - 申办项目选址定点，取得《建设项目选址意见书》和《建设用地规划许可证》，取得《建设项目选址意见书》的附件：规划设计（土地使用）条件
-  - 持规划方案和建筑方案图纸到建管处申请建筑方案报建，取得建筑核位红线图和施工图。建筑方案报建分两阶段。
-    - 规划方案审批阶段，取得《规划建筑方案批准意见书》。
-    - 施工图核准阶段，取得建筑核位红线图5份和施工图3份。
 
-  - 申办建设工程红线定位与验线，取得建筑核位红线图。
-  - 申办《建设工程规划许可通知书》，办理完毕后凭此通知书到建管部门办理《施工许可证》。建设工程施工至正负零时，持通知书等相关资料申办《建设工程规划许可证》。持建筑红线图到市城管局固体废弃物管理处缴纳垃圾处理费。
-  - 建设项目报建登记，申请招标，办理招标投标手续，确定勘察、设计、监理、施工队伍。
-  - 申办《施工许可证》
+- 申办项目选址定点，取得《建设项目选址意见书》和《建设用地规划许可证》，取得《建设项目选址意见书》的附件：规划设计（土地使用）条件
+- 持规划方案和建筑方案图纸到建管处申请建筑方案报建，取得建筑核位红线图和施工图。建筑方案报建分两阶段。
+  - 规划方案审批阶段，取得《规划建筑方案批准意见书》。
+  - 施工图核准阶段，取得建筑核位红线图5份和施工图3份。
+
+- 申办建设工程红线定位与验线，取得建筑核位红线图。
+- 申办《建设工程规划许可通知书》，办理完毕后凭此通知书到建管部门办理《施工许可证》。建设工程施工至正负零时，持通知书等相关资料申办《建设工程规划许可证》。持建筑红线图到市城管局固体废弃物管理处缴纳垃圾处理费。
+- 建设项目报建登记，申请招标，办理招标投标手续，确定勘察、设计、监理、施工队伍。
+- 申办《施工许可证》
 
 ##### d.项目销售阶段
-  - 申办《销售许可证》
+
+- 申办《销售许可证》
   商品房预售实行许可证制度。商品房预售许可证一年一换。未取得《商品房预售许可证》的，不得进行商品房预售。开发企业进行商品房预售，应当向城市、县房地产管理部门办理预售登记，取得《商品房预售许可证》。
 
-  - 商品房销售及按揭办理
-    - 销售前期准备工作（可委托销售代理公司进行）
-    - 销售合同的签订。
-    - 按揭办理。
+- 商品房销售及按揭办理
+  - 销售前期准备工作（可委托销售代理公司进行）
+  - 销售合同的签订。
+  - 按揭办理。
 
 ##### e.交付使用阶段
 
-  - 申请竣工验收，取得《建筑工程竣工验收备案证》。属成片开发小区的，还应申请综合验收。
-  - 申办建设工程规划验收。建设工程竣工验收后3个月内，建设单位应向原批准的城市规划行政主管部门申报建设工程规划验收。
-  - 进行权属登记，取得《商品房权属证明书》。
-  - 物业移交。开发建设单位应当与物业管理企业订立前期物业管理服务合同,该合同至业主委员会与其选聘的物业管理企业订立物业管理服务合同生效时终止。
+- 申请竣工验收，取得《建筑工程竣工验收备案证》。属成片开发小区的，还应申请综合验收。
+- 申办建设工程规划验收。建设工程竣工验收后3个月内，建设单位应向原批准的城市规划行政主管部门申报建设工程规划验收。
+- 进行权属登记，取得《商品房权属证明书》。
+- 物业移交。开发建设单位应当与物业管理企业订立前期物业管理服务合同,该合同至业主委员会与其选聘的物业管理企业订立物业管理服务合同生效时终止。
 
 ### （三）三级开发
 
 #### 1.定义
+
 一般是指运营，比如产业运营、商业运营等。
 
 #### 2.三级开发模式
 
 ##### a.以纯地产开发为主的模式：联东U谷
+
 联东集团创立于1991年，以“联东U谷”为核心品牌，专注园区产业运营、服务中小制造企业，已在全国 40 多个城市投资运营产业园区超过210个，引进制造业企业和科技型企业超过11000家。
 
 联东U谷以产业综合体和总部基地为主，涵盖独栋办公、研发中试、标准厂房等产品形态。这些物业产品小而精，更多为中小企业量身定制，具有较高的实用性。
@@ -130,16 +154,19 @@ tags:
 主要盈利模式：物业租售(物业以独栋办公为主)+增值服务(设有专业化的服务平台以提供增值服务和配套服务)，其中以物业租售收益为主，如图3所示，物业租售收益可达65%。此外，物业租售模式，一般是"6+2+2"(60%出售、20%出租、20%合作经营)标准或"4+3+3"(40%出售、30%出租、30%合作经营)标准。
 
 ##### b.以产业平台为特色的模式：华夏幸福
+
 华夏幸福，中国领先的产业新城运营商，成立于 1998 年，早期致力于河北省内的城市住宅开发，自2002 年开始运营固安产业园区，随后逐渐向产业地产开发商转型。目前该公司运营产业新城已布局于长三角、珠三角、中原城市群、成渝城市群及长江中游城市群等区域。2018年，华夏幸福销售收入1627.6亿元。资产规模已达4097亿元。
 
 在产业新城开发与运营中，华夏幸福充分发挥产业平台的优势，整合各方产业资源，对接地方政府，除了一二级开发外，更为政府提供以产业规划、服务与导入方面的服务。通过一系列的操作，从前期开发及后续运营的方面受益均等获得，成功把短期的一次性房地产开发转变成长期且可持续的园区运营。
 
 主要盈利模式：一是通过垫付园区前期开发、基础设施建设费，获得政府10%～15%的利息收入;二是园区招商引资返还收入，即园区新增固定资产投资额或新增财政收入的45%;三是园区配套地产开发收入;四是园区土地升值收益。
+
 ##### c.以产业投资为特色的模式：张江高科
 
 张江高科技园区，被誉为中国硅谷，成立于1992年7月，位于上海浦东新区中南部，是国家级高新技术园区，与陆家嘴、金桥和外高桥开发区同为上海浦东新区四个重点开发区域。受限于土地情况，2014年张江高科实行对外轻资产输出，提出以“科技投行”作为战略发展方向，着力打造新型产业地产营运商、面向未来高科技产业整合商和科技金融集成服务商的“新三商”战略。2018年张江高科营业收入11.5亿元，其中投资收入贡献接近40%，利润贡献超过50%，强化了投资在营收和利润贡献中的重要地位。
 
 张江高科大力推动产业投资，重点实现天使、VC、PE到产业并购的全投资链布局：针对不同企业在不同时期的融资需求，公司以直接投资、参股基金投资、管理基金投资等多种方式精准投资，并通过与武岳峰基金、金浦基金、经纬资本、源星资本等合作，实施从天使、VC、PE到产业并购的全投资链布局。通过“投资一批、股改一批、上市一批、退出一批、储备一批”，形成了产业投资的良性滚动循环。
+
 ##### d.以专业服务为特色的模式：亿达中国
 
 亿达中国自1998年开始，深耕大连、武汉，重点布局京津冀、长三角、大湾区、中西部及其他经济活跃区，先后开发和运营了大连软件园、大连生态科技创新城、武汉软件新城、北京中关村壹号等40余个商务园项目;2014年6月27日在香港联交所主板上市。
