--- a/UPLD/年度读书计划002_《贫穷的本质》.md
+++ b/UPLD/年度读书计划002_《贫穷的本质》.md
@@ -18,6 +18,7 @@ tags:
 阿比吉特·班纳吉和埃斯特·迪弗洛，两人都是美国麻省理工学院的教授，班纳吉是麻省理工学院福特基金会国际经济学教授，曾任世界银行荣誉顾问。迪弗洛麻省理工学院经济系阿卜杜勒·拉蒂夫·贾米尔扶贫与发展经济学教授，2009年被《经济学人》杂志评为“八大杰出经济学家”之一。
 
 ## 一 、基本信息
+
 |项目|信息|
 |:----:|----|
 作者|[法] 埃斯特·迪弗洛 / [印] 阿比吉特·班纳吉|
@@ -34,61 +35,84 @@ ISBN|9787508638492|
 穷人之所以穷是因为，第一，避险手段太落后，第二，他们只顾眼前，不做任何长远规划，第三，因为认知水平的局限，他们对不懂的东西有太多偏见。其实我们和穷人并没有什么本质的区别，他们犯的错误，我们也在犯。
 
 ## 三、行文脉络
+
 ### （一）目录
+
 #### 1.第一部分：生活案例
+
 - 饥饿人口已经达到10亿？
 - 提高全球居民健康水平容易么？
 - 全班最优
 - 帕克·苏打诺的大家庭
   
 #### 2.第二部分：慈善机构
+
 - 赤脚的对冲基金经理
 - 贷款给穷人：不那么简单的经济学
 - 节省一砖一瓦
 - 不情愿的企业家们
 - 政策、政治
+
 #### 3.总结
 
 ### （二）穷人为什么这么穷？
+
 #### 1.穷人缺乏有效的避险工具
-##### a.穷人会生一堆孩子，但生孩子不是观念落后，而是一种理性思考。
+
+##### a.穷人会生一堆孩子，但生孩子不是观念落后，而是一种理性思考
+
 因为穷人所在的国家往往没有社会保障体系，想规避养老和医疗风险，只能依靠自己的子女，但是子女身上不确定性太多，或者早夭，或者关系不好，或者没能力养老，穷人往往采取多生几个的策略，尽量规避风险。
 
-##### b.婚姻也是一种规避风险的方式。
+##### b.婚姻也是一种规避风险的方式
+
 印度的穷人一般会将自己的女儿嫁到不远不近的村庄，如果两个村子太近，气候完全一样，你这里发洪水，我这个也发洪水，谁也帮不上谁。两个村子隔开一段距离，气候条件就不一样了，遇到灾险，不至于全军覆没，还可互相帮助。
 
-##### c.穷人借高利贷，是因为正规金融体系排斥穷人。
+##### c.穷人借高利贷，是因为正规金融体系排斥穷人
+
 高利贷的利息高是由风险定价决定的，并非剥削。穷人使用高利贷规避可能出现的灾病风险，几乎不可能脱贫，因为高利贷的利息成本和穷人的违约率“一损俱损”。
 
 #### 2.穷人不做远期规划
-##### a.绝大多数地方的穷人对教育很不重视。
+
+##### a.绝大多数地方的穷人对教育很不重视
+
 即便很多慈善组织跑来给他们建立学校、普及教育的好处，家长们积极性也不高。因为穷人并不确定10个儿女里，哪个可能会给他养老，而偏偏教育是个长期投入，要好多年后才能看到成效。让穷人赌一个遥遥无期的结果，要冒太大风险。他们宁愿把钱花到马上就能见效的事情上，比如买点食物，改善一下伙食。
 
-##### b.穷人是很穷，连填饱肚子都有困难.
+##### b.穷人是很穷，连填饱肚子都有困难
+
 如果他们得到慈善机构的粮食补助，但穷人会拿补贴的钱去买电视机、收音机。和我们的直觉相反，对穷人来说，他首要选择不是填饱肚子，而是让自己毫无希望的贫穷生活少一点儿乏味。
 
-##### c.人的压力和一种叫皮质醇激素水平相关，皮质醇水平越高就代表压力越大。
+##### c.人的压力和一种叫皮质醇激素水平相关，皮质醇水平越高就代表压力越大
+
 穷人长期处于生存压力中，皮质醇水平很高，这会影响大脑的部分区域，比如前额皮质、类扁桃体等，这些是认知功能的重要区域。所以，长期处于压力之下的穷人，他们不太可能会做出理智的决定、长远的决策。
 
 #### 3.穷人充满执拗和偏见
-##### a.穷人会把自己的大部分钱花在健康上，但他们的花销很不科学。
+
+##### a.穷人会把自己的大部分钱花在健康上，但他们的花销很不科学
+
 比如，穷人特别喜欢用抗生素，而且经常会做一些为时已晚的外科手术。也就是说，穷人平常不会花点小钱预防疾病，而等到健康真的出了大问题了，他们又不惜借钱来拼命治疗。穷人相信一种理论，他们觉得药物直接输送至血液是很重要的，所以，他们觉得输液比口服药物更有效，会大量的使用抗生素。
 
-##### b.说服穷人父母们让孩子来打疫苗是一件非常困难的事儿，因为他们不相信疫苗。
+##### b.说服穷人父母们让孩子来打疫苗是一件非常困难的事儿，因为他们不相信疫苗
+
 并不是所有没接种的孩子都会感染麻疹，但这事儿在家长们看来就有问题了，接种的和没接种的都没得病啊，说明疫苗没用。接种一种疫苗只能预防一种疾病，其他的疾病可预防不了，受过教育的父母就觉得自己受了骗，以后再也不让孩子打疫苗了。
 
 ## 四、摘录和思考
+
 ### （一）我们和穷人思维上没有本质区别
+
 #### 1.关于避险工具
+
 很多人一辈子省吃俭用，不办健身卡、不舍得体检，真的检查出大病了，哪怕是晚期，全家人都会四处举债借钱，做各种昂贵的手术，只为延长哪怕几个月的生命。
 
 #### 2.关于远期规划
+
 很多年轻人沉迷于网络游戏，荒废工作学习，因为游戏的设计者利用了心理学上刺激反馈的概念，这种机制给你一个短期刺激，做一个动作就会有相应的反馈出现，而工作学习是个苦活，还要长期坚持才能见效，不如游戏里即时刺激有趣。
 
 #### 3.关于偏见
+
 在不懂的事情上，我们一样有偏见，在网上慷慨激昂的反对转基因食品的人，并不清楚转基因到底是什么，只是凭感觉认为人工的东西不如天然。去医院看病，明明看不懂，但主管会觉得医生肯定做不必要的检查了，在我们认知水平达不到的领域，我们也喜欢按直觉和情绪去理解很多东西。
 
 ### （二）摘抄
+
 - 人们不愿意关注那种泛泛的信息，他们更有可能会捐钱给某一特定受害者。
 - 我们应该认识到，谁也没有那么明智、耐心或者博学到能够为自己的健康作出正确的选择。（如果是这样）他们周围充满了无形的助推力。
 - 小额信贷有效果吗？答案显然取决于你所谓的“效果”是怎样的。
