--- a/UPLD/梁东对话倪海厦001_学医之路.md
+++ b/UPLD/梁东对话倪海厦001_学医之路.md
@@ -14,36 +14,46 @@ tags:
 现代中医给人一种治病慢、见效慢的感觉，原因在于有一种不求无功但求无过的错误想法。
 <!-- more -->
 ## 一、从经方说起
+
 温病派：台湾属于亚热带地区，属于湿热气候，只会有温病，伤寒只有大陆北方有，南方不会有。所以要用温病的药。
 
 经方派：张仲景的经方中，也有温病，不同于温病派。温病是在一种温热的条件下得到的病，比如小孩子容易出汗，在热的条件下得的感冒就是温热病。而不一定是环境造成的。
+
 ### （一）不求无功，但求无过
+
 现代中医给人一种治病慢、见效慢的感觉，原因在于有一种不求无功但求无过的错误想法。
 
 对于张仲景留下来的经方，不能以偏概全，如果不能把体内的寒邪排除，用再温补的药也于事无补。一般来讲，5是一个极数，再冷的天，5天之后一定会回暖，病情也一样。所以需要辩证地看病人的病灶在那个地方。
 
 如果病人来的时候病情刚好在表象，可以用解表的药物；如果来看病已经到里症了，医生可以通过表象来推断出一周前的症状是怎样的。
+
 ### （二）中医在美国
+
 美国对于中医的重视远比中国要多。
 
 美国的中医是不可以开中药的，同理西医也一样。
 
 ## 二、科学和科技
+
 科技（technology），需要很多的仪器设备，是日新月异的东西；科学（science）是不存在的东西，是定律、假设和结果。
 
 医院化验的各项指标，是科技不是科学。
 
 ### 小青龙汤、大青龙汤
-#### 1.涉及到表寒里寒用小青龙汤。
+
+#### 1.涉及到表寒里寒用小青龙汤
+
 表寒：毛孔塞住、无法排汗。病人怕冷，关节疼痛。
 里寒：在肺部。痰是清白的。
 
 #### 2.治病的策略
-甲流症状：表寒，没有流汗，发烧；病人喜欢喝冷水，黄痰。 
+
+甲流症状：表寒，没有流汗，发烧；病人喜欢喝冷水，黄痰。
 
 张仲景几千年来治疗瘟疫，都是用大青龙汤。大青龙汤一共七味药：麻黄、桂枝、甘草、杏仁、生石膏、生姜、大枣。几千年来，病毒变异了好几代，但是大青龙汤仍然有效，**中医治疗的思路是如何将病毒排出体外，不伤害我们的身体，而不是将病毒赶尽杀绝。**
 
 #### 3.关于大青龙汤
+>
 > 为什么温热派的不敢用大青龙汤，因为里面有麻黄和桂枝。
 
 **麻黄**
@@ -71,6 +81,7 @@ tags:
 很多人用麻黄桂枝后，心脏会出现动悸，炙甘草的作用就是止心脏的动悸，用以预防。如果正常人开3钱，如果有心脏病的人，则要加量，可以用到8钱。
 
 ## 三、如何看药有没有用
+>
 > 最多一天的时间就可以验证，看你有没有胃口。
 
 八方辩证：阴阳、表里、虚实、寒热，其中虚，表示里面没有东西，比较弱，实就是里面长了东西。
